chore: push latest strings from crowdin

--- a/_locales/ar/messages.json
+++ b/_locales/ar/messages.json
@@ -96,6 +96,7 @@
   "attachmentsMoveAndScale": "تحريك وتعديل",
   "attachmentsNa": "N/A",
   "attachmentsNotification": "{emoji} مرفق",
+  "attachmentsNotificationGroup": "{author}: {emoji} مرفق",
   "attachmentsResolution": "الدقة أو الأبعاد:",
   "attachmentsSaveError": "تعذر حفظ الملف.",
   "attachmentsSendTo": "إرسال إلى {name}",
@@ -153,6 +154,7 @@
   "callsVoiceAndVideo": "المكالمات الصوتية و المرئية",
   "callsVoiceAndVideoBeta": "المكالمات الصوتية والمرئية (تجريبي)",
   "callsVoiceAndVideoModalDescription": "عنوان IP الخاص بك مرئي لشريك الاتصال وخادم Oxen Foundation أثناء استخدام المكالمات التجريبية.",
+  "callsVoiceAndVideoToggleDescription": "تفعيل المكالمات الصوتية والمرئية من وإلى المستخدمين الآخرين.",
   "callsYouCalled": "لقد اتصلت بـ {name}",
   "callsYouMissedCallPermissions": "لقد فاتتك مكالمة من <b>{name}</b> لأنك لم تقم بتمكين <b>المكالمات الصوتية والمرئية</b> في إعدادات الخصوصية.",
   "cameraErrorNotFound": "لا توجد كاميرا",
@@ -215,6 +217,7 @@
   "contentDescriptionChooseConversationType": "اختر إجراءً لبدء المحادثة",
   "contentDescriptionMediaMessage": "رسالة وسائط",
   "contentDescriptionMessageComposition": "تكوين الرسالة",
+  "contentDescriptionQuoteThumbnail": "الصورة المصغرة للصورة من الرسالة المقتبسة",
   "contentDescriptionStartConversation": "إنشاء محادثة مع جهة اتصال جديدة",
   "conversationsAddToHome": "أضِف إلى الشاشة الرئيسية",
   "conversationsAddedToHome": "تمت الإضافة للشاشة الرئيسية",
@@ -241,6 +244,7 @@
   "conversationsSendWithEnterKeyDescription": "النقر على مفتاح الدخول سوف يرسل الرسالة بدلا من بدء سطر جديد.",
   "conversationsSettingsAllMedia": "جميع الوسائط",
   "conversationsSpellCheck": "التدقيق الإملائي",
+  "conversationsSpellCheckDescription": "تفعيل التحقق الإملائي عند كتابة الرسائل.",
   "conversationsStart": "ابدأ محادثة",
   "copied": "تم النسخ",
   "copy": "نسخ",
@@ -268,7 +272,9 @@
   "deleteAfterLegacyGroupsGroupCreation": "يرجى الانتظار أثناء إنشاء المجموعة...",
   "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "فشل في تحديث المجموعة",
   "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "ليس لديك صلاحيات حذف رسائل الاخرين",
+  "deleteMessage": "{count, plural, zero [حذف الرسائل] one [حذف الرسالة] two [حذف الرسائل] few [حذف الرسائل] many [حذف الرسائل] other [حذف الرسائل]}",
   "deleteMessageConfirm": "هل أنت متأكد من أنك تريد حذف هذه الرسالة؟",
+  "deleteMessageDeleted": "{count, plural, zero [تم حذف الرسائل] one [تم حذف الرسالة] two [تم حذف الرسائل] few [تم حذف الرسائل] many [تم حذف الرسائل] other [تم حذف الرسائل]}",
   "deleteMessageDeletedGlobally": "تم حذف هذه الرسالة",
   "deleteMessageDeletedLocally": "تم حذف هذه الرسالة على هذا الجهاز",
   "deleteMessageDescriptionDevice": "هل أنت متأكد من أنك تريد حذف هذه الرسالة من هذا الجهاز فقط؟",
@@ -308,6 +314,7 @@
   "disappearingMessagesSetYou": "<b>أنت</b> قمت بتعيين الرسائل لتختفي بعد {time} من {disappearing_messages_type}.",
   "disappearingMessagesTimer": "المؤقت",
   "disappearingMessagesTurnedOff": "<b>{name}</b> قام بإيقاف الرسائل المختفية. لن تختفي الرسائل التي يرسلها بعد الآن. ",
+  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> قام/ت بإيقاف تشغيل الرسائل المختفية <b>إيقاف</b>.",
   "disappearingMessagesTurnedOffYou": "<b>أنت</b> أوقفت <b>الرسائل المختفية</b>. لم تعد الرسائل التي ترسلها تختفي.",
   "disappearingMessagesTurnedOffYouGroup": "<b>قمت</b> بإيقاف <b>تشغيل</b> الرسائل المختفية.",
   "disappearingMessagesTypeRead": "القراءة",
@@ -341,6 +348,12 @@
   "emojiCategoryTravel": "السفر & و أماكن",
   "emojiReactsClearAll": "هل أنت متيقِّن من أنك تريد مسح كافة {emoji}؟",
   "emojiReactsCoolDown": "أبطأ! لقد أرسلت الكثير من ردود الفعل الرموز التعبيرية. حاول مرة أخرى قريبا",
+  "emojiReactsHoverNameDesktop": "{name} تفاعل بـ {emoji_name}",
+  "emojiReactsHoverNameTwoDesktop": "{name} و{other_name} تفاعلا بـ {emoji_name}",
+  "emojiReactsHoverTwoNameMultipleDesktop": "{name} و <span>{count} آخرين</span> تفاعلوا بـ {emoji_name}",
+  "emojiReactsHoverYouNameDesktop": "تفاعلت مع {emoji_name}",
+  "emojiReactsHoverYouNameMultipleDesktop": "تفاعلت أنت و<span>{count} آخرين</span> مع {emoji_name}",
+  "emojiReactsHoverYouNameTwoDesktop": "تفاعلت أنت و{name} مع {emoji_name}",
   "emojiReactsNotification": "تفاعل مع رسالتك {emoji}",
   "enable": "تفعيل",
   "errorConnection": "الرجاء التحقق من اتصالك بالإنترنت وحاول مرة أخرى.",
@@ -376,11 +389,12 @@
   "groupInviteSending": "إرسال دعوة",
   "groupInviteSent": "تم إرسال الدعوة",
   "groupInviteSuccessful": "الدعوة إلى المجموعة ناجحة",
+  "groupInviteVersion": "يجب أن يمتلك المستخدمون الإصدار الأحدث لتلقي الدعوات",
   "groupInviteYou": "<b>أنت</b> تمت دعوتك للانضمام إلى المجموعة.",
   "groupInviteYouAndMoreNew": "<b>أنت</b> و<b>{count} آخرين</b> انضموا للمجموعة.",
   "groupInviteYouAndOtherNew": "<b>أنت</b> و<b>{other_name}</b> انضموا للمجموعة.",
   "groupLeave": "مغادرة المجموعة",
-  "groupLeaveDescription": "هل أنت متأكد من أنك تريد مغادرة {group_name}؟",
+  "groupLeaveDescription": "هل أنت متأكد من أنك تريد مغادرة <b>{group_name}</b>؟",
   "groupLeaveDescriptionAdmin": "هل أنت متأكد من أنك تريد مغادرة <b>{group_name}</b>?<br/><br/>سيؤدي ذلك إلى إزالة جميع الأعضاء وحذف كافة محتويات المجموعة.",
   "groupLeaveErrorFailed": "فشل في مغادرة {group_name}",
   "groupLegacyBanner": "تمت ترقية المجموعات، أنشئ مجموعة جديدة للترقية. سوف تتدهور صلاحية عمل المجموعة القديمة بدءًا من {date}.",
@@ -393,6 +407,8 @@
   "groupMemberNewHistoryTwo": "<b>{name}</b> و<b>{other_name}</b> تمت دعوتهم للانضمام إلى المجموعة. تمت مشاركة سجل الدردشة.",
   "groupMemberNewMultiple": "<b>{name}</b> و <b>{count} اخرين</b> تمت دعوتهم للانضمام إلى المجموعة.",
   "groupMemberNewTwo": "<b>{name}</b> و <b>{other_name}</b> تم دعوتهم للانضمام إلى المجموعة.",
+  "groupMemberNewYouHistoryMultiple": "<b>أنت</b> و<b>{count} آخرين</b> انضموا للمجموعة. تمت مشاركة سجل الدردشة.",
+  "groupMemberNewYouHistoryTwo": "<b>أنت</b> و<b>{name}</b> انضموا للمجموعة. تمت مشاركة سجل الدردشة.",
   "groupMemberYouLeft": "<b>أنت</b> غادرت المجموعة.",
   "groupMembers": "أعضاء المجموعة",
   "groupMembersNone": "لا يوجد اعضاء اخرين في هذه المجموعة.",
@@ -410,10 +426,14 @@
   "groupRemoveDescription": "هل تود إزالة <b>{name}</b> من <b>{group_name}</b>؟",
   "groupRemoveDescriptionMultiple": "هل تود إزالة <b>{name}</b> و<b>{count} آخرين</b> من <b>{group_name}</b>؟",
   "groupRemoveDescriptionTwo": "هل تود إزالة <b>{name}</b> و<b>{other_name}</b> من <b>{group_name}</b>؟",
+  "groupRemoveMessages": "{count, plural, zero [إزالة المستخدمين ورسائلهم] one [إزالة المستخدم ورسائله] two [إزالة المستخدمين ورسائلهم] few [إزالة المستخدمين ورسائلهم] many [إزالة المستخدمين ورسائلهم] other [إزالة المستخدمين ورسائلهم]}",
+  "groupRemoveUserOnly": "{count, plural, zero [إزالة المستخدمين] one [إزالة المستخدم ] two [إزالة المستخدمين] few [إزالة المستخدمين] many [إزالة المستخدمين] other [إزالة المستخدمين]}",
   "groupRemoved": "<b>{name}</b> تم إزالته من المجموعة.",
   "groupRemovedMultiple": "<b>{name}</b> و <b>{count} آخرين</b> تم إزالتهم من المجموعة.",
   "groupRemovedTwo": "<b>{name}</b> و <b>{other_name}</b> تم إزالتهم من المجموعة.",
   "groupRemovedYou": "تمت إزالتك من <b>{group_name}</b>.",
+  "groupRemovedYouMultiple": "<b>أنت</b> و<b>{count} آخرين</b> تم إزالتهم من المجموعة.",
+  "groupRemovedYouTwo": "<b>أنت</b> و <b>{other_name}</b> تم إزالتهم من المجموعة.",
   "groupSetDisplayPicture": "تعيين صورة مجموعة العرض",
   "groupUnknown": "مجموعة غير معروفة",
   "groupUpdated": "تم تحديث المجموعة",
@@ -440,6 +460,7 @@
   "learnMore": "معرفة المزيد",
   "leave": "مغادرة",
   "leaving": "جاري المغادرة...",
+  "legacyGroupMemberNew": "<b>{name}</b> انضم إلى المجموعة.",
   "legacyGroupMemberNewMultiple": "<b>{name} < /b> و <b>{count} آخرين</b> انضموا للمجموعة.",
   "legacyGroupMemberNewYouMultiple": "<b>أنت</b> و<b>{count} آخرين</b> انضموا للمجموعة.",
   "legacyGroupMemberNewYouOther": "<b>أنت</b> و <b>{other_name}</b> انضممتما إلى المجموعة.",
@@ -473,6 +494,7 @@
   "membersActive": "{count, plural, zero [# عضو] one [# عضو] two [# عضو] few [# عضو] many [# عضو] other [# عضو نشط]}",
   "membersAddAccountIdOrOns": "أضف معرف الحساب أو ONS",
   "membersInvite": "دعوة المتصلين",
+  "membersInviteSend": "{count, plural, zero [إرسال دعوات] one [إرسال دعوة] two [إرسال دعوات] few [إرسال دعوات] many [إرسال دعوات] other [إرسال دعوات]}",
   "membersInviteShareDescription": "هل تود مشاركة تاريخ الرسائل بالمجموعة مع <b>{name}</b>؟",
   "membersInviteShareDescriptionMultiple": "هل تود مشاركة تاريخ الرسائل بالمجموعة مع <b>{name}</b> و<b>{count} آخرين</b>؟",
   "membersInviteShareDescriptionTwo": "هل تود مشاركة تاريخ الرسائل بالمجموعة مع <b>{name}</b> و<b>{other_name}</b>؟",
@@ -488,6 +510,7 @@
   "messageInfo": "معلومات الرسالة",
   "messageMarkRead": "اعتبرها مقروءة",
   "messageMarkUnread": "اجعله/ها غير مقروءة",
+  "messageNew": "{count, plural, zero [رسائل جديدة] one [رسالة جديدة] two [رسائل جديدة] few [رسائل جديدة] many [رسائل جديدة] other [رسائل جديدة]}",
   "messageNewDescriptionDesktop": "ابدأ محادثة جديدة عن طريق إدخال معرف حساب صديقك أو ONS.",
   "messageNewDescriptionMobile": "ابدأ محادثة جديدة عن طريق إدخال معرف حساب صديقك، ONS أو مسح رمزه QR.",
   "messageReplyingTo": "الرد على",
@@ -506,6 +529,7 @@
   "messageRequestsNonePending": "لا توجد طلبات رسالة معلقة",
   "messageRequestsTurnedOff": "تم إيقاف طلبات الرسائل من محادثات المجتمع من طرف <b>{name}</b>، لذا لا يمكنك إرسال الرسالة إليه.",
   "messageSelect": "حدد الرسالة",
+  "messageSnippetGroup": "{author}: {message_snippet}",
   "messageStatusFailedToSend": "فشل الإرسال",
   "messageStatusFailedToSync": "فشلت المزامنة",
   "messageStatusSyncing": "جارٍ المزامنة",
@@ -513,9 +537,12 @@
   "messageVoice": "رسالة صوتية",
   "messageVoiceErrorShort": "اضغط باستمرار لتسجيل رسالة صوتية",
   "messageVoiceSlideToCancel": "اسحب للإلغاء",
+  "messageVoiceSnippet": "{emoji} رسالة صوتية",
+  "messageVoiceSnippetGroup": "{author}: {emoji} رسالة صوتية",
   "messages": "الرسائل",
   "minimize": "صغِّر",
   "next": "التالي",
+  "nicknameDescription": "اختر اسم مستعار لـ <b>{name}</b>. سيظهر لك في محادثاتك الفردية والجماعية.",
   "nicknameEnter": "أدخل اسم مستعار",
   "nicknameRemove": "إزالة الاسم المستعار",
   "nicknameSet": "تعيين الاسم",
@@ -539,6 +566,7 @@
   "notificationsGoToDevice": "اذهب إلى إعدادات تنبيهات الجهاز",
   "notificationsHeaderAllMessages": "التنبيهات - الكل",
   "notificationsHeaderMentionsOnly": "التنبيهات - الإشعارات فقط",
+  "notificationsHeaderMute": "التنبيهات - مكتومة",
   "notificationsIosGroup": "{name} إلى {conversation_name}",
   "notificationsIosRestart": "ربما تلقيت رسائل أثناء إعادة تشغيل {device} الخاص بك.",
   "notificationsLedColor": "لون ضوء التنبيه LED",
@@ -564,9 +592,13 @@
   "onboardingAccountCreate": "إنشاء حساب",
   "onboardingAccountCreated": "تم إنشاء الحساب",
   "onboardingAccountExists": "لدي حساب",
+  "onboardingBackAccountCreation": "لا يمكنك الرجوع أكثر. لإلغاء إنشاء حسابك، يجب إغلاق {app_name}.",
+  "onboardingBackLoadAccount": "لا يمكنك الرجوع أكثر. لإيقاف تحميل حسابك، يجب إغلاق {app_name}.",
+  "onboardingBubbleCreatingAnAccountIsEasy": "إنشاء حساب فوري، مجاني، ومجهول {emoji}",
   "onboardingBubbleNoPhoneNumber": "أنت لا تحتاج حتى إلى رقم هاتف للتسجيل.",
   "onboardingBubblePrivacyInYourPocket": "الخصوصية في جيبك.",
   "onboardingBubbleSessionIsEngineered": "{app_name} مصمم لحماية خصوصيتك.",
+  "onboardingBubbleWelcomeToSession": "مرحباً بك في {app_name} {emoji}",
   "onboardingHitThePlusButton": "اضغط على زر الإضافة لبدء محادثة، إنشاء مجموعة، أو الانضمام إلى مجتمع رسمي!",
   "onboardingMessageNotificationExplanation": "هناك طريقتان يمكن أن يبلغك {app_name} برسائلك الجديدة.",
   "onboardingPrivacy": "سياسة الخصوصية",
@@ -590,6 +622,7 @@
   "passwordCurrentIncorrect": "كلمة المرور الحالية غير صحيحة.",
   "passwordDescription": "يتطلب كلمة السر لفتح {app_name}.",
   "passwordEnter": "أدخل كلمة السر",
+  "passwordEnterCurrent": "يرجى إدخال كلمة السر الحالية",
   "passwordEnterNew": "يرجى إدخال كلمة السر الجديدة",
   "passwordError": "كلمة المرور يجب ان تحتوي فقط على الاحرف, الارقام و الرموز",
   "passwordErrorLength": "كلمة المرور يجب ان تكون بين 6 و 64 عنصر",
@@ -615,6 +648,7 @@
   "permissionsMicrophoneAccessRequired": "{app_name} يحتاج إذن الوصول إلى الميكروفون لإجراء المكالمات وإرسال الرسائل الصوتية، ولكن تم رفضه نهائيًا. انقر على الإعدادات -> الأذونات، وقم بتفعيل \"الميكروفون\".",
   "permissionsMicrophoneAccessRequiredDesktop": "يمكنك تفعيل الوصول للميكروفون في إعدادات الخصوصية في {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} يحتاج إذن الوصول إلى الميكروفون لإجراء المكالمات وتسجيل الرسائل الصوتية.",
+  "permissionsMicrophoneDescription": "السماح بالوصول إلى الميكروفون.",
   "permissionsMusicAudio": "يحتاج {app_name} إلى الوصول إلى الموسيقى والصوت من أجل إرسال الملفات والموسيقى والصوت.",
   "permissionsRequired": "منح إحدى الأذونات مطلوب",
   "permissionsStorageDenied": "{app_name} يحتاج إذن الوصول إلى مكتبة الصور لإرسال الصور ومقاطع الفيديو، ولكن تم رفضه نهائيًا. انقر على الإعدادات -> الأذونات، وقم بتفعيل \"الصور ومقاطع الفيديو\".",
@@ -661,6 +695,7 @@
   "recoveryPasswordHidePermanentlyDescription1": "بدون كلمة المرور الاستردادية، لا يمكنك تحميل حسابك على الأجهزة الجديدة. <br/><br/>نوصيك بشدة بحفظ كلمة المرور الاستردادية في مكان آمن قبل المتابعة.",
   "recoveryPasswordHidePermanentlyDescription2": "هل أنت متأكد من أنك تريد إخفاء كلمة مرور الاسترداد الخاصة بك على هذا الجهاز نهائيًا؟ لا يمكن التراجع عن هذا.",
   "recoveryPasswordHideRecoveryPassword": "إخفاء كلمة المرور للاسترجاع",
+  "recoveryPasswordHideRecoveryPasswordDescription": "إخفاء كلمة المرور الخاصة بالاسترداد على هذا الجهاز بشكل دائم.",
   "recoveryPasswordRestoreDescription": "أدخل كلمة مرور الاسترجاع لتحميل حسابك. إذا لم تقم بحفظها، يمكنك العثور عليها في إعدادات التطبيق.",
   "recoveryPasswordView": "عرض كلمة المرور",
   "recoveryPasswordWarningSendDescription": "هذه هي عبارة الاسترداد الخاصة بك. إذا قمت بإرساله إلى شخص ما ، فسيكون لديه حق الوصول الكامل إلى حسابك.",
@@ -686,6 +721,7 @@
   "searchContacts": "ابحث في جهات الاتصال",
   "searchConversation": "بحث عن محادثة",
   "searchEnter": "الرجاء إدخال كملة بحث.",
+  "searchMatches": "{count, plural, zero [{found_count} من # مطابقة] one [{found_count} من # إجابة] two [{found_count} من # مطابقات] few [{found_count} من # مطابقات] many [{found_count} من # مطابقات] other [{found_count} من # مطابقات]}",
   "searchMatchesNone": "لم يتم العثور على أي نتيجة.",
   "searchMatchesNoneSpecific": "لم يتم العثور على أية نتيجة لـ {query}",
   "searchMembers": "بحث عن الأعضاء",
@@ -709,8 +745,10 @@
   "set": "تعيين",
   "settingsRestartDescription": "يجب عليك إعادة تشغيل {app_name} لتطبيق الإعدادات الجديدة.",
   "share": "شارك",
+  "shareAccountIdDescription": "ادعُ صديقك للدردشة معك على {app_name} بمشاركة معرف حسابك معهم.",
   "shareAccountIdDescriptionCopied": "شارك مع أصدقائك حيثما تتحدث معهم عادةً — ثم نقل المحادثة هنا.",
   "shareExtensionDatabaseError": "هناك مشكلة في فتح قاعدة البيانات. يرجى إعادة تشغيل التطبيق والمحاولة مرة أخرى.",
+  "shareToSession": "مشاركة إلى {app_name}",
   "show": "أظهر",
   "showAll": "إظهار الكل",
   "showLess": "عرض أقل",
