--- a/_locales/az/messages.json
+++ b/_locales/az/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "{name} əngəlləndi",
   "blockDescription": "İstifadəçi <b>{name} olacaq</b> əngəlləməyi təsdiqləmək istəyirsinizmi? Əngəllənmiş istifadəçilər sizə mesaj tələbi, qrup dəvəti və zəng yolları ilə əlaqə qura bilməz.",
   "blockUnblock": "Əngəldən çıxart",
-  "blockUnblockName": "{name} əngəldən çıxartmaq istədiyinizə əminsiniz?",
-  "blockUnblockNameMultiple": "{name} və {count} başqalarını əngəldən çıxartmaq istədiyinizə əminsiniz?",
-  "blockUnblockNameTwo": "{name} və 1 başqasını əngəldən çıxartmaq istədiyinizə əminsiniz?",
+  "blockUnblockName": "<b>{name}</b> istifadəçisini əngəldən çıxartmaq istədiyinizə əminsiniz?",
+  "blockUnblockNameMultiple": "<b>{name}</b> və başqa <b>{count}</b> nəfəri əngəldən çıxartmaq istədiyinizə əminsiniz?",
+  "blockUnblockNameTwo": "<b>{name}</b> və 1 başqasını əngəldən çıxartmaq istədiyinizə əminsiniz?",
   "blockUnblockedUser": "{name} əngəldən çıxarıldı",
   "call": "Zəng",
   "callsCalledYou": "{name} sizə zəng etdi",
@@ -250,7 +250,7 @@
   "copy": "Kopyala",
   "create": "Yarat",
   "cut": "Kəs",
-  "databaseErrorGeneric": "Məlumat bazası xətası baş verdi.<br\\/><br\\/>{app_name} tətbiqinizin jurnallarını ixrac edib paylaşma troubleshoot üçün cəhd edin. Bu uğurlu olmazsa, tətbiqi yenidən quraraq hesabınızı bərpa edin.<br\\/><br\\/>Xəbərdarlıq: bu, iki həftədən daha köhnə olan bütün mesajların, qoşma fayllarının və hesab məlumatlarının itirilməsinə səbəb olacaq.",
+  "databaseErrorGeneric": "Bir databaza xətası baş verdi.<br/><br/>Problemin aradan qaldırılması üçün tətbiq jurnalınızı paylaşmaq məqsədilə xaricə köçürün. Bu uğursuz olsa, {app_name} tətbiqini təkrar quraşdırıb hesabınızı bərpa edin.<br/><br/>Xəbərdarlıq: Bu, iki həftədən köhnə olan bütün mesajların, qoşmaların və hesab datasının itməsi ilə nəticələnəcək.",
   "databaseErrorTimeout": "{app_name}-in başlamağının çox uzun vaxt apardığını gördük.<br/><br/>Gözləməyə davam edə bilərsiniz, cihazınızın jurnallarını ixrac edə bilərsiniz və ya Sessiyanı yenidən başlatmağa cəhd edə bilərsiniz.",
   "databaseErrorUpdate": "Tətbiq məlumatı {app_name} bu versiyası ilə uyğun deyil. Tətbiqi yenidən quraşdırın və hesabınızı bərpa edin ki, yeni bir məlumat bazası yaradasınız və {app_name} istifadə etməyə davam edə bilərsiniz.<br/><br/>Diqqət: Bu, iki həftədən köhnə bütün mesajların və qoşmaların itkisi ilə nəticələnəcəkdir.",
   "databaseOptimizing": "Bazasını Optimizə Etmək",
