--- a/_locales/cs/messages.json
+++ b/_locales/cs/messages.json
@@ -1,8 +1,8 @@
 {
-  "about": "<b>Info</b>",
-  "accept": "<b>Přijmout</b>",
+  "about": "Info",
+  "accept": "Přijmou",
   "accountIDCopy": "Kopírovat Account ID",
-  "accountIdCopied": "<b>ID účtu zkopírováno</b>",
+  "accountIdCopied": "ID účtu zkopírováno",
   "accountIdCopyDescription": "Zkopírujte své ID účtu a pak ho sdílejte s přáteli, aby vám mohli poslat zprávu.",
   "accountIdEnter": "Zadejte Account ID",
   "accountIdErrorInvalid": "Toto ID účtu je neplatné. Zkontrolujte to prosím a zkuste to znovu.",
@@ -198,6 +198,7 @@
   "communityInvitation": "Pozvánka do komunity",
   "communityJoin": "Připojit se ke komunitě",
   "communityJoinDescription": "Opravdu se chcete připojit ke komunitě {community_name}?",
+  "communityJoinError": "Selhalo připojení ke komunitě",
   "communityJoinOfficial": "Nebo se přidej do jedné z těchto...",
   "communityJoined": "Připojeno ke komunitě",
   "communityJoinedAlready": "Již jste členem této komunity.",
@@ -251,7 +252,7 @@
   "create": "Vytvořit",
   "cut": "Vyjmout",
   "databaseErrorGeneric": "<b>Došlo k chybě databáze.<br/><br/>Exportujte své aplikační logy a sdílejte je pro účely diagnostiky. Pokud to nebude úspěšné, přeinstalujte {app_name} a obnovte svůj účet.<br/><br/>Varování: To povede ke ztrátě všech zpráv, příloh a údajů účtu starších než dva týdny.</b>",
-  "databaseErrorTimeout": "Všimli jsme si, že spuštění aplikace {app_name} trvá dlouho.<br><br>Můžete pokračovat v čekání, exportovat protokoly zařízení k řešení problémů nebo zkusit restartovat Session.",
+  "databaseErrorTimeout": "Všimli jsme si, že spuštění aplikace {app_name} trvá dlouho.<br/><br/>Můžete pokračovat v čekání, exportovat logy zařízení k řešení problémů nebo zkusit restartovat {app_name}.",
   "databaseErrorUpdate": "Databáze vaší aplikace není kompatibilní s touto verzí {app_name}. Přeinstalujte aplikaci a obnovte svůj účet pro vytvoření nové databáze a pokračování v používání {app_name}.<br/><br/>Varování: To povede ke ztrátě všech zpráv a příloh starších než dva týdny.",
   "databaseOptimizing": "Optimalizace databáze",
   "debugLog": "Ladící log",
@@ -307,7 +308,7 @@
   "disappearingMessagesDisappearAfterSendState": "Zmizí po odeslání - {time}",
   "disappearingMessagesFollowSetting": "Nastavení sledování",
   "disappearingMessagesFollowSettingOff": "Odeslané zprávy již nebudou mizet. Určitě chcete mizení zpráv vypnout?",
-  "disappearingMessagesFollowSettingOn": "Nastavit zprávy tak, aby zmizely <b>{time} after they have been <b>{disappearing_messages_type}?</b>",
+  "disappearingMessagesFollowSettingOn": "Nastavit zprávy tak, aby zmizely <b>{time}</b> po tom, co byly <b>{disappearing_messages_type}</b>?",
   "disappearingMessagesLegacy": "{name} používá zastaralého klienta. Mizející zprávy nemusí fungovat podle očekávání.",
   "disappearingMessagesOnlyAdmins": "Toto nastavení mohou měnit jen správci skupiny.",
   "disappearingMessagesSent": "Odesláno",
@@ -316,7 +317,7 @@
   "disappearingMessagesTimer": "Časovač",
   "disappearingMessagesTurnedOff": "<b>{name}</b> vypnul mizející zprávy. Zprávy, které pošle, již nebudou mizet.",
   "disappearingMessagesTurnedOffGroup": "<b>{name}</b> <b>vypnul(a)</b> mizející zprávy.",
-  "disappearingMessagesTurnedOffYou": "<b>Vypnuli jste <b>mizející zprávy</b>. Zprávy, které pošlete, již nebudou mizet.</b>",
+  "disappearingMessagesTurnedOffYou": "<b>Vypnuli</b> jste <b> mizející zprávy</b>. Zprávy, které pošlete, již nebudou mizet",
   "disappearingMessagesTurnedOffYouGroup": "<b>Vy</b> jste <b>vypnuli</b> mizející zprávy.",
   "disappearingMessagesTypeRead": "přečteno",
   "disappearingMessagesTypeSent": "odesláno",
@@ -391,6 +392,7 @@
   "groupInviteSending": "Odesílání pozvánky",
   "groupInviteSent": "Pozvánka odeslána",
   "groupInviteSuccessful": "Pozvánka do skupiny byla úspěšná",
+  "groupInviteVersion": "Uživatelé musí používat nejnovější verzi, aby mohli přijímat pozvánky",
   "groupInviteYou": "<b>Byli jste pozváni k připojení do skupiny.</b>",
   "groupInviteYouAndMoreNew": "<b>Vy</b> a <b>{count} dalších</b> bylo pozváno do skupiny.",
   "groupInviteYouAndOtherNew": "<b>Vy</b> a <b>{other_name}</b> jste byli pozváni do skupiny.",
@@ -420,7 +422,7 @@
   "groupNameNew": "Název skupiny je nyní {group_name}. ",
   "groupNameUpdated": "Název skupiny aktualizován.",
   "groupNoMessages": "Nemáte žádné zprávy od <b>{group_name}</b>. Pošlete zprávu pro zahájení konverzace!",
-  "groupOnlyAdmin": "Jste jediný správce ve skupině <b>{group_name}</b>.<br><br>Členové skupiny a nastavení nelze změnit bez správce.",
+  "groupOnlyAdmin": "Jste jediný správce ve skupině <b>{group_name}</b>.<br/><br/>Členové skupiny a nastavení nelze změnit bez správce.",
   "groupPromotedYou": "<b>Byli jste povýšeni na správce.</b>",
   "groupPromotedYouMultiple": "<b>Vy</b> a <b>{count} dalších</b> jste byli povýšeni na správce.",
   "groupPromotedYouTwo": "<b>Vy</b> a <b>{name}</b> jste byli povýšeni na správce.",
@@ -592,7 +594,7 @@
   "okay": "Okay",
   "on": "Zap.",
   "onboardingAccountCreate": "Vytvořit účet",
-  "onboardingAccountCreated": "<b>Účet vytvořen</b>",
+  "onboardingAccountCreated": "Účet vytvořen",
   "onboardingAccountExists": "Mám účet",
   "onboardingBackAccountCreation": "Dále se nemůžete vrátit. Pokud chcete zrušit vytváření účtu, {app_name} musí být ukončena.",
   "onboardingBackLoadAccount": "Dále se nemůžete vrátit. Pokud chcete zastavit načítání svého účtu, {app_name} musí být ukončena.",
@@ -637,6 +639,7 @@
   "passwordSet": "Nastavit heslo",
   "passwordSetDescription": "Tvé heslo bylo nastaveno. Pečlivě si ho odlož.",
   "paste": "Vložit",
+  "permissionMusicAudioDenied": "{app_name} potřebuje přístup k hudbě a zvuku, aby mohla posílat soubory, hudbu a zvuk. Přístup byl ale trvale odepřen. Klepněte na Nastavení -> Oprávnění a zapněte \"Hudba a zvuk\".",
   "permissionsAppleMusic": "{app_name} potřebuje použít Apple Music pro přehrávání mediálních příloh.",
   "permissionsAutoUpdate": "Automatické aktualizace",
   "permissionsAutoUpdateDescription": "Automaticky kontrolovat aktualizace při spuštění",
@@ -650,6 +653,7 @@
   "permissionsMicrophoneAccessRequiredDesktop": "Přístup k mikrofonu můžete povolit v nastavení soukromí {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} potřebuje přístup k mikrofonu pro volání a nahrávání zvukových zpráv.",
   "permissionsMicrophoneDescription": "Povolit přístup k mikrofonu.",
+  "permissionsMusicAudio": "{app_name} potřebuje přístup k hudbě a zvuku, aby mohla posílat soubory, hudbu a zvuk.",
   "permissionsRequired": "Vyžadovaná oprávnění",
   "permissionsStorageDenied": "{app_name} potřebuje přístup do knihovny fotografií, abyste mohli odesílat fotografie a videa, přístup byl ale trvale zakázán. Klepněte na -> Oprávnění a povolte Fotografie a videa.",
   "permissionsStorageDeniedLegacy": "{app_name} potřebuje přístup k úložišti, abyste mohli odesílat a ukládat přílohy. Klepněte na Nastavení -> Oprávnění a zapněte \"Úložiště\".",
@@ -692,7 +696,7 @@
   "recoveryPasswordErrorTitle": "Nesprávné heslo pro obnovení",
   "recoveryPasswordExplanation": "Pro načtení vašeho účtu, zadejte vaše heslo pro obnovení.",
   "recoveryPasswordHidePermanently": "Trvale skrýt heslo pro obnovení",
-  "recoveryPasswordHidePermanentlyDescription1": "Bez hesla pro obnovení nelze účet načíst do nových zařízení. <br><br>Důrazně doporučujeme, abyste si před pokračováním uložili heslo pro obnovení na bezpečné místo.",
+  "recoveryPasswordHidePermanentlyDescription1": "Bez hesla pro obnovení nelze účet načíst do nových zařízení.<br/><br/>Důrazně doporučujeme, abyste si před pokračováním uložili heslo pro obnovení na bezpečné místo.",
   "recoveryPasswordHidePermanentlyDescription2": "Opravdu chcete trvale skrýt heslo pro obnovení na tomto zařízení? Tuto akci nelze vrátit.",
   "recoveryPasswordHideRecoveryPassword": "Skrýt heslo pro obnovení",
   "recoveryPasswordHideRecoveryPasswordDescription": "Trvale skrýt moje heslo pro obnovení v tomto zařízení.",
