--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -142,6 +142,7 @@
   "callsInProgress": "Anruf aktiv",
   "callsIncoming": "Eingehender Anruf von {name}",
   "callsIncomingUnknown": "Eingehender Anruf",
+  "callsMicrophonePermissionsRequired": "Du hast einen Anruf von <b>{name}</b> verpasst, weil du den <b>Mikrofonzugriff</b> nicht gewährt hast.",
   "callsMissed": "Entgangener Anruf",
   "callsMissedCallFrom": "Entgangener Anruf von {name}",
   "callsNotificationsRequired": "Sprach- und Videoanrufe erfordern Benachrichtigungen, die in den Systemeinstellungen Ihres Geräts aktiviert sind. ",
@@ -154,6 +155,7 @@
   "callsVoiceAndVideo": "Sprach- und Videoanrufe",
   "callsVoiceAndVideoBeta": "Sprach- und Videoanrufe (Beta)",
   "callsVoiceAndVideoModalDescription": "Deine IP ist während der Verwendung von Beta-Anrufen für deinen Gesprächspartner und einen Server der Oxen Foundation sichtbar.",
+  "callsVoiceAndVideoToggleDescription": "Aktiviert Sprach- und Videoanrufe an und von anderen Benutzern.",
   "callsYouCalled": "Du hast {name} angerufen",
   "callsYouMissedCallPermissions": "Du hast einen Anruf von <b>{name} </b> verpasst, weil du <b>Sprach- und Videoanrufe</b> in den Datenschutzeinstellungen nicht aktiviert hast.",
   "cameraErrorNotFound": "Keine Kamera gefunden",
@@ -197,6 +199,7 @@
   "communityInvitation": "Community-Einladung",
   "communityJoin": "Community beitreten",
   "communityJoinDescription": "Möchtest du {community_name} wirklich beitreten?",
+  "communityJoinError": "Fehler beim Beitritt zur Community",
   "communityJoinOfficial": "Oder tritt einer von diesen bei...",
   "communityJoined": "Community beigetreten",
   "communityJoinedAlready": "Du bist bereits ein Mitglied dieser Community.",
@@ -243,6 +246,7 @@
   "conversationsSendWithEnterKeyDescription": "Durch Tippen auf die Enter-Taste wird eine Nachricht gesendet, anstatt eine neue Zeile zu beginnen.",
   "conversationsSettingsAllMedia": "Alle Medieninhalte",
   "conversationsSpellCheck": "Rechtschreibprüfung",
+  "conversationsSpellCheckDescription": "Rechtschreibprüfung bei der Eingabe von Nachrichten aktivieren.",
   "conversationsStart": "Unterhaltung beginnen",
   "copied": "Kopiert",
   "copy": "Kopieren",
@@ -389,11 +393,13 @@
   "groupInviteSending": "Einladung wird gesendet",
   "groupInviteSent": "Einladung gesendet",
   "groupInviteSuccessful": "Gruppeneinladung erfolgreich",
+  "groupInviteVersion": "Benutzer müssen die neueste Version haben, um Einladungen zu erhalten",
   "groupInviteYou": "<b>Sie</b> wurden eingeladen, der Gruppe beizutreten.",
   "groupInviteYouAndMoreNew": "<b>Du</b> und <b>{count} andere</b> sind der Gruppe beigetreten.",
   "groupInviteYouAndOtherNew": "<b>Du</b> und <b>{other_name}</b> sind der Gruppe beigetreten.",
   "groupLeave": "Gruppe verlassen",
   "groupLeaveDescription": "Bist du sicher, dass du {group_name} verlassen möchtest?",
+  "groupLeaveDescriptionAdmin": "Sind Sie sicher, dass Sie <b>{group_name}</b> verlassen möchten?<br/><br/>Dadurch werden alle Mitglieder entfernt und alle Gruppendaten gelöscht.",
   "groupLeaveErrorFailed": "Fehler beim Verlassen von {group_name}",
   "groupLegacyBanner": "Gruppen wurden aktualisiert, erstellen Sie eine neue Gruppe, um zu aktualisieren. Alte Gruppenfunktionen werden ab {date} eingeschränkt.",
   "groupMemberLeft": "<b>{name}</b> hat die Gruppe verlassen.",
@@ -520,6 +526,7 @@
   "messageRequestYouHaveAccepted": "Du hast die Nachrichtenanfrage von <b>{name} </b> angenommen.",
   "messageRequestsAcceptDescription": "Das Senden einer Nachricht an diesen Benutzer bestätigt automatisch seine Nachrichtenanfrage und gibt deine Session ID bekannt.",
   "messageRequestsAccepted": "Deine Nachrichtenanfrage wurde akzeptiert.",
+  "messageRequestsClearAllExplanation": "Sind Sie sich sicher, dass Sie alle Nachrichtenanforderungen und Gruppeneinladungen löschen möchten?",
   "messageRequestsCommunities": "Community-Nachrichtenanfragen",
   "messageRequestsCommunitiesDescription": "Erlaube Nachrichtenanfragen von Community-Unterhaltungen.",
   "messageRequestsDelete": "Bist du sicher, dass du diese Nachrichtenanfrage löschen willst?",
@@ -540,6 +547,7 @@
   "messages": "Nachrichten",
   "minimize": "Minimieren",
   "next": "Weiter",
+  "nicknameDescription": "Wählen Sie einen Spitznamen für <b>{name}</b>. Dieser wird Ihnen in Ihren Einzel- und Gruppengesprächen angezeigt.",
   "nicknameEnter": "Spitznamen eingeben",
   "nicknameRemove": "Spitzname entfernen",
   "nicknameSet": "Spitzname festlegen",
@@ -563,6 +571,7 @@
   "notificationsGoToDevice": "Zu den Benachrichtigungseinstellungen des Geräts gehen",
   "notificationsHeaderAllMessages": "Benachrichtigungen - Alle",
   "notificationsHeaderMentionsOnly": "Benachrichtigungen - Nur für Erwähnungen",
+  "notificationsHeaderMute": "Benachrichtigungen - Stummgeschaltet",
   "notificationsIosGroup": "{name} an {conversation_name}",
   "notificationsIosRestart": "Du hast eventuell Nachrichten erhalten, während dein {device} neu gestartet wurde.",
   "notificationsLedColor": "LED-Farbe",
@@ -618,6 +627,7 @@
   "passwordCurrentIncorrect": "Dein aktuelles Passwort ist nicht korrekt.",
   "passwordDescription": "Passwort zum Entsperren von {app_name} erforderlich.",
   "passwordEnter": "Passwort eingeben",
+  "passwordEnterCurrent": "Bitte gib dein aktuelles Passwort ein",
   "passwordEnterNew": "Bitte neues Passwort eingeben",
   "passwordError": "Das Passwort darf nur Buchstaben, Zahlen und Symbole enthalten",
   "passwordErrorLength": "Das Passwort muss zwischen 6 und 64 Zeichen lang sein",
@@ -640,10 +650,13 @@
   "permissionsKeepInSystemTrayDescription": "{app_name} läuft im Hintergrund weiter, wenn Sie das Fenster schließen",
   "permissionsLibrary": "{app_name} benötigt Zugriff auf die Fotobibliothek, um fortzufahren. Sie können den Zugriff in den iOS-Einstellungen aktivieren.",
   "permissionsMicrophone": "Mikrofon",
+  "permissionsMicrophoneAccessRequired": "{app_name} benötigt Mikrofonzugriff, um Anrufe zu tätigen und Audio-Nachrichten zu senden, aber der Zugriff wurde dauerhaft verweigert. Tippen Sie auf Einstellungen -> Berechtigungen und schalten Sie das „Mikrofon“ ein.",
   "permissionsMicrophoneAccessRequiredDesktop": "Du kannst das Mikrofon in den Datenschutz-Einstellungen von {app_name} aktivieren.",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} benötigt Mikrofonzugriff, um Anrufe zu tätigen und Audionachrichten aufzuzeichnen.",
+  "permissionsMicrophoneDescription": "Erlaube Zugriff auf das Mikrofon.",
   "permissionsMusicAudio": "{app_name} benötigt Musik- und Audiozugriff, um Dateien, Musik und Audiodateien zu senden.",
   "permissionsRequired": "Berechtigung erforderlich",
+  "permissionsStorageDenied": "{app_name} benötigt Fotozugriff, damit Sie Fotos und Videos senden können, aber der Zugriff wurde dauerhaft verweigert. Tippen Sie auf Einstellungen -> Berechtigungen und schalten Sie „Fotos und Videos“ ein.",
   "permissionsStorageDeniedLegacy": "{app_name} benötigt Speicherzugriff, um Anhänge senden und speichern zu können. Tippen Sie auf Einstellungen -> Berechtigungen und aktivieren Sie \"Speicher\".",
   "permissionsStorageSave": "{app_name} benötigt Speicherzugriff, um Anhänge und Medien zu speichern.",
   "permissionsStorageSaveDenied": "{app_name} Benötigt Speicherzugriff, um Fotos und Videos zu speichern, aber es wurde dauerhaft verweigert. Bitte fahren Sie mit den App-Einstellungen fort, wählen Sie \"Berechtigungen\" und aktivieren Sie \"Speicher\".",
@@ -687,6 +700,7 @@
   "recoveryPasswordHidePermanentlyDescription1": "Du kannst Dein Konto nicht ohne Dein Wiederherstellungspasswort auf neuen Geräten laden.<br/><br/>Wir empfehlen dringend, Dein Wiederherstellungspasswort an einem sicheren Ort zu speichern, bevor Du fortfährst.",
   "recoveryPasswordHidePermanentlyDescription2": "Bist Du sicher, dass Du das Wiederherstellungspasswort auf diesem Gerät dauerhaft ausblenden möchtest? Dies kann nicht mehr rückgängig gemacht werden.",
   "recoveryPasswordHideRecoveryPassword": "Wiederherstellungspasswort ausblenden",
+  "recoveryPasswordHideRecoveryPasswordDescription": "Blende Dein Wiederherstellungspasswort auf diesem Gerät dauerhaft aus.",
   "recoveryPasswordRestoreDescription": "Geben Sie Ihr Wiederherstellungspasswort ein, um Ihr Konto zu laden. Wenn Sie es nicht gespeichert haben, finden Sie es in Ihren App-Einstellungen.",
   "recoveryPasswordView": "Passwort anzeigen",
   "recoveryPasswordWarningSendDescription": "Dies ist dein Wiederherstellungspasswort. Wenn du es jemandem sendest, hat er oder sie vollen Zugriff auf dein Konto.",
@@ -739,6 +753,7 @@
   "shareAccountIdDescription": "Lade deinen Freund ein, mit dir auf {app_name} zu chatten, indem du deine Account-ID mit ihm teilst.",
   "shareAccountIdDescriptionCopied": "Teile deine Session-ID mit Freunden und verlagert eure Konversation gerne zu Session.",
   "shareExtensionDatabaseError": "Es gibt ein Problem beim Öffnen der Datenbank. Bitte starte die App neu und versuche es erneut.",
+  "shareToSession": "Teilen auf {app_name}",
   "show": "Anzeigen",
   "showAll": "Alle anzeigen",
   "showLess": "Weniger anzeigen",
@@ -750,6 +765,7 @@
   "theError": "Fehler",
   "tryAgain": "Erneut versuchen",
   "typingIndicators": "Tipp-Indikatoren",
+  "typingIndicatorsDescription": "Tippen anzeigen und teilen.",
   "undo": "Rückgängig",
   "unknown": "Unbekannt",
   "updateApp": "App-Aktualisierungen",
