--- a/_locales/es-419/messages.json
+++ b/_locales/es-419/messages.json
@@ -142,6 +142,7 @@
   "callsInProgress": "Llamada en curso",
   "callsIncoming": "Llamada entrante de {name}",
   "callsIncomingUnknown": "Llamada entrante",
+  "callsMicrophonePermissionsRequired": "Perdiste una llamada de <b>{name}</b> porque no has otorgado <b>acceso al micrófono</b>.",
   "callsMissed": "Llamada perdida",
   "callsMissedCallFrom": "Llamada perdida de {name}",
   "callsNotificationsRequired": "Las llamadas de voz y video requieren que las notificaciones estén habilitadas en la configuración de su dispositivo. ",
@@ -198,6 +199,7 @@
   "communityInvitation": "Invitación a la comunidad",
   "communityJoin": "Unirse a Comunidad",
   "communityJoinDescription": "¿Estás seguro de que deseas unirte a {community_name}?",
+  "communityJoinError": "No se pudo unir a la comunidad",
   "communityJoinOfficial": "O únete a uno de estos...",
   "communityJoined": "Unido a Comunidad",
   "communityJoinedAlready": "Ya eres miembro de esta comunidad.",
@@ -391,6 +393,7 @@
   "groupInviteSending": "Enviando invitación",
   "groupInviteSent": "Invitación enviada",
   "groupInviteSuccessful": "Invitación al grupo exitosa",
+  "groupInviteVersion": "Los usuarios deben tener la última versión para recibir invitaciones.",
   "groupInviteYou": "<b>Tú</b> fuiste invitado a unirte al grupo.",
   "groupInviteYouAndMoreNew": "<b>Tú</b> y <b>{count} más</b> se unieron al grupo.",
   "groupInviteYouAndOtherNew": "<b>Tú</b> y <b>{other_name}</b> se unieron al grupo.",
