--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -96,6 +96,7 @@
   "attachmentsMoveAndScale": "Editar foto",
   "attachmentsNa": "N/A",
   "attachmentsNotification": "{emoji} Archivo adjunto",
+  "attachmentsNotificationGroup": "{author}: {emoji} Archivo adjunto",
   "attachmentsResolution": "Resolución:",
   "attachmentsSaveError": "No se puede guardar el archivo.",
   "attachmentsSendTo": "Enviar a {name}",
@@ -141,6 +142,7 @@
   "callsInProgress": "Llamada en curso",
   "callsIncoming": "Llamada entrante de {name}",
   "callsIncomingUnknown": "Llamada entrante",
+  "callsMicrophonePermissionsRequired": "Perdiste una llamada de <b>{name}</b> porque no has otorgado <b>acceso al micrófono</b>.",
   "callsMissed": "Llamada perdida",
   "callsMissedCallFrom": "Llamada perdida de {name}",
   "callsNotificationsRequired": "Las llamadas de voz y video requieren que las notificaciones estén habilitadas en la configuración del sistema de tu dispositivo. ",
@@ -153,6 +155,7 @@
   "callsVoiceAndVideo": "Llamadas de voz y video",
   "callsVoiceAndVideoBeta": "Llamadas de Voz y Video (Beta)",
   "callsVoiceAndVideoModalDescription": "Tu IP es visible para tu socio de llamada y un servidor de Oxen Foundation mientras usas las llamadas beta.",
+  "callsVoiceAndVideoToggleDescription": "Permite llamadas de voz y vídeo de y hacia otros usuarios.",
   "callsYouCalled": "Has llamado a {name}",
   "callsYouMissedCallPermissions": "Perdiste una llamada de <b>{name}</b> porque no has habilitado <b>Voice and Video Calls</b> en configuraciones de privacidad.",
   "cameraErrorNotFound": "Cámara no encontrada",
@@ -186,6 +189,8 @@
   "close": "Cerrar",
   "closeWindow": "Cerrar ventana",
   "commitHashDesktop": "Hash del Commit: {hash}",
+  "communityBanDeleteDescription": "Esto prohibirá al usuario seleccionado de esta Comunidad y borrará todos sus mensajes. ¿Estás seguro de que deseas continuar?",
+  "communityBanDescription": "Esto prohibirá al usuario seleccionado de esta Comunidad. ¿Estás seguro de que deseas continuar?",
   "communityEnterUrl": "Introduzca el URL de la Comunidad",
   "communityEnterUrlErrorInvalid": "URL no válida",
   "communityEnterUrlErrorInvalidDescription": "Por favor, comprueba el URL de la Comunidad y vuelve a intentarlo.",
@@ -194,6 +199,7 @@
   "communityInvitation": "Invitación a la comunidad",
   "communityJoin": "Unirse a la comunidad",
   "communityJoinDescription": "¿Estás seguro de que quieres unirte a {community_name}?",
+  "communityJoinError": "Error al unirse a la comunidad",
   "communityJoinOfficial": "O únete a uno de estos...",
   "communityJoined": "Te uniste a la comunidad",
   "communityJoinedAlready": "Ya eres miembro de esta comunidad.",
@@ -240,6 +246,7 @@
   "conversationsSendWithEnterKeyDescription": "Pulsar la tecla Intro enviará el mensaje en lugar de empezar una nueva línea.",
   "conversationsSettingsAllMedia": "Adjuntos",
   "conversationsSpellCheck": "Revisión ortográfica",
+  "conversationsSpellCheckDescription": "Activar corrección ortográfica al escribir mensajes.",
   "conversationsStart": "Iniciar conversación",
   "copied": "Copiado",
   "copy": "Copiar",
@@ -310,6 +317,7 @@
   "disappearingMessagesSetYou": "<b>Tú</b> has establecido que los mensajes desaparezcan {time} tras haber sido {disappearing_messages_type}.",
   "disappearingMessagesTimer": "Cronómetro",
   "disappearingMessagesTurnedOff": "<b>{name}</b> ha desactivado la desaparición de mensajes. Los mensajes que envíe ya no desaparecerán.",
+  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> ha desactivado los mensajes desparecientes <b>\"Activado\"</b>.",
   "disappearingMessagesTurnedOffYou": "<b>Tú</b> desactivaste la desaparición de mensajes. Los mensajes que envíes ya no desaparecerán.",
   "disappearingMessagesTurnedOffYouGroup": "<b>Tú</b> has desactivado los <b>mensajes que desaparecen</b>.",
   "disappearingMessagesTypeRead": "leído",
@@ -385,11 +393,13 @@
   "groupInviteSending": "Enviando invitación",
   "groupInviteSent": "Invitación enviada",
   "groupInviteSuccessful": "Grupo invitado con éxito",
+  "groupInviteVersion": "Los usuarios deben tener la última versión para recibir invitaciones",
   "groupInviteYou": "<b>Tú</b> has sido invitado a unirte al grupo.",
   "groupInviteYouAndMoreNew": "<b>Tú</b> y <b>{count} más</b> se unieron al grupo.",
   "groupInviteYouAndOtherNew": "<b>Tú</b> y <b>{other_name}</b> se unieron al grupo.",
   "groupLeave": "Abandonar grupo",
   "groupLeaveDescription": "¿Estás seguro de que quieres salir de <b>{group_name}</b>?",
+  "groupLeaveDescriptionAdmin": "¿Estás seguro de que deseas abandonar el grupo <b>{group_name}</b>?<br/><br/>Esto eliminará a todos los miembros y borrará todo el contenido del grupo.",
   "groupLeaveErrorFailed": "No se pudo salir de {group_name}",
   "groupLegacyBanner": "Los grupos han sido actualizados, crea un nuevo grupo para actualizar. La funcionalidad del grupo antiguo se degradará a partir de {date}.",
   "groupMemberLeft": "<b>{name}</b> ha abandonado el grupo.",
@@ -516,6 +526,7 @@
   "messageRequestYouHaveAccepted": "Has aceptado la solicitud de mensaje de <b>{name}.</b>",
   "messageRequestsAcceptDescription": "Enviar un mensaje a este usuario aceptará automáticamente su solicitud de mensaje y revelará su ID de cuenta.",
   "messageRequestsAccepted": "Tu solicitud de mensaje ha sido aceptada.",
+  "messageRequestsClearAllExplanation": "¿Está seguro de que desea borrar todas las solicitudes de mensajes y las invitaciones de grupo?",
   "messageRequestsCommunities": "Solicitudes de mensajes de la comunidad",
   "messageRequestsCommunitiesDescription": "Permitir solicitudes de mensajes de conversaciones de Comunidades.",
   "messageRequestsDelete": "¿Estás seguro de que quieres eliminar esta solicitud de mensaje?",
@@ -523,6 +534,7 @@
   "messageRequestsNonePending": "No hay solicitudes de mensajes pendientes",
   "messageRequestsTurnedOff": "<b>{name}</b> tiene desactivadas las solicitudes de mensajes de conversaciones de Comunidad, por lo que no puedes enviarles un mensaje.",
   "messageSelect": "Seleccionar mensaje",
+  "messageSnippetGroup": "{author}: {message_snippet}",
   "messageStatusFailedToSend": "No se pudo enviar",
   "messageStatusFailedToSync": "No se pudo sincronizar",
   "messageStatusSyncing": "Sincronizando",
@@ -530,9 +542,12 @@
   "messageVoice": "Mensaje de voz",
   "messageVoiceErrorShort": "Toca y mantén pulsado el icono del micrófono para grabar una nota de voz corta. Toca, arrastra hacia arriba y suelta para grabar notas de voz más largas",
   "messageVoiceSlideToCancel": "Desliza para cancelar",
+  "messageVoiceSnippet": "{emoji} Mensaje de Voz",
+  "messageVoiceSnippetGroup": "{author}: {emoji} Mensaje de Voz",
   "messages": "Mensajes",
   "minimize": "Minimizar",
   "next": "Siguiente",
+  "nicknameDescription": "Elija un apodo para <b>{name}</b>. Esto aparecerá para ti en tus conversaciones individuales y de grupo.",
   "nicknameEnter": "Escriba un apodo",
   "nicknameRemove": "Eliminar apodo",
   "nicknameSet": "Definir apodo",
@@ -556,6 +571,7 @@
   "notificationsGoToDevice": "Ir a la configuración de notificaciones del dispositivo",
   "notificationsHeaderAllMessages": "Notificaciones - Todas",
   "notificationsHeaderMentionsOnly": "Notificaciones - Solo Menciones",
+  "notificationsHeaderMute": "Notificaciones - Silenciadas",
   "notificationsIosGroup": "{name} a {conversation_name}",
   "notificationsIosRestart": "Puede que hayas recibido mensajes mientras se reiniciaba tu {device}.",
   "notificationsLedColor": "Color del LED",
@@ -611,6 +627,7 @@
   "passwordCurrentIncorrect": "Tu contraseña actual es incorrecta.",
   "passwordDescription": "Se requiere contraseña para desbloquear {app_name}.",
   "passwordEnter": "Introducir contraseña",
+  "passwordEnterCurrent": "Por favor, introduzca su antigua contraseña",
   "passwordEnterNew": "Por favor, ingrese su nueva contraseña",
   "passwordError": "La contraseña solo debe contener letras, números y símbolos",
   "passwordErrorLength": "La contraseña debe tener entre 6 y 64 caracteres de longitud",
@@ -633,10 +650,14 @@
   "permissionsKeepInSystemTrayDescription": "{app_name} continúa ejecutándose en segundo plano cuando cierras la ventana",
   "permissionsLibrary": "{app_name} necesita acceso a la biblioteca de fotos para continuar. Puedes habilitar acceso en los ajustes de iOS.",
   "permissionsMicrophone": "Micrófono",
+  "permissionsMicrophoneAccessRequired": "{app_name} necesita acceso al micrófono para hacer llamadas y enviar mensajes de audio, pero ha sido permanentemente denegado. Toque Configuración -> Permisos, y active \"Micrófono\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Puedes habilitar el acceso al micrófono en la configuración de privacidad de {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} necesita acceso al micrófono para hacer llamadas y grabar mensajes de audio.",
+  "permissionsMicrophoneDescription": "Permitir acceso al micrófono.",
   "permissionsMusicAudio": "{app_name} necesita acceso a la música y el audio para enviar archivos, música y audio.",
   "permissionsRequired": "Permiso necesario",
+  "permissionsStorageDenied": "{app_name} necesita acceso a la biblioteca de fotos para que puedas enviar fotos y videos, pero ha sido permanentemente denegado. Toque Configuración -> Permisos, y active \"Fotos y videos\".",
+  "permissionsStorageDeniedLegacy": "{app_name} necesita acceso al almacenamiento para que puedas enviar y guardar adjuntos. Toque Configuración -> Permisos, y active \"Almacenamiento\".",
   "permissionsStorageSave": "{app_name} necesita acceso de almacenamiento para guardar archivos adjuntos y medios.",
   "permissionsStorageSaveDenied": "{app_name} necesita permiso de almacenamiento para poder guardar imágenes y videos, pero este ha sido denegado permanentemente. Por favor, vaya al menú de configuración de la aplicación, seleccione \"Permisos\", y active \"Almacenamiento\".",
   "permissionsStorageSend": "{app_name} necesita acceso de almacenamiento para enviar fotos y videos.",
@@ -679,6 +700,7 @@
   "recoveryPasswordHidePermanentlyDescription1": "Sin su clave de recuperación no puede iniciar sesión en otros dispositivos.<br/><br/>Le recomendamos que guarde su clave de recuperación en un lugar a salvo y seguro antes de seguir.",
   "recoveryPasswordHidePermanentlyDescription2": "¿Está seguro que desea ocultar permanentemente su contraseña de recuperación en este dispositivo? Esto no se puede deshacer.",
   "recoveryPasswordHideRecoveryPassword": "Ocultar Clave de Recuperación",
+  "recoveryPasswordHideRecoveryPasswordDescription": "Oculta permanentemente tu clave de recuperación en este dispositivo.",
   "recoveryPasswordRestoreDescription": "Ingrese su clave de recuperación para cargar su cuenta. Si no la ha guardado, puede encontrarla en la configuración de la aplicación.",
   "recoveryPasswordView": "Ver contraseña",
   "recoveryPasswordWarningSendDescription": "Esta es tu contraseña de recuperación. Si la envías a alguien, tendrá acceso completo a tu cuenta.",
@@ -704,6 +726,7 @@
   "searchContacts": "Buscar contactos",
   "searchConversation": "Buscar en la conversación",
   "searchEnter": "Por favor, introduce el término de búsqueda.",
+  "searchMatches": "{count, plural, one [{found_count} de # resultado] other [{found_count} de # resultados]}",
   "searchMatchesNone": "No se han encontrado resultados.",
   "searchMatchesNoneSpecific": "No se encontraron resultados para «{query}»",
   "searchMembers": "Buscar miembros",
@@ -742,6 +765,7 @@
   "theError": "Error",
   "tryAgain": "Intentar de nuevo",
   "typingIndicators": "Indicadores de escribiendo",
+  "typingIndicatorsDescription": "Ver y compartir el indicador de escritura.",
   "undo": "Deshacer",
   "unknown": "Desconocido",
   "updateApp": "Actualizaciones de la aplicación",
