--- a/_locales/fa/messages.json
+++ b/_locales/fa/messages.json
@@ -142,6 +142,7 @@
   "callsInProgress": "تماس در حال انجام است",
   "callsIncoming": "تماس ورودی از {name}",
   "callsIncomingUnknown": "تماس ورودی",
+  "callsMicrophonePermissionsRequired": "شما یک تماس از <b>{name}</b> از دست دادید چون هنوز مجوز <b>دسترسی به میکروفون</b> را صادر نکرده اید.",
   "callsMissed": "تماس بی‌پاسخ",
   "callsMissedCallFrom": "تماس از دست رفته از {name}",
   "callsNotificationsRequired": "تماس‌های صوتی و تصویری نیاز به فعال‌سازی اعلان‌ها در تنظیمات سیستم دستگاه شما دارند.",
@@ -198,6 +199,7 @@
   "communityInvitation": "دعوت انجمن",
   "communityJoin": "پیوستن به انجمن",
   "communityJoinDescription": "آیا مطمئن هستید که می‌خواهید به {community_name} بپیوندید؟",
+  "communityJoinError": "پیوستن به انجمن ناموفق بود",
   "communityJoinOfficial": "یا به یکی از این‌ها بپیوندید…",
   "communityJoined": "پیوستن به انجمن",
   "communityJoinedAlready": "شما قبلا عضو این گروه شده اید.",
@@ -391,11 +393,12 @@
   "groupInviteSending": "ارسال دعوت نامه",
   "groupInviteSent": "دعوت نامه ارسال شد",
   "groupInviteSuccessful": "دعوت به گروه موفقیت‌آمیز بود",
+  "groupInviteVersion": "کاربران باید آخرین نسخه را داشته باشند تا دعوت‌نامه دریافت کنند",
   "groupInviteYou": "<b>شما</b> برای پیوستن به گروه دعوت شدید.",
   "groupInviteYouAndMoreNew": "از <b>شما</b> و <b>{count} سایرین </b> دعوت شده است تا به گروه بپیوندید.",
   "groupInviteYouAndOtherNew": "از <b>شما</b> و <b>{other_name}</b> دعوت شده است تا به گروه بپیوندید.",
   "groupLeave": "ترک کردن گروه",
-  "groupLeaveDescription": "آیا مطمئن هستید که می‌خواهید {group_name} را ترک کنید؟",
+  "groupLeaveDescription": "آیا مطمئن هستید که می‌خواهید </b>{group_name}<b> را ترک کنید؟",
   "groupLeaveDescriptionAdmin": "ایا مطمین هستید می خواهید <b>{group_name}</b> را ترک کنید؟ <br/><br/>این کار باعث حذف همه ی اعضا و پاک شدن تمام محتوای گروه خواهد شد.",
   "groupLeaveErrorFailed": "ترک {group_name} ناموفق بود",
   "groupLegacyBanner": "گروه‌ها ارتقا یافته‌اند، یک گروه جدید ایجاد کنید تا ارتقا دهید. عملکرد گروه قدیمی از {date} کاهش می‌یابد.",
