--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -142,6 +142,7 @@
   "callsInProgress": "Appel en cours",
   "callsIncoming": "Appel entrant de {name}",
   "callsIncomingUnknown": "Appel entrant",
+  "callsMicrophonePermissionsRequired": "Vous avez manqué un appel de <b>{name}</b> car vous n'avez pas accordé l'accès au <b>microphone</b>.",
   "callsMissed": "Appel manqué",
   "callsMissedCallFrom": "Appel manqué de {name}",
   "callsNotificationsRequired": "Les appels vocaux et vidéos nécessitent que les notifications soient activées dans les paramètres système de votre appareil.",
@@ -198,6 +199,7 @@
   "communityInvitation": "Invitation à rejoindre une communauté",
   "communityJoin": "Rejoindre la communauté",
   "communityJoinDescription": "Êtes-vous sûr de vouloir rejoindre {community_name} ?",
+  "communityJoinError": "Impossible de rejoindre la communauté",
   "communityJoinOfficial": "Ou rejoignez un de ceux-ci...",
   "communityJoined": "Communauté rejointe",
   "communityJoinedAlready": "Vous êtes déjà membre de cette communauté.",
@@ -391,6 +393,7 @@
   "groupInviteSending": "Envoi de l'invitation",
   "groupInviteSent": "Invitation envoyée",
   "groupInviteSuccessful": "Invitation de groupe réussie",
+  "groupInviteVersion": "Les utilisateurs doivent avoir la dernière version pour recevoir des invitations",
   "groupInviteYou": "<b>Vous</b> avez été invité(e) à rejoindre le groupe.",
   "groupInviteYouAndMoreNew": "<b>Vous</b> et <b>{count} autres</b> ont rejoint le groupe.",
   "groupInviteYouAndOtherNew": "<b>Vous</b> et <b>{other_name}</b> ont rejoint le groupe.",
