--- a/_locales/gl/messages.json
+++ b/_locales/gl/messages.json
@@ -155,6 +155,7 @@
   "cameraGrantAccessDescription": "{app_name} necesita acceder á cámara para tirar fotografías e facer vídeos ou escanear códigos QR.",
   "cameraGrantAccessQr": "{app_name} necesita acceder á cámara para escanear códigos QR",
   "cancel": "Cancelar",
+  "changePasswordFail": "Non se puido cambiar o contrasinal",
   "clear": "Limpar",
   "clearAll": "Limpar todo",
   "clearDataAll": "Eliminar todos os datos",
@@ -184,7 +185,7 @@
   "communityErrorDescription": "Ups, produciuse un erro. Por favor, ténteo de novo máis tarde.",
   "communityInvitation": "Invitación á Comunidade",
   "communityJoin": "Unirse á Comunidade",
-  "communityJoinDescription": "Tes a certeza de querer entrar en <b>{community_name}</b>?",
+  "communityJoinDescription": "Tes a certeza de querer entrar en {community_name}?",
   "communityJoinOfficial": "Ou únete a algunha destas...",
   "communityJoined": "Uníronse á Comunidade",
   "communityJoinedAlready": "Xa es membro desta comunidade.",
@@ -210,6 +211,7 @@
   "conversationsAddedToHome": "Engadido á pantalla de inicio",
   "conversationsAudioMessages": "Mensaxes de audio",
   "conversationsAutoplayAudioMessage": "Reproducir automaticamente as mensaxes de audio",
+  "conversationsAutoplayAudioMessageDescription": "Reproducir automaticamente as mensaxes de audio enviadas consecutivamente",
   "conversationsBlockedContacts": "Contactos bloqueados",
   "conversationsCommunities": "Comunidades",
   "conversationsDelete": "Borrar conversa",
@@ -362,6 +364,8 @@
   "groupInviteSuccessful": "Convite ao grupo enviado con éxito",
   "groupInviteYou": "<b>Ti</b> foste invitado a unirte ao grupo.",
   "groupLeave": "Abandonar grupo",
+  "groupLeaveDescription": "Tes a certeza de querer abandonar <b>{group_name}</b>?",
+  "groupLeaveDescriptionAdmin": "Tes a certeza de querer abandonar <b>{group_name}</b>?<br/><br/> Isto desactivará o grupo para todos os membros.",
   "groupLeaveErrorFailed": "Non se puido abandonar {group_name}",
   "groupLegacyBanner": "Os grupos foron modernizados, crea un novo grupo para actualizar. A funcionalidade dos antigos reséntase a partir de {date}.",
   "groupMemberLeft": "<b>{name}</b> abandonou o grupo.",
@@ -413,6 +417,7 @@
   "leaving": "Abandonando...",
   "legacyGroupMemberNewMultiple": "<b>{name}</b> e <b>{count} máis</b> uníronse ao grupo.",
   "legacyGroupMemberTwoNew": "<b>{name}</b> e <b>{other_name}</b> uníronse ao grupo.",
+  "legacyGroupMemberYouNew": "<b>You</b> uniuse ao grupo.",
   "linkPreviews": "Previsualizacións de ligazóns",
   "linkPreviewsDescription": "Mostrar vistas previas para ligazóns soportadas.",
   "linkPreviewsEnable": "Activar previsualizacións das ligazóns",
@@ -422,7 +427,7 @@
   "linkPreviewsSend": "Enviar previsualizacións das ligazóns.",
   "linkPreviewsSendModalDescription": "Non terás protección completa de metadatos ao enviar previsualizacións de ligazóns.",
   "linkPreviewsTurnedOff": "Previsualizacións de ligazóns desactivadas",
-  "linkPreviewsTurnedOffDescription": "{app_name} debe contactar con webs para xerar previsualizacións das ligazóns que envías e recibes.<br><br>Podes activalas nos axustes de {app_name}.",
+  "linkPreviewsTurnedOffDescription": "{app_name} debe contactar con webs para xerar previsualizacións das ligazóns que envías e recibes.<br/><br/>Podes activalas nos axustes de {app_name}.",
   "loadAccount": "Cargar conta",
   "loadAccountProgressMessage": "Cargando a túa conta",
   "loading": "Cargando...",
@@ -624,6 +629,7 @@
   "recoveryPasswordWarningSendDescription": "Este é o teu contrasinal de recuperación. Se llo envías a alguén, terá acceso completo á túa conta.",
   "redo": "Refacer",
   "remove": "Eliminar",
+  "removePasswordFail": "Non se puido cambiar o contrasinal",
   "reply": "Responder",
   "resend": "Reenviar",
   "resolving": "Cargando información do país...",
@@ -673,6 +679,7 @@
   "showLess": "Mostrar menos",
   "stickers": "Adhesivos",
   "supportGoTo": "Ir á páxina de asistencia",
+  "systemInformationDesktop": "Información do sistema: {information}",
   "theContinue": "Continuar",
   "theDefault": "Por defecto",
   "theError": "Erro",
