--- a/_locales/hi/messages.json
+++ b/_locales/hi/messages.json
@@ -8,6 +8,7 @@
   "accountIdErrorInvalid": "यह Account ID अमान्य है। कृपया जांचें और पुनः प्रयास करें।",
   "accountIdOrOnsEnter": "Enter Account ID or ONS",
   "accountIdOrOnsInvite": "Account ID या ONS आमंत्रित करें",
+  "accountIdShare": "अरे, मैं पूर्ण गोपनीयता और सुरक्षा के साथ चैट करने के लिए {app_name} का उपयोग कर रहा हूँ। मेरे साथ जुड़ें! मेरी Account ID है<br/><br/>{account_id}<br/><br/>इसे डाउनलोड करें {session_download_url}",
   "accountIdYours": "आपका खाता ID",
   "accountIdYoursDescription": "यह आपका Account ID है। अन्य उपयोगकर्ता आपके साथ बातचीत शुरू करने के लिए इसे स्कैन कर सकते हैं।",
   "actualSize": "वास्तविक आकार",
@@ -95,6 +96,7 @@
   "attachmentsMoveAndScale": "स्थानांतरण और स्केल",
   "attachmentsNa": "N/A",
   "attachmentsNotification": "{emoji} अटैचमेंट",
+  "attachmentsNotificationGroup": "{author}: {emoji} संलग्नक",
   "attachmentsResolution": "रिज़ॉल्यूशन:",
   "attachmentsSaveError": "फाइल सेव करने में असमर्थ",
   "attachmentsSendTo": "{name} को भेजें",
@@ -140,6 +142,7 @@
   "callsInProgress": "कॉल प्रगति पर है",
   "callsIncoming": "आ रहे हैं {name} से कॉल",
   "callsIncomingUnknown": "आने वाली कॉल",
+  "callsMicrophonePermissionsRequired": "आपको <b>{name}</b> से कॉल छूट गया क्योंकि आपने <b>माइक्रोफोन एक्सेस</b> की अनुमति नहीं दी है।",
   "callsMissed": "मिस कॉल",
   "callsMissedCallFrom": "{name} से छूटी हुई कॉल",
   "callsNotificationsRequired": "वॉइस और वीडियो कॉल के लिए आपके डिवाइस सिस्टम सेटिंग्स में नोटिफिकेशन सक्षम होना आवश्यक है।",
@@ -152,6 +155,7 @@
   "callsVoiceAndVideo": "वॉइस और वीडियो कॉल",
   "callsVoiceAndVideoBeta": "वॉइस और वीडियो कॉल (बीटा)",
   "callsVoiceAndVideoModalDescription": "अपने खाते में एन्क्रिप्टेड संदेश भेजते समय आपका IP आपके कॉल पार्टनर और Oxen Foundation सर्वर को दिखाई देगा।",
+  "callsVoiceAndVideoToggleDescription": "अन्य उपयोगकर्ताओं से और उनके लिए आवाज और वीडियो कॉल सक्षम करता है।",
   "callsYouCalled": "आपने {name} को कॉल किया",
   "callsYouMissedCallPermissions": "आपको <b>प्राइवेसी सेटिंग्स</b> में <b>वॉइस और वीडियो कॉल्स</b> सक्षम नहीं करने के कारण <b>{name}</b> से कॉल छूट गया।",
   "cameraErrorNotFound": "कोई कैमरा नहीं मिला",
@@ -184,6 +188,7 @@
   "clearMessagesNoteToSelfDescription": "क्या आप वाकई अपने डिवाइस से सभी Note to Self संदेश साफ़ करना चाहते हैं?",
   "close": "बंद करे",
   "closeWindow": "विंडो बंद करें",
+  "commitHashDesktop": "कमिट हैश: {hash}",
   "communityBanDeleteDescription": "यह चयनित उपयोगकर्ता को इस समुदाय से प्रतिबंधित कर देगा और उनके सभी संदेश हटा देगा। क्या आप वाकई जारी रखना चाहते हैं?",
   "communityBanDescription": "यह चयनित उपयोगकर्ता को इस समुदाय से प्रतिबंधित कर देगा । क्या आप वाकई जारी रखना चाहते हैं?",
   "communityEnterUrl": "Community URL दर्ज करें",
@@ -194,6 +199,7 @@
   "communityInvitation": "सामुदायिक निमंत्रण",
   "communityJoin": "Community में शामिल हों",
   "communityJoinDescription": "क्या आप वाकई {community_name} में शामिल होना चाहते हैं?",
+  "communityJoinError": "समुदाय में शामिल होना विफल रहा",
   "communityJoinOfficial": "या इनमें से एक को जोड़ें...",
   "communityJoined": "Community में शामिल हो गए",
   "communityJoinedAlready": "आप पहले से ही इस समुदाय के सदस्य हैं।",
@@ -240,6 +246,7 @@
   "conversationsSendWithEnterKeyDescription": "एन्टर कुंजी को दबाने से संदेश भेजा जाएगा नई लाइन शुरू करने से बजाय।",
   "conversationsSettingsAllMedia": "सभी मीडिया",
   "conversationsSpellCheck": "वर्तनी की जाँच",
+  "conversationsSpellCheckDescription": "संदेश टाइप करते समय वर्तनी जांच सक्षम करें।",
   "conversationsStart": "वार्तालाप शुरू करें",
   "copied": "कॉपी किया गया!",
   "copy": "कॉपी करें",
@@ -301,7 +308,7 @@
   "disappearingMessagesDisappearAfterSendDescription": "संदेश भेजे जाने के बाद हट जाते हैं।",
   "disappearingMessagesDisappearAfterSendState": "भेजने के बाद गायब हो जाएगा - {time}",
   "disappearingMessagesFollowSetting": "अनुसरण सेटिंग",
-  "disappearingMessagesFollowSettingOff": "आपके द्वारा भेजे गए संदेश अब गायब नहीं होंगे। क्या आप वाकई <b> बंद </ b> गायब संदेश बंद करना चाहते हैं?",
+  "disappearingMessagesFollowSettingOff": "आपके द्वारा भेजे गए संदेश अब गायब नहीं होंगे। क्या आप वाकई <b> बंद </b> गायब संदेश बंद करना चाहते हैं?",
   "disappearingMessagesFollowSettingOn": "क्या आप अपने संदेशों को <b>{time}</b> के बाद गायब होने के लिए सेट करना चाहते हैं जब वे <b>{disappearing_messages_type}</b> हो?",
   "disappearingMessagesLegacy": "{name} पुराने क्लाइंट का उपयोग कर रहे हैं। गायब होने वाले संदेश उम्मीद के मुताबिक काम नहीं कर सकते हैं।",
   "disappearingMessagesOnlyAdmins": "केवल समूह व्यवस्थापक इस सेटिंग को बदल सकते हैं।",
@@ -310,6 +317,7 @@
   "disappearingMessagesSetYou": "<b>आप</b> ने {disappearing_messages_type} किए गए संदेशों को {time} के बाद गायब करने के लिए सेट किया है।",
   "disappearingMessagesTimer": "Timer",
   "disappearingMessagesTurnedOff": "<b>{name}</b> ने गायब होने वाले संदेशों को बंद कर दिया है। जो संदेश वे भेजेंगे, वे अब और नहीं गायब होंगे।",
+  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> ने गायब संदेश <b>बंद</b> किए हैं।",
   "disappearingMessagesTurnedOffYou": "<b>आप</b> ने गायब संदेशों को <b>बंद</b> कर दिया है। जो संदेश आप भेजते हैं, वे अब और नहीं गायब होंगे।",
   "disappearingMessagesTurnedOffYouGroup": "<b>आप</b> ने <b>गायब होने वाले संदेश</b> बंद कर दिए हैं।",
   "disappearingMessagesTypeRead": "पढ़ें",
@@ -385,11 +393,13 @@
   "groupInviteSending": "निमंत्रण भेजा जा रहा है",
   "groupInviteSent": "आमंत्रण भेजा गया",
   "groupInviteSuccessful": "समूह आमंत्रण सफल",
+  "groupInviteVersion": "निमंत्रण प्राप्त करने के लिए उपयोगकर्ताओं के पास नवीनतम रिलीज़ होनी चाहिए",
   "groupInviteYou": "<b>आप</b> को समूह में शामिल होने के लिए आमंत्रित किया गया था।",
   "groupInviteYouAndMoreNew": "<b>आप</b> और <b>{count} अन्य</b> समूह में शामिल हुए।",
   "groupInviteYouAndOtherNew": "<b>आप</b> और <b>{other_name}</b> समूह में शामिल हुए।",
   "groupLeave": "ग्रुप को छोड़ें",
-  "groupLeaveDescription": "क्या आप वाकई {group_name} छोड़ना चाहते हैं?",
+  "groupLeaveDescription": "क्या आप वाकई <b>{group_name}</b> छोड़ना चाहते हैं?",
+  "groupLeaveDescriptionAdmin": "क्या आप वाकई <b>{group_name}</b> छोड़ना चाहते हैं?<br/><br/>इससे सभी सदस्यों को हटा दिया जाएगा और सभी समूह सामग्री को हटा दिया जाएगा।",
   "groupLeaveErrorFailed": "{group_name} छोड़ने में विफल",
   "groupLegacyBanner": "समूहों को अपग्रेड किया गया है, अपग्रेड करने के लिए एक नया समूह बनाएं। पुरानी समूह कार्यक्षमता {date} से कमजोर हो जाएगी।",
   "groupMemberLeft": "<b>{name}</b> ने समूह छोड़ दिया।",
@@ -401,6 +411,8 @@
   "groupMemberNewHistoryTwo": "<b>{name}</b> और <b>{other_name}</b> को समूह में शामिल होने के लिए आमंत्रित किया गया। चैट इतिहास साझा किया गया।",
   "groupMemberNewMultiple": "<b>{name}</b> और <b>{count} अन्य</b> को समूह में शामिल होने के लिए आमंत्रित किया गया।",
   "groupMemberNewTwo": "<b>{name}</b> और <b>{other_name}</b> को समूह में शामिल होने के लिए आमंत्रित किया गया था।",
+  "groupMemberNewYouHistoryMultiple": "<b>आप</b> और <b>{count} अन्य</b> को समूह में शामिल होने के लिए आमंत्रित किया गया। चैट इतिहास साझा किया गया।",
+  "groupMemberNewYouHistoryTwo": "<b>आप</b> और <b>{name}</b> को समूह में शामिल होने के लिए आमंत्रित किया गया। चैट इतिहास साझा किया गया।",
   "groupMemberYouLeft": "<b>आप</b> ने समूह छोड़ दिया।",
   "groupMembers": "समूह के सदस्य",
   "groupMembersNone": "इस समूह में कोई अन्य सदस्य नहीं है।",
@@ -424,6 +436,8 @@
   "groupRemovedMultiple": "<b>{name}</b> और <b>{count} अन्य</b> समूह से हटा दिए गए।",
   "groupRemovedTwo": "<b>{name}</b> और <b>{other_name}</b> समूह से हटा दिए गए।",
   "groupRemovedYou": "आपको <b>{group_name}</b> से हटा दिया गया है।",
+  "groupRemovedYouMultiple": "<b>आप</b> और <b>{count} अन्य</b> को समूह से हटा दिया गया।",
+  "groupRemovedYouTwo": "<b>आप</b> और <b>{other_name}</b> को समूह से हटा दिया गया।",
   "groupSetDisplayPicture": "समूह डिस्प्ले तस्वीर सेट करें",
   "groupUnknown": "अनजान समूह",
   "groupUpdated": "समूह अपडेट किया गया",
@@ -438,6 +452,7 @@
   "helpSupport": "सहायता",
   "helpWedLoveYourFeedback": "हमें आपकी प्रतिक्रिया पसंद आएगी",
   "hide": "छिपाएँ",
+  "hideMenuBarDescription": "सिस्टम मेनू बार दृश्यता टॉगल करें",
   "hideOthers": "बाकियों को छुपाएं",
   "image": "तस्वीर",
   "incognitoKeyboard": "गुप्त कीबोर्ड",
@@ -450,7 +465,7 @@
   "leave": "छोड़ें",
   "leaving": "छोड़ना...",
   "legacyGroupMemberNew": "<b>{name}</b> समूह में शामिल हुए ",
-  "legacyGroupMemberNewMultiple": "<b>{name} और <b>{count} अन्य</b> समूह में शामिल हुए।",
+  "legacyGroupMemberNewMultiple": "<b>{name}</b> और <b>{count} अन्य</b> समूह में शामिल हुए।",
   "legacyGroupMemberNewYouMultiple": "<b>आप</b> और <b>{count} अन्य</b> समूह में शामिल हुए।",
   "legacyGroupMemberNewYouOther": "<b>आप</b> और <b>{other_name}</b> समूह में शामिल हुए",
   "legacyGroupMemberTwoNew": "<b>{name}</b> और <b>{other_name}</b> समूह में शामिल हुए।",
@@ -511,6 +526,7 @@
   "messageRequestYouHaveAccepted": "आपने <b>{name}</b> से संदेश अनुरोध स्वीकार कर लिया है।",
   "messageRequestsAcceptDescription": "इस उपयोगकर्ता को संदेश भेजना स्वचालित रूप से उनके संदेश अनुरोध को स्वीकार करेगा और आपकी खाता आईडी को प्रकट करेगा।",
   "messageRequestsAccepted": "आपका संदेश अनुरोध स्वीकृत कर दिया गया है।",
+  "messageRequestsClearAllExplanation": "क्या आप वाकई सभी संदेश अनुरोध और समूह निमंत्रण साफ़ करना चाहते हैं?",
   "messageRequestsCommunities": "सामुदायिक संदेश अनुरोध",
   "messageRequestsCommunitiesDescription": "Community वार्तालापों से संदेश अनुरोधों की अनुमति दें।",
   "messageRequestsDelete": "क्या आप वाकई इस संदेश अनुरोध को हटाना चाहते हैं?",
@@ -518,6 +534,7 @@
   "messageRequestsNonePending": "कोई लंबित संदेश अनुरोध नहीं",
   "messageRequestsTurnedOff": "<b>{name}</b> ने Community वार्ताओं से संदेश अनुरोध बंद कर दिया है, इसलिए आप उन्हें संदेश नहीं भेज सकते।",
   "messageSelect": "संदेश चुनें",
+  "messageSnippetGroup": "{author}: {message_snippet}",
   "messageStatusFailedToSend": "भेजने में विफल",
   "messageStatusFailedToSync": "सिंक करने में विफल",
   "messageStatusSyncing": "सिंक हो रहा है",
@@ -530,6 +547,7 @@
   "messages": "संदेश",
   "minimize": "छोटा करें",
   "next": "अगला",
+  "nicknameDescription": "<b>{name}</b> के लिए एक उपनाम चुनें। यह आपके एक-से-एक और समूह वार्तालापों में आपको दिखाई देगा।",
   "nicknameEnter": "उपनाम चुनें",
   "nicknameRemove": "उपनाम हटाएं",
   "nicknameSet": "उपनाम सेट करें",
@@ -553,6 +571,7 @@
   "notificationsGoToDevice": "डिवाइस अधिसूचना सेटिंग्स पर जाएं",
   "notificationsHeaderAllMessages": "सूचनाएं - सभी",
   "notificationsHeaderMentionsOnly": "सूचनाएं - केवल उल्लेख",
+  "notificationsHeaderMute": "सूचनाएं - बंद",
   "notificationsIosGroup": "{name} ने {conversation_name} को",
   "notificationsIosRestart": "हो सकता है कि आपका {device} पुनरारंभ होने के दौरान आपको संदेश प्राप्त हुए हों।",
   "notificationsLedColor": "LED रंग",
@@ -578,6 +597,9 @@
   "onboardingAccountCreate": "नया खाता बनाएं",
   "onboardingAccountCreated": "खाता आईडी कॉपी की गई",
   "onboardingAccountExists": "मेरा खाता है",
+  "onboardingBackAccountCreation": "आप आगे नहीं जा सकते हैं। अपना खाता निर्माण रद्द करने के लिए, {app_name} को छोड़ना होगा।",
+  "onboardingBackLoadAccount": "आप आगे नहीं जा सकते हैं। अपना खाता लोड करना रोकने के लिए, {app_name} को छोड़ना होगा।",
+  "onboardingBubbleCreatingAnAccountIsEasy": "एक खाता बनाना तात्कालिक, मुफ्त, और गुमनाम है {emoji}",
   "onboardingBubbleNoPhoneNumber": "आपको साइन अप करने के लिए फ़ोन नंबर की भी आवश्यकता नहीं है।",
   "onboardingBubblePrivacyInYourPocket": "आपकी जेब में गोपनीयता।",
   "onboardingBubbleSessionIsEngineered": "{app_name} आपकी गोपनीयता की रक्षा के लिए बनाया गया है।",
@@ -605,6 +627,7 @@
   "passwordCurrentIncorrect": "आपका वर्तमान पासवर्ड गलत है।",
   "passwordDescription": "{app_name} को अनलॉक करने के लिए पासवर्ड की आवश्यकता है।",
   "passwordEnter": "पासवर्ड दर्ज करें",
+  "passwordEnterCurrent": "कृपया अपना वर्तमान पासवर्ड दर्ज करें",
   "passwordEnterNew": "कृपया अपना नया पासवर्ड दर्ज करें",
   "passwordError": "पासवर्ड में केवल अक्षर, संख्याएं और प्रतीक होने चाहिए",
   "passwordErrorLength": "पासवर्ड 6 से 64 वर्णों के बीच होना चाहिए",
@@ -627,10 +650,14 @@
   "permissionsKeepInSystemTrayDescription": "{app_name} तब भी पृष्ठभूमि में चलता रहता है जब आप विंडो बंद करते हैं",
   "permissionsLibrary": "{app_name} को जारी रखने के लिए फ़ोटो लाइब्रेरी पहुंच की आवश्यकता है। आप iOS सेटिंग्स में पहुंच सक्षम कर सकते हैं।",
   "permissionsMicrophone": "माइक्रोफ़ोन",
+  "permissionsMicrophoneAccessRequired": "{app_name} को कॉल करने और ऑडियो संदेश भेजने के लिए माइक्रोफ़ोन अनुमति की आवश्यकता है, लेकिन इसे स्थायी रूप से मना कर दिया गया है। सेटिंग्स -> अनुमतियां पर टैप करें, और \"माइक्रोफ़ोन\" चालू करें।",
   "permissionsMicrophoneAccessRequiredDesktop": "आप {app_name} की गोपनीयता सेटिंग्स में माइक्रोफ़ोन एक्सेस सक्षम कर सकते हैं",
   "permissionsMicrophoneAccessRequiredIos": "कॉल करने और ऑडियो संदेश रिकॉर्ड करने के लिए {app_name} को माइक्रोफोन एक्सेस की आवश्यकता है।",
+  "permissionsMicrophoneDescription": "माइक्रोफ़ोन तक पहुंच की अनुमति दें।",
   "permissionsMusicAudio": "{app_name} को फ़ाइलें, संगीत और ऑडियो भेजने के लिए संगीत और ऑडियो एक्सेस की आवश्यकता है।",
   "permissionsRequired": "अनुमति की आवश्यकता",
+  "permissionsStorageDenied": "{app_name} को फ़ोटो और वीडियो भेजने के लिए फोटो लाइब्रेरी अनुमति की आवश्यकता है, लेकिन इसे स्थायी रूप से मना कर दिया गया है। सेटिंग्स -> अनुमतियां पर टैप करें, और \"फ़ोटो और वीडियो\" चालू करें।",
+  "permissionsStorageDeniedLegacy": "{app_name} को अटैचमेंट भेजने और सहेजने के लिए स्टोरेज अनुमति की आवश्यकता है। सेटिंग्स -> अनुमतियां पर टैप करें, और \"स्टोरेज\" चालू करें।",
   "permissionsStorageSave": "{app_name} को अनुलग्नक और मीडिया को सहेजने के लिए संग्रहण पहुंच चाहिए।",
   "permissionsStorageSaveDenied": "फ़ोटो और वीडियो सहेजने के लिए {app_name} को संग्रहण पहुंच चाहिए, लेकिन इसे स्थायी रूप से मना कर दिया गया है। कृपया ऐप सेटिंग्स पर जाकर, \"अनुमतियां\" चुनें और \"संग्रहण\" सक्षम करें।",
   "permissionsStorageSend": "{app_name} को फ़ोटो और वीडियो भेजने के लिए संग्रहण पहुंच चाहिए।",
@@ -663,6 +690,7 @@
   "recoveryPasswordBannerTitle": "अपना रिकवरी पासवर्ड सहेजें",
   "recoveryPasswordDescription": "अपना अकाउंट नए डिवाइस पर लोड करने के लिए अपने रिकवरी पासवर्ड का उपयोग करें।<br/><br/>आपका अकाउंट आपके रिकवरी पासवर्ड के बिना पुनर्प्राप्त नहीं किया जा सकता है। सुनिश्चित करें कि इसे कहीं सुरक्षित रखें और इसे किसी के साथ साझा न करें।",
   "recoveryPasswordEnter": "अपना पुनर्प्राप्ति पासवर्ड दर्ज करें",
+  "recoveryPasswordErrorLoad": "आपके पुनर्प्राप्ति पासवर्ड को लोड करने का प्रयास करते समय एक त्रुटि हुई।<br/><br/>कृपया अपनी लॉग निर्यात करें, फिर इस समस्या को हल करने में मदद के लिए फ़ाइल को Session की हेल्प डेस्क के माध्यम से अपलोड करें।",
   "recoveryPasswordErrorMessageGeneric": "Please check your recovery password and try again.",
   "recoveryPasswordErrorMessageIncorrect": "आपके पुनर्प्राप्ति पासवर्ड के कुछ शब्द गलत हैं। कृपया जांच कर पुनः प्रयास करें।",
   "recoveryPasswordErrorMessageShort": "The Recovery Password you entered is not long enough. Please check and try again.",
@@ -672,6 +700,7 @@
   "recoveryPasswordHidePermanentlyDescription1": "बिना अपने रिकवरी पासवर्ड के, आप अपने खाते को नए उपकरणों पर लोड नहीं कर सकते। <br/><br/>हम दृढ़ता से अनुशंसा करते हैं कि आप जारी रखने से पहले अपने रिकवरी पासवर्ड को सुरक्षित और सुरक्षित स्थान पर सहेज लें।",
   "recoveryPasswordHidePermanentlyDescription2": "क्या आप वाकई अपने रिकवरी पासवर्ड को इस डिवाइस पर स्थायी रूप से छिपाना चाहते हैं? इसे पूर्ववत नहीं किया जा सकता है।",
   "recoveryPasswordHideRecoveryPassword": "Recovery Password छुपाएं",
+  "recoveryPasswordHideRecoveryPasswordDescription": "इस डिवाइस पर अपने पुनर्प्राप्ति पासवर्ड को स्थायी रूप से छिपाएँ।",
   "recoveryPasswordRestoreDescription": "अपना खाता लोड करने के लिए अपना पुनर्प्राप्ति पासवर्ड दर्ज करें। यदि आपने इसे सहेजा नहीं है, तो आप इसे अपने ऐप सेटिंग्स में पा सकते हैं।",
   "recoveryPasswordView": "पासवर्ड देखें",
   "recoveryPasswordWarningSendDescription": "यह आपका पुनर्प्राप्ति वाक्यांश है। अगर आप इसे किसी को भेजते हैं तो उनके पास आपके खाते की पूरी पहुंच होगी।",
@@ -697,6 +726,7 @@
   "searchContacts": "संपर्क खोजें",
   "searchConversation": "संभाषण खोजें",
   "searchEnter": "Please enter your search.",
+  "searchMatches": "{count, plural, one [{found_count} में से # मिलान] other [{found_count} में से # मिलान]}",
   "searchMatchesNone": "कोई परिणाम नहीं मिला।",
   "searchMatchesNoneSpecific": "{query} के लिए कोई परिणाम नहीं मिला",
   "searchMembers": "सदस्यों को खोजें",
@@ -720,18 +750,22 @@
   "set": "सेट करें",
   "settingsRestartDescription": "अपनी नई सेटिंग्स लागू करने के लिए आपको {app_name} पुनः प्रारंभ करना होगा।",
   "share": "शेयर करें",
+  "shareAccountIdDescription": "अपने मित्र को अपने साथ {app_name} पर चैट करने के लिए Account ID साझा करके आमंत्रित करें।",
   "shareAccountIdDescriptionCopied": "अपने दोस्तों के साथ वहां साझा करें जहां आप आमतौर पर उनसे बात करते हैं - फिर यहां बातचीत को स्थानांतरित करें।",
   "shareExtensionDatabaseError": "डेटाबेस खोलने में समस्या हो रही है। कृपया एप्लिकेशन को पुनः प्रारंभ करें और फिर से कोशिश करें।",
+  "shareToSession": "{app_name} को साझा करें",
   "show": "दिखाएं",
   "showAll": "सभी को दिखाएं",
   "showLess": "कम दिखाएं",
   "stickers": "स्टिकर",
   "supportGoTo": "सहायता पेज पर जाएँ",
+  "systemInformationDesktop": "सिस्टम सूचना: {information}",
   "theContinue": "जारी रखें",
   "theDefault": "डिफ़ॉल्ट",
   "theError": "त्रुटि",
   "tryAgain": "फिर से कोशिश करो",
   "typingIndicators": "टाइपिंग सूचक",
+  "typingIndicatorsDescription": "टाइपिंग सूचक देखें और साझा करें।",
   "undo": "वापस लाएं",
   "unknown": "अनजान",
   "updateApp": "ऐप अपडेट",
