--- a/_locales/hy-AM/messages.json
+++ b/_locales/hy-AM/messages.json
@@ -71,6 +71,7 @@
   "attachmentsDownload": "Ներբեռնել կցորդը",
   "attachmentsDuration": "Տևողություն",
   "attachmentsErrorLoad": "Սխալ ֆայլի կցման ժամանակ",
+  "attachmentsErrorMediaSelection": "Չհաջողվեց կցվածքը ընտրել",
   "attachmentsErrorNoApp": "Չհաջողվեց գտնել հավելված՝ մեդիան ընտրելու համար",
   "attachmentsErrorNotSupported": "Այս ֆայլատեսակը չի աջակցվում։",
   "attachmentsErrorNumber": "Չհաջողվեց ուղարկել ավելի քան 32 նկար և վիդեո ֆայլեր։",
@@ -95,6 +96,7 @@
   "attachmentsMoveAndScale": "Տեղափոխել և չափսը",
   "attachmentsNa": "N/A",
   "attachmentsNotification": "{emoji} Կցորդ",
+  "attachmentsNotificationGroup": "{author}: {emoji} Կցորդ",
   "attachmentsResolution": "Բանալվածությունը:",
   "attachmentsSaveError": "Չհաջողվեց պահպանել ֆայլը։",
   "attachmentsSendTo": "Ուղարկել {name}֊ին",
@@ -147,6 +149,7 @@
   "callsPermissionsRequiredDescription": "Դուք կարող եք միացնել «Ձայնային և տեսազանգերի» թույլտվությունը Գաղտնիության կարգավորումներում։",
   "callsReconnecting": "Վերամիացում…",
   "callsRinging": "Զանգահարում է...",
+  "callsSessionCall": "{app_name} զանգ",
   "callsSettings": "Զանգեր (Բետա)",
   "callsVoiceAndVideo": "Ձայնային և տեսազանգեր",
   "callsVoiceAndVideoBeta": "Ձայնային և տեսազանգեր (Beta)",
@@ -195,6 +198,7 @@
   "communityInvitation": "Համայնքի հրավեր",
   "communityJoin": "Միանալ համայնքին",
   "communityJoinDescription": "Վստա՞հ եք, որ ուզում եք միանալ {community_name} համայնքին:",
+  "communityJoinError": "Չհաջողվեց միանալ համայնքին",
   "communityJoinOfficial": "Կամ միացե՛ք սրանցից մեկին…",
   "communityJoined": "Միացել ենք համայնքին",
   "communityJoinedAlready": "Դուք արդեն այս համայնքի անդամ եք։",
@@ -241,6 +245,7 @@
   "conversationsSendWithEnterKeyDescription": "Enter ստեղնը սեղմելով՝ նոր տող սկսելու փոխարեն հաղորդագրություն կուղարկվի:",
   "conversationsSettingsAllMedia": "Բոլոր մեդիաները",
   "conversationsSpellCheck": "Ուղղագրության ստուգում",
+  "conversationsSpellCheckDescription": "Միացնել ուղղագրության ստուգումը հաղորդագրություններ մուտքագրելիս:",
   "conversationsStart": "Սկսել զրույցը",
   "copied": "Պատճենվել է",
   "copy": "Պատճենել",
@@ -265,7 +270,12 @@
   "deleteAfterLegacyDisappearingMessagesLegacy": "Legacy",
   "deleteAfterLegacyDisappearingMessagesOriginal": "Անհետացող հաղորդագրությունների բնօրինակ տարբերակը:",
   "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}֊ը</b> անհետացող հաղորդագրության ժամաչափը դրեց <b>{time}</b>:",
+  "deleteAfterLegacyGroupsGroupCreation": "Խնդրում ենք սպասել, մինչ խումբը կստեղծվի...",
+  "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "Չհաջողվեց թարմացնել խումբը",
+  "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "Դուք ուրիշների հաղորդագրությունները ջնջելու թույլտվություն չունեք",
+  "deleteMessage": "{count, plural, one [Ջնջել հաղորդագրությունը] other [Ջնջել հաղորդագրությունները]}",
   "deleteMessageConfirm": "Վստա՞հ եք, որ ուզում եք ջնջել այս հաղորդագրությունը:",
+  "deleteMessageDeleted": "{count, plural, one [Հաղորդագրությունը ջնջված է] other [Հաղորդագրությունները ջնջված են]}",
   "deleteMessageDeletedGlobally": "Այս հաղորդագրությունը ջնջվել է",
   "deleteMessageDeletedLocally": "Այս հաղորդագրությունը ջնջվել է այս սարքում",
   "deleteMessageDescriptionDevice": "Վստա՞հ եք, որ ցանկանում եք ջնջել այս հաղորդագրությունը միայն այս սարքավորումից:",
@@ -292,8 +302,10 @@
   "disappearingMessagesDisappear": "Անհետանալ {disappearing_messages_type} հետո - {time}",
   "disappearingMessagesDisappearAfterRead": "Անհետանալ կարդալուց հետո",
   "disappearingMessagesDisappearAfterReadDescription": "Հաղորդագրությունները ջնջվում են ընթերցվելուց հետո։",
+  "disappearingMessagesDisappearAfterReadState": "Անհետանալ կարդալուց հետո - {time}",
   "disappearingMessagesDisappearAfterSend": "Անհետանալ ուղարկելուց հետո",
   "disappearingMessagesDisappearAfterSendDescription": "Հաղորդագրությունները ջնջվում են ուղարկվելուց հետո։",
+  "disappearingMessagesDisappearAfterSendState": "Անհետանալ ուղարկելուց հետո - {time}",
   "disappearingMessagesFollowSetting": "Հետևել կարգավորումներին",
   "disappearingMessagesFollowSettingOff": "Դուք այլևս հաղորդագրությունները ջնջվող չեն լինի: Վստահ եք, որ ցանկանում եք անջատել <b>անհետացող հաղորդագրությունները</b>։",
   "disappearingMessagesFollowSettingOn": "Ձեր հաղորդագրությունները <b>{time}</b> հետո կվերանան <b>{disappearing_messages_type}</b>-ից հետո:",
@@ -304,7 +316,9 @@
   "disappearingMessagesSetYou": "<b>Դուք</b> ֆիքսել եք հաղորդագրությունները {time} {disappearing_messages_type} հետո անհետանալու համար:",
   "disappearingMessagesTimer": "Ժամաչափ",
   "disappearingMessagesTurnedOff": "<b>{name}֊ը</b> անջատել է անհետացող հաղորդագրությունները: Նրա կողմից ուղարկված հաղորդագրությունները այլևս չեն անհետանում:",
+  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> անջատել է անհետացող հաղորդագրությունները <b>անջատված</b>:",
   "disappearingMessagesTurnedOffYou": "<b>Դուք</b> անջատեցիք անհետացող հաղորդագրությունները: Ձեր ուղարկած հաղորդագրությունները այլևս չեն անհետանում:",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Դուք</b> անջատեցիք <b>անհետացող հաղորդագրությունները</b>։",
   "disappearingMessagesTypeRead": "կարդացած է",
   "disappearingMessagesTypeSent": "ուղարկված է",
   "disappearingMessagesUpdated": "<b>{admin_name}</b>-ը թարմացրել է անհետացող հաղորդագրությունների կարգավորումները։",
@@ -337,7 +351,11 @@
   "emojiReactsClearAll": "Իսկապե՞ս ուզում եք ջնջել բոլոր {emoji}-ը:",
   "emojiReactsCoolDown": "Դանդաղեցրե՛ք։ Դուք չափազանց շատ էմոջիների արձագանքներ եք ուղարկել։ Շուտով նորից փորձեք:",
   "emojiReactsCountOthers": "{count, plural, one [Եվ # մեկն արձագանքել է {emoji} այս հաղորդագրությանը:] other [Եվ # արձագանքել են {emoji} այս հաղորդագրությանը:]}",
+  "emojiReactsHoverNameDesktop": "{name}-ը արձագանքեց {emoji_name}-ով",
+  "emojiReactsHoverNameTwoDesktop": "{name}-ը և {other_name}-ը արձագանքեցին {emoji_name}-ով",
+  "emojiReactsHoverTwoNameMultipleDesktop": "{name}-ը և <span>{count} այլ անձինք</span> արձագանքել են {emoji_name}-ով",
   "emojiReactsHoverYouNameDesktop": "Դուք արձագանքել եք {emoji_name}-ով",
+  "emojiReactsHoverYouNameMultipleDesktop": "Դուք և <span>{count} այլ անձինք</span> արձագանքել են {emoji_name}-ով",
   "emojiReactsHoverYouNameTwoDesktop": "Դուք և {name}-ը արձագանքել եք {emoji_name}-ով",
   "emojiReactsNotification": "Արձագանքել է ձեր հաղորդագրությանը {emoji}",
   "enable": "Միացնել",
@@ -376,9 +394,10 @@
   "groupInviteSuccessful": "Խմբի հրավերը հաջողությամբ ուղարկված է",
   "groupInviteVersion": "Օգտատերերը պետք է ունենան վերջին տարբերակը՝ հրավերներ ստանալու համար",
   "groupInviteYou": "<b>Դուք</b> հրավիրվել եք միանալու խմբին:",
+  "groupInviteYouAndMoreNew": "<b>Դուք</b> և <b>{count} այլ անձինք</b> հրավիրվել են միանալու խմբին:",
   "groupInviteYouAndOtherNew": "<b>Դուք</b> և <b>{other_name}</b> հրավիրվել եք միանալու խմբին:",
   "groupLeave": "Լքել խումբը",
-  "groupLeaveDescription": "Վստա՞հ եք, որ ուզում եք լքել {group_name} խումբը:",
+  "groupLeaveDescription": "Վստա՞հ եք, որ ուզում եք լքել <b>{group_name}</b> խումբը:",
   "groupLeaveDescriptionAdmin": "Իսկապե՞ս ուզում եք լքել <b>{group_name}</b>-ը:<br/><br/>Սա կհեռացնի բոլոր անդամներին և կհեռացնի խմբի բոլոր բովանդակությունները:",
   "groupLeaveErrorFailed": "Չհաջողվեց լքել {group_name} խումբը",
   "groupLegacyBanner": "Խմբերն թարմացվել են, ստեղծեք նոր խումբ՝ թարմացնելու համար: Հին խմբի ֆունկցիոնալությունը վատթարանուլ է {date}-ից:",
@@ -386,6 +405,13 @@
   "groupMemberLeftMultiple": "<b>{name}֊ը</b> և <b>{count} ուրիշներ</b> լքեցին խումբը:",
   "groupMemberLeftTwo": "<b>{name}֊ը</b> և <b>{other_name}֊ը</b> լքեցին խումբը:",
   "groupMemberNew": "<b>{name}</b> միացավ խմբին:",
+  "groupMemberNewHistory": "<b>{name}</b>֊ը հրավիրվել է միանալու խմբին: Զրույցի պատմությունը կիսվել է:",
+  "groupMemberNewHistoryMultiple": "<b>{name}</b>֊ը և <b>{count} ուրիշներ</b> հրավիրվել են միանալու խմբին: Զրույցի պատմությունը կիսվել է:",
+  "groupMemberNewHistoryTwo": "<b>{name}</b>֊ը և <b>{other_name}</b>֊ը հրավիրվել են միանալու խմբին: Զրույցի պատմությունը կիսվել է:",
+  "groupMemberNewMultiple": "<b>{name}</b>֊ը և <b>{count} ուրիշներ</b> հրավիրվել են միանալու խմբին:",
+  "groupMemberNewTwo": "<b>{name}</b>֊ը և <b>{other_name}</b>֊ը հրավիրվել են միանալու խմբին:",
+  "groupMemberNewYouHistoryMultiple": "<b>Դուք</b> և <b>{count} ուրիշներ</b> հրավիրվել են միանալու խմբին: Զրույցի պատմությունը կիսվել է:",
+  "groupMemberNewYouHistoryTwo": "<b>Դուք</b> և <b>{name}</b>֊ը հրավիրվել են միանալու խմբին: Զրույցի պատմությունը կիսվել է:",
   "groupMemberYouLeft": "<b>Դուք</b> լքեցիք խումբը:",
   "groupMembers": "Խմբի անդամներ",
   "groupMembersNone": "Այս խմբում այլ անդամներ չկան.",
@@ -409,6 +435,8 @@
   "groupRemovedMultiple": "<b>{name}֊ը</b> և <b>{count} ուրիշներ</b> հեռացվել են խմբից:",
   "groupRemovedTwo": "<b>{name}֊ը</b> և <b>{other_name}֊ը</b> հեռացվել են խմբից:",
   "groupRemovedYou": "Դուք հեռացվել եք <b>{group_name}</b> խմբից։",
+  "groupRemovedYouMultiple": "<b>Դուք</b> և <b>{count} ուրիշներ</b> հեռացվել են խմբից:",
+  "groupRemovedYouTwo": "<b>Դուք</b> և <b>{other_name}</b>֊ը հեռացվել են խմբից:",
   "groupSetDisplayPicture": "Սահմանել խմբի նկարը",
   "groupUnknown": "Անհայտ խումբ",
   "groupUpdated": "Խմբը թարմացվել է",
@@ -435,8 +463,12 @@
   "learnMore": "Իմանալ Ավելին",
   "leave": "Լքել",
   "leaving": "Լքում...",
+  "legacyGroupMemberNew": "<b>{name}</b> միացավ խմբին:",
   "legacyGroupMemberNewMultiple": "<b>{name}֊ը</b> և <b>{count} ուրիշներ</b> միացան խմբին:",
+  "legacyGroupMemberNewYouMultiple": "<b>Դուք</b> և <b>{count} ուրիշներ</b> միացան խմբին:",
+  "legacyGroupMemberNewYouOther": "<b>Դուք</b> և <b>{other_name}</b>֊ը միացան խմբին:",
   "legacyGroupMemberTwoNew": "<b>{name}֊ը</b> և <b>{other_name}֊ը</b> միացան խմբին:",
+  "legacyGroupMemberYouNew": "<b>Դուք</b> միացաք խմբին:",
   "linkPreviews": "Հղումների նախադիտումներ",
   "linkPreviewsDescription": "Ցուցադրել հղման նախադիտում աջակցվող URL-ների համար:",
   "linkPreviewsEnable": "Միացնել հղումների նախադիտումները",
@@ -465,6 +497,7 @@
   "membersActive": "{count, plural, one [# ակտիվ անդամ] other [# ակտիվ անդամներ]}",
   "membersAddAccountIdOrOns": "Ավելացնել Account ID կամ ONS",
   "membersInvite": "Հրավիրել կոնտակներին",
+  "membersInviteSend": "{count, plural, one [Ուղարկել հրավերը] other [Ուղարկել հրավերներ]}",
   "membersInviteShareDescription": "Ցանկանո՞ւմ եք կիսել խմբի հաղորդագրությունների պատմությունը <b>{name}</b>-ի հետ։",
   "membersInviteShareDescriptionMultiple": "Ցանկանո՞ւմ եք կիսել խմբի հաղորդագրությունների պատմությունը <b>{name}</b>-ի և <b>{count} այլ անձանց</b>-ի հետ։",
   "membersInviteShareDescriptionTwo": "Ցանկանո՞ւմ եք կիսել խմբի հաղորդագրությունների պատմությունը <b>{name}</b>-ի և <b>{other_name}</b>-ի հետ։",
@@ -480,6 +513,7 @@
   "messageInfo": "Հաղորդագրության մանրամասները",
   "messageMarkRead": "Նշել որպես ընթերցված",
   "messageMarkUnread": "Նշել որպես չընթերցված",
+  "messageNew": "{count, plural, one [Նոր հաղորդագրություն] other [Նոր հաղորդագրություններ]}",
   "messageNewDescriptionDesktop": "Սկսեք նոր զրույց՝ մուտքագրելով ձեր ընկերոջ Account ID կամ ONS-ը։",
   "messageNewDescriptionMobile": "Սկսեք նոր զրույց՝ մուտքագրելով ձեր ընկերոջ Account ID, ONS կամ սկանավորելով նրանց QR կոդը։",
   "messageNewYouveGot": "{count, plural, one [Դուք ունեք նոր հաղորդագրություն:] other [Դուք ունեք # նոր հաղորդագրություններ:]}",
@@ -499,6 +533,7 @@
   "messageRequestsNonePending": "Սպասող հաղորդագրությունների հարցումներ չկան",
   "messageRequestsTurnedOff": "<b>{name}֊ը</b> անջատել է հաղորդագրության հարցումները Community զրույցներից, հետևաբար դուք նրան հաղորդագրությամբ չեք կարող հասնել:",
   "messageSelect": "Ընտրել հաղորդագրությունը",
+  "messageSnippetGroup": "{author}: {message_snippet}",
   "messageStatusFailedToSend": "Չհաջողվեց ուղարկել",
   "messageStatusFailedToSync": "Չհաջողվեց համաժամացնել",
   "messageStatusSyncing": "Համաժամեցում",
@@ -506,9 +541,12 @@
   "messageVoice": "Ձայնային հաղորդագրություն",
   "messageVoiceErrorShort": "Հպեք ու պահեք ձայնային հաղորդագրություն ձայնագրելու համար",
   "messageVoiceSlideToCancel": "Սահեցրե՛ք չեղարկման համար",
+  "messageVoiceSnippet": "{emoji} Ձայնային հաղորդագրություն",
+  "messageVoiceSnippetGroup": "{author}: {emoji} Ձայնային հաղորդագրություն",
   "messages": "Հաղորդագրություններ",
   "minimize": "Փոքրացնել",
   "next": "Հաջորդը",
+  "nicknameDescription": "Ընտրեք մի մականուն <b>{name}</b>-ի համար: Սա ծրագրում ցուցադրված կլինի ձեր զրույցներում",
   "nicknameEnter": "Մուտքագրե՛ք կեղծանունը",
   "nicknameRemove": "Հեռացնել մականունը",
   "nicknameSet": "Սահմանել մականուն",
@@ -530,7 +568,9 @@
   "notificationsFastModeDescription": "Նոր հաղորդագրությունների մասին դուք անպայման և անմիջապես կտեղեկացվեք Google-ի ծանուցումների սերվերների միջոցով։",
   "notificationsFastModeDescriptionIos": "Դուք մշտապես և անմիջապես կտեղեկացվեք նոր հաղորդագրությունների մասին օգտագործելով Apple's ծանուցումների սերվերները։",
   "notificationsGoToDevice": "Գնացեք սարքի ծանուցման կարգավորումներ",
+  "notificationsHeaderAllMessages": "Ծանուցումներ - Բոլորը",
   "notificationsHeaderMentionsOnly": "Ծանուցումներ - Միայն հիշատակումների համար",
+  "notificationsHeaderMute": "Ծանուցումներ - Լռված",
   "notificationsIosGroup": "{name} {conversation_name}-ին",
   "notificationsIosRestart": "Դուք կարող եք ստանալ հաղորդագրություններ, երբ ձեր {device} վերագործարկվում էր։",
   "notificationsLedColor": "LED-ի գույն",
@@ -552,6 +592,7 @@
   "notificationsVibrate": "Թրթռոց",
   "off": "Անջատված",
   "okay": "Լավ է",
+  "on": "Միացրած",
   "onboardingAccountCreate": "Գրանցվել",
   "onboardingAccountCreated": "Հաշիվը ստեղծված է",
   "onboardingAccountExists": "Ես հաշիվ ունեմ",
@@ -561,6 +602,7 @@
   "onboardingBubbleNoPhoneNumber": "Դուք նույնիսկ հեռախոսահամար չունեք գրանցվելու համար։",
   "onboardingBubblePrivacyInYourPocket": "Գաղտնիություն ձեր գրպանում:",
   "onboardingBubbleSessionIsEngineered": "{app_name}-ը մշակված է ձեր գաղտնիությունը պահպանելու համար.",
+  "onboardingBubbleWelcomeToSession": "Բարի գալուստ {app_name} {emoji}",
   "onboardingHitThePlusButton": "Հպեք պլյուս կոճակին՝ զրույց սկսելու, խումբ ստեղծելու կամ պաշտոնական համայնքին միանալու համար:",
   "onboardingMessageNotificationExplanation": "Երկու եղանակով {app_name}-ը կարող է ձեզ տեղեկացնել նոր հաղորդագրությունների մասին:",
   "onboardingPrivacy": "Գաղտնիության քաղաքականություն",
@@ -601,16 +643,20 @@
   "permissionsAppleMusic": "{app_name}-ը պետք է օգտագործի Apple Music՝ մեդիա կցորդները նվագարկելու համար։",
   "permissionsAutoUpdate": "Ավտոմատ թարմացում",
   "permissionsAutoUpdateDescription": "Ինքնաբերաբար ստուգել թարմացումները գործարկման ժամանակ",
+  "permissionsCameraDenied": "{app_name}-ը պահանջում է տեսախցիկի հասանելիությունը, որպեսզի կարողանաք լուսանկարներ և տեսանյութեր անել, սակայն թույլտվությունը մշտապես մերժված է: Սեղմեք Կարգավորումներ -> Թույլտվություններ և միացրեք \"Տեսախցիկ\" կարգավորումը:",
   "permissionsFaceId": "{app_name}-ի էկրանային կողպման հատկությունը օգտագործում է Face ID:",
   "permissionsKeepInSystemTray": "Պահել System Tray-ում",
   "permissionsKeepInSystemTrayDescription": "{app_name} շարունակում է աշխատել ֆոնային ռեժիմում, երբ դուք փակում եք պատուհանը",
   "permissionsLibrary": "{app_name}-ը պետք է հասանելիություն ունենա լուսանկարների գրադարանին՝ շարունակելու համար։ Դուք կարող եք միացնել հասանելիությունը iOS կարգավորումների մեջ։",
   "permissionsMicrophone": "Խոսափող",
+  "permissionsMicrophoneAccessRequired": "{app_name}-ը պահանջում է խոսափողի թույլտվություն զանգեր կատարելու և ձայնային հաղորդագրություններ ուղարկելու համար, բայց այն ընդմիշտ մերժվել է: Անջատեք կարգավորումները -> Թույլտվությունները, և միացրեք «Խոսափող»։",
   "permissionsMicrophoneAccessRequiredDesktop": "Դուք կարող եք միացնել միկրոֆոնի հասանելիությունը {app_name} գաղտնիության կարգավորումներով",
   "permissionsMicrophoneAccessRequiredIos": "{app_name}-ը պահանջում է խոսափողին հասանելիություն զանգեր կատարելու և ձայնային հաղորդագրություններ արձանագրելու համար։",
+  "permissionsMicrophoneDescription": "Թույլատրել խոսափողի մուտքը:",
   "permissionsMusicAudio": "{app_name}-ը պահանջում է երաժշտության և աուդիո հասանելիությունը ֆայլեր, երաժշտություն և աուդիո ուղարկելու համար:",
   "permissionsRequired": "Անհրաժեշտ է թույլտվություն",
   "permissionsStorageDenied": "{app_name}-ը պահանջում է ֆոտո գրադարանի հասանելիությունը, որպեսզի կարողանաք ուղարկել նկարներ և տեսանյութեր, սակայն թույլտվությունը մշտապես մերժված է: Սեղմեք Կարգավորումներ -> Թույլտվություններ և միացրեք \"Նկարներ և տեսանյութեր\" կարգավորումը:",
+  "permissionsStorageDeniedLegacy": "{app_name}-ը պահանջում է պահեստավորման հասանելիությունը, որպեսզի կարողանաք ուղարկել և պահել կցորդները: Սեղմեք Կարգավորումներ -> Թույլտվություններ և միացրեք \"Պահեստավորում\" կարգավորումը:",
   "permissionsStorageSave": "{app_name}-ը պահանջում է պահեստային հասանելիություն կցորդներն ու մեդիան պահպանելու համար։",
   "permissionsStorageSaveDenied": "{app_name}-ը պահանջում է պահպանման հասանելիություն՝ լուսանկարներ և տեսանյութեր պահելու համար, բայց այն ընդմիշտ մերժվել է: Խնդրում ենք շարունակել դեպի հավելվածի կարգավորումներ, ընտրել «Թույլտվություններ», և միացնել «Պահեստավորում»։",
   "permissionsStorageSend": "{app_name}-ը պահանջում է պահեստային հասանելիություն՝ լուսանկարներ և տեսանյութեր ուղարկելու համար։",
@@ -679,6 +725,7 @@
   "searchContacts": "Որոնել կոնտակտներ",
   "searchConversation": "Որոնել զրույցները",
   "searchEnter": "Խնդրում ենք մուտքագրել ձեր որոնումը:",
+  "searchMatches": "{count, plural, one [{found_count} # համապատասխան] other [{found_count} # համապատասխանում է]}",
   "searchMatchesNone": "Արդյունքներ չեն գտնվել.",
   "searchMatchesNoneSpecific": "Արդյունք չգտնվեց «{query}»-ի համար։",
   "searchMembers": "Որոնել անդամներին",
@@ -705,22 +752,26 @@
   "shareAccountIdDescription": "Հրավիրե՛ք ձեր ընկերոջը զրուցելու ձեզ հետ {app_name}-ում՝ կիսվելով ձեր Account ID-ով.",
   "shareAccountIdDescriptionCopied": "Կիսվեք ձեր ընկերների հետ որտեղ սովորաբար խոսում եք նրանց հետ - ապա տեղափոխեք զրույցը այստեղ։",
   "shareExtensionDatabaseError": "Տվյալների բազան բացելու հետ խնդիր է առաջացել: Խնդրում ենք կրկին փորձեք:",
+  "shareToSession": "Կիսվել {app_name}-ի հետ",
   "show": "Ցուցադրել",
   "showAll": "Ցուցադրել բոլորը",
   "showLess": "Ավելի քիչ ցույց տալ",
   "stickers": "Պիտակներ",
   "supportGoTo": "Բացեք աջակցության էջը",
+  "systemInformationDesktop": "Համակարգի տեղեկությունը՝ {information}",
   "theContinue": "Շարունակել",
   "theDefault": "Սկզբնական",
   "theError": "Սխալ",
   "tryAgain": "Փորձել նորից",
   "typingIndicators": "Գրելու ինդիկատորներ",
+  "typingIndicatorsDescription": "Տեսեք և տարածեք մուտքագրման ցուցիչները.",
   "undo": "Չեղարկել",
   "unknown": "Անհայտ",
   "updateApp": "Ծրագրի թարմացումներ",
   "updateDownloaded": "Թարմացումը տեղադրված է, սեղմեք վերագործարկելու համար։",
   "updateDownloading": "Ներբեռնում թարմացումը՝ {percent_loader}%",
   "updateError": "Հնարավոր չէ թարմացնել",
+  "updateErrorDescription": "{app_name}-ը չի կարողացել թարմանալ: Խնդրում ենք անցեք {session_download_url} և ձեռքով տեղադրեք նոր տարբերակը, ապա դիմեք մեր Օգնության կենտրոնին՝ մեզ այս խնդրի մասին տեղեկացնելու համար։",
   "updateNewVersion": "Հասանելի է {app_name} նոր տարբերակը, սեղմեք թարմացնելու համար",
   "updateNewVersionDescription": "Հասանելի է {app_name} նոր տարբերակը: ",
   "updateReleaseNotes": "Կարդացեք թողարկման նշումները",
