--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -8,6 +8,7 @@
   "accountIdErrorInvalid": "ID Akun ini tidak valid. Silakan periksa dan coba lagi.",
   "accountIdOrOnsEnter": "Masukkan Account ID atau ONS",
   "accountIdOrOnsInvite": "Undang ID Akun atau ONS",
+  "accountIdShare": "Hi, saya menggunakan {app_name} untuk mengobrol dengan privasi dan keamanan penuh. Ayo bergabunglah dengan saya! ID Akun saya adalah<br/><br/>{account_id}<br/><br/>Unduh di {session_download_url}",
   "accountIdYours": "ID akun anda",
   "accountIdYoursDescription": "Ini adalah ID akun anda. Pengguna lain bisa memindainya untuk memulai percakapan dengan anda.",
   "actualSize": "Ukuran Sebenarnya",
@@ -148,10 +149,12 @@
   "callsPermissionsRequiredDescription": "Anda dapat mengaktifkan izin \"Panggilan Suara dan Video\" di Pengaturan Privasi.",
   "callsReconnecting": "Menghubungkan kembali…",
   "callsRinging": "Berdering...",
+  "callsSessionCall": "Panggilan {app_name}",
   "callsSettings": "Panggilan (Beta)",
   "callsVoiceAndVideo": "Panggilan Suara dan Video",
   "callsVoiceAndVideoBeta": "Panggilan Suara dan Video (Beta)",
   "callsVoiceAndVideoModalDescription": "IP Anda terlihat oleh mitra panggilan Anda dan server Oxen Foundation saat menggunakan panggilan beta.",
+  "callsVoiceAndVideoToggleDescription": "Aktifkan panggilan suara dan video ke atau dari pengguna lain.",
   "callsYouCalled": "Anda memanggil {name}",
   "callsYouMissedCallPermissions": "Anda melewatkan panggilan dari <b>{name}</b> karena Anda belum mengaktifkan <b>Panggilan Suara dan Video</b> di Pengaturan Privasi.",
   "cameraErrorNotFound": "Kamera tidak ditemukan",
@@ -184,6 +187,7 @@
   "clearMessagesNoteToSelfDescription": "Anda yakin ingin menghapus semua pesan Catatan Pribadi dari perangkat Anda?",
   "close": "Tutup",
   "closeWindow": "Tutup Jendela",
+  "commitHashDesktop": "Hash Commit: {hash}",
   "communityBanDeleteDescription": "Tindakan ini akan memblokir pengguna yang dipilih dari Komunitas ini dan menghapus semua pesan mereka. Apakah Anda yakin ingin melanjutkan?",
   "communityBanDescription": "Tindakan ini akan memblokir pengguna yang dipilih dari Komunitas ini. Apakah Anda yakin ingin melanjutkan?",
   "communityEnterUrl": "Masukkan Tautan Komunitas",
@@ -194,6 +198,7 @@
   "communityInvitation": "Undangan Komunitas",
   "communityJoin": "Gabung dengan Komunitas",
   "communityJoinDescription": "Apakah Anda yakin ingin bergabung dengan {community_name}?",
+  "communityJoinError": "Gagal bergabung ke komunitas",
   "communityJoinOfficial": "Atau gabung salah satu dari ini...",
   "communityJoined": "Bergabung dengan Komunitas",
   "communityJoinedAlready": "Anda sudah menjadi anggota komunitas ini.",
@@ -240,6 +245,7 @@
   "conversationsSendWithEnterKeyDescription": "Mengetuk Tombol Enter akan mengirim pesan alih-alih memulai baris baru.",
   "conversationsSettingsAllMedia": "Semua Media",
   "conversationsSpellCheck": "Pemeriksa Ejaan",
+  "conversationsSpellCheckDescription": "Aktifkan pemeriksaan ejaan saat mengetik pesan.",
   "conversationsStart": "Mulai Percakapan",
   "copied": "Disalin",
   "copy": "Salin",
@@ -292,11 +298,14 @@
   "disappearingMessagesDeleteType": "Hapus Jenis",
   "disappearingMessagesDescription": "Setelan ini berlaku untuk semua orang dalam percakapan ini.",
   "disappearingMessagesDescription1": "Setelan ini berlaku untuk pesan yang Anda kirim dalam percakapan ini.",
+  "disappearingMessagesDescriptionGroup": "Setelan ini berlaku untuk semua orang dalam percakapan ini.<br/>Hanya admin grup yang dapat mengubah setelan ini.",
   "disappearingMessagesDisappear": "Menghilang Setelah {disappearing_messages_type} - {time}",
   "disappearingMessagesDisappearAfterRead": "Menghilang Setelah Dibaca",
   "disappearingMessagesDisappearAfterReadDescription": "Pesan dihapus setelah dibaca.",
+  "disappearingMessagesDisappearAfterReadState": "Menghilang Setelah Dibaca - {time}",
   "disappearingMessagesDisappearAfterSend": "Menghilang Setelah Dikirim",
   "disappearingMessagesDisappearAfterSendDescription": "Pesan dihapus setelah dikirim.",
+  "disappearingMessagesDisappearAfterSendState": "Menghilang Setelah Dikirim - {time}",
   "disappearingMessagesFollowSetting": "Ikuti Pengaturan",
   "disappearingMessagesFollowSettingOff": "Pesan yang Anda kirim tidak akan hilang lagi. Anda yakin ingin mematikan <b>pesan menghilang</b>?",
   "disappearingMessagesFollowSettingOn": "Pasang pesan Anda untuk menghilang <b>{time}</b> setelah <b>{disappearing_messages_type}</b>?",
@@ -307,7 +316,9 @@
   "disappearingMessagesSetYou": "<b>Anda</b> mengatur pesan untuk menghilang {time} setelah {disappearing_messages_type}.",
   "disappearingMessagesTimer": "Timer",
   "disappearingMessagesTurnedOff": "<b>{name}</b> menonaktifkan pesan menghilang. Pesan yang mereka kirim tidak akan lagi menghilang.",
+  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> telah mematikan pesan menghilang <b>off</b>.",
   "disappearingMessagesTurnedOffYou": "<b>Anda</b> menonaktifkan pesan menghilang. Pesan yang Anda kirim tidak akan lagi menghilang.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Kamu</b> mematikan pesan menghilang <b>off</b>.",
   "disappearingMessagesTypeRead": "baca",
   "disappearingMessagesTypeSent": "terkirim",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> memperbarui pengaturan pesan menghilang.",
@@ -381,11 +392,13 @@
   "groupInviteSending": "Mengirim undangan",
   "groupInviteSent": "Undangan terkirim",
   "groupInviteSuccessful": "Undangan grup berhasil",
+  "groupInviteVersion": "Pengguna harus memiliki rilis terbaru untuk menerima undangan",
   "groupInviteYou": "<b>Anda</b> diundang untuk bergabung dengan grup.",
   "groupInviteYouAndMoreNew": "<b>Anda</b> dan <b>{count} lainnya</b> telah diundang untuk bergabung ke grup.",
   "groupInviteYouAndOtherNew": "<b>Anda</b> dan <b>{other_name}</b> telah diundang untuk bergabung dengan grup.",
   "groupLeave": "Keluar grup",
-  "groupLeaveDescription": "Apakah Anda yakin ingin meninggalkan {group_name}?",
+  "groupLeaveDescription": "Apakah Anda yakin ingin meninggalkan <b>{group_name}</b>?",
+  "groupLeaveDescriptionAdmin": "Apakah Anda yakin ingin keluar dari <b>{group_name}</b>?<br/><br/>Ini akan menghapus semua anggota dan menghapus semua konten grup.",
   "groupLeaveErrorFailed": "Gagal meninggalkan {group_name}",
   "groupLegacyBanner": "Grup telah ditingkatkan, buat grup baru untuk meningkatkan. Fungsi grup lama akan menurun mulai {date}.",
   "groupMemberLeft": "<b>{name}</b> keluar dari grup.",
@@ -512,6 +525,7 @@
   "messageRequestYouHaveAccepted": "Anda telah menerima permintaan pesan dari <b>{name}</b>.",
   "messageRequestsAcceptDescription": "Mengirim pesan ke pengguna ini akan secara otomatis menerima permintaan pesan mereka dan mengungkapkan ID Akun Anda.",
   "messageRequestsAccepted": "Permintaan pesan Anda telah diterima.",
+  "messageRequestsClearAllExplanation": "Apakah Anda yakin ingin menghapus semua permintaan pesan dan undangan grup?",
   "messageRequestsCommunities": "Permintaan Pesan Komunitas",
   "messageRequestsCommunitiesDescription": "Izinkan permintaan pesan dari percakapan Community.",
   "messageRequestsDelete": "Apakah Anda yakin ingin menolak permintaan pesan ini?",
@@ -532,6 +546,7 @@
   "messages": "Pesan",
   "minimize": "Kecilkan",
   "next": "Selanjutnya",
+  "nicknameDescription": "Pilih nama panggilan untuk <b>{name}</b>. Ini akan muncul untuk Anda dalam percakapan satu-satu dan grup Anda.",
   "nicknameEnter": "Masukkan nama panggilan",
   "nicknameRemove": "hapus nama panggilan",
   "nicknameSet": "Atur Nama Panggilan",
@@ -553,6 +568,9 @@
   "notificationsFastModeDescription": "Anda akan menerima pesan baru dengan andal dan cepat menggunakan server notifikasi Google.",
   "notificationsFastModeDescriptionIos": "Anda akan menerima pesan baru dengan andal dan cepat menggunakan server notifikasi Apple.",
   "notificationsGoToDevice": "Buka pengaturan notifikasi perangkat",
+  "notificationsHeaderAllMessages": "Notifikasi - Semua",
+  "notificationsHeaderMentionsOnly": "Notifikasi - Hanya Mention",
+  "notificationsHeaderMute": "Notifikasi - Dibungkam",
   "notificationsIosGroup": "{name} ke {conversation_name}",
   "notificationsIosRestart": "Anda mungkin telah menerima pesan ketika {device} Anda sedang memulai ulang.",
   "notificationsLedColor": "Warna LED",
@@ -574,6 +592,7 @@
   "notificationsVibrate": "Getar",
   "off": "Padam",
   "okay": "Oke",
+  "on": "Hidup",
   "onboardingAccountCreate": "Buat akun",
   "onboardingAccountCreated": "Akun telah dibuat",
   "onboardingAccountExists": "Saya punya akun",
@@ -607,6 +626,7 @@
   "passwordCurrentIncorrect": "Kata sandi anda saat ini salah.",
   "passwordDescription": "Memerlukan kata sandi untuk membuka kunci {app_name}.",
   "passwordEnter": "Masukkan Kata Sandi",
+  "passwordEnterCurrent": "Harap masukkan kata sandi Anda saat ini",
   "passwordEnterNew": "Mohon masukkan kata sandi Anda yang baru",
   "passwordError": "Kata sandi hanya bisa terdiri dari huruf, angka dan simbol sederhana",
   "passwordErrorLength": "Panjang kata sandi anda harus diantara 6 dan 64 karakter",
@@ -619,17 +639,23 @@
   "passwordSet": "Atur Kata Sandi",
   "passwordSetDescription": "Kata sandi anda telah disetel. Harap untuk menjaganya.",
   "paste": "Tempel",
+  "permissionMusicAudioDenied": "{app_name} memerlukan akses musik dan audio untuk mengirim file, musik, dan audio, tapi sudah ditolak secara permanen. Ketuk Setelan -> Perizinan, dan aktifkan \"Musik dan audio\".",
   "permissionsAppleMusic": "{app_name} membutuhkan Apple Music untuk memutar lampiran media.",
   "permissionsAutoUpdate": "Pembaruan Otomatis",
   "permissionsAutoUpdateDescription": "Secara otomatis cek pembaruan saat startup",
+  "permissionsCameraDenied": "{app_name} memerlukan akses kamera untuk mengambil foto dan video, tapi telah ditolak secara permanen. Ketuk Setelan -> Perizinan, dan aktifkan \"Kamera\".",
   "permissionsFaceId": "Fitur kunci layar pada {app_name} menggunakan Face ID.",
   "permissionsKeepInSystemTray": "Simpan di System Tray",
   "permissionsKeepInSystemTrayDescription": "{app_name} bekerja di background ketika anda menutup jendela",
   "permissionsLibrary": "{app_name} membutuhkan akses perpustakaan foto untuk melanjutkan. Anda dapat mengaktifkan akses di pengaturan iOS.",
   "permissionsMicrophone": "Mikrofon",
+  "permissionsMicrophoneAccessRequired": "{app_name} memerlukan akses mikrofon untuk melakukan panggilan dan mengirim pesan audio, tetapi izin ini telah ditolak secara permanen. Ketuk setelan -> Perizinan, dan aktifkan \"Mikrofon\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Anda dapat mengaktifkan akses mikrofon di pengaturan privasi {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} membutuhkan akses mikrofon untuk melakukan panggilan dan merekam pesan audio.",
+  "permissionsMicrophoneDescription": "Izinkan akses ke mikrofon.",
+  "permissionsMusicAudio": "{app_name} memerlukan akses musik dan audio untuk mengirim file, musik, dan audio.",
   "permissionsRequired": "Izin dibutuhkan",
+  "permissionsStorageDenied": "{app_name} memerlukan akses pustaka foto agar Anda dapat mengirim foto dan video, tapi telah ditolak secara permanen. Ketuk Setelan -> Perizinan, dan aktifkan \"Foto dan video\".",
   "permissionsStorageDeniedLegacy": "{app_name} memerlukan akses penyimpanan agar Anda dapat mengirim dan menyimpan lampiran. Ketuk Setelan -> Izin, lalu aktifkan \"Penyimpanan\".",
   "permissionsStorageSave": "{app_name} membutuhkan akses penyimpanan untuk menyimpan lampiran dan media.",
   "permissionsStorageSaveDenied": "{app_name} membutuhkan akses penyimpanan untuk menyimpan foto dan video, tetapi telah ditolak secara permanen. Silakan lanjutkan ke pengaturan aplikasi, pilih \"Izin\", dan aktifkan \"Penyimpanan\".",
@@ -663,6 +689,7 @@
   "recoveryPasswordBannerTitle": "Simpan kata sandi pemulihan Anda",
   "recoveryPasswordDescription": "Gunakan kata sandi pemulihan Anda untuk memuat akun Anda di perangkat baru. <br/><br/>Akun Anda tidak dapat dipulihkan tanpa kata sandi pemulihan Anda. Pastikan disimpan di tempat yang aman dan terlindungi — dan jangan bagikan kepada siapa pun.",
   "recoveryPasswordEnter": "Masukkan kata sandi pemulihan Anda",
+  "recoveryPasswordErrorLoad": "Terjadi kesalahan saat mencoba memuat kata sandi pemulihan Anda.<br/><br/>Silakan ekspor log Anda, lalu unggah file melalui Help Desk Session untuk membantu menyelesaikan masalah ini.",
   "recoveryPasswordErrorMessageGeneric": "Silakan periksa kata sandi pemulihan Anda dan coba lagi.",
   "recoveryPasswordErrorMessageIncorrect": "Beberapa kata dalam Kata Sandi Pemulihan Anda salah. Silakan periksa dan coba lagi.",
   "recoveryPasswordErrorMessageShort": "Kata Sandi Pemulihan yang Anda masukkan tidak cukup panjang. Silakan periksa dan coba lagi.",
@@ -672,6 +699,7 @@
   "recoveryPasswordHidePermanentlyDescription1": "Tanpa kata sandi pemulihan, Anda tidak dapat memuat akun Anda di perangkat baru. <br/><br/>Kami sangat menyarankan Anda menyimpan kata sandi pemulihan Anda di tempat yang aman dan terlindungi sebelum melanjutkan.",
   "recoveryPasswordHidePermanentlyDescription2": "Apakah Anda yakin ingin menyembunyikan sandi pemulihan secara permanen di perangkat ini? Hal ini tidak dapat dibatalkan.",
   "recoveryPasswordHideRecoveryPassword": "Sembunyikan Kata Sandi Pemulihan",
+  "recoveryPasswordHideRecoveryPasswordDescription": "Sembunyikan kata sandi Pemulihan Anda secara permanen di perangkat ini.",
   "recoveryPasswordRestoreDescription": "Masukkan kata sandi pemulihan Anda untuk memuat akun Anda. Jika Anda belum menyimpannya, Anda dapat menemukannya di pengaturan aplikasi Anda.",
   "recoveryPasswordView": "Lihat Kata Sandi",
   "recoveryPasswordWarningSendDescription": "Ini adalah kata sandi pemulihan Anda. Jika Anda mengirimkannya ke seseorang, mereka akan memiliki akses penuh ke akun Anda.",
@@ -697,6 +725,7 @@
   "searchContacts": "Cari Kontak",
   "searchConversation": "Penelusuran Percakapan",
   "searchEnter": "Mohon masukkan pencarian anda.",
+  "searchMatches": "{count, plural, other [{found_count} dari # cocok]}",
   "searchMatchesNone": "Hasil tidak ditemukan.",
   "searchMatchesNoneSpecific": "Tidak ditemukan hasil untuk '{query}'",
   "searchMembers": "Cari Anggota",
@@ -723,6 +752,7 @@
   "shareAccountIdDescription": "Undang teman Anda untuk mengobrol dengan Anda di {app_name} dengan membagikan ID Akun Anda kepada mereka.",
   "shareAccountIdDescriptionCopied": "Bagikan dengan teman Anda di mana pun Anda biasa berbicara dengan mereka — lalu pindahkan percakapan ke sini.",
   "shareExtensionDatabaseError": "Terjadi masalah saat membuka database. Silakan mulai ulang aplikasi dan coba lagi.",
+  "shareToSession": "Bagikan ke {app_name}",
   "show": "Tampilkan",
   "showAll": "Tampilkan Semua",
   "showLess": "Tampilkan Sedikit",
@@ -734,6 +764,7 @@
   "theError": "Kesalahan",
   "tryAgain": "Coba Lagi",
   "typingIndicators": "Indikator penulisan",
+  "typingIndicatorsDescription": "Lihat dan bagikan indikator mengetik.",
   "undo": "Ulang",
   "unknown": "Tidak dikenal",
   "updateApp": "Pembaruan aplikasi",
