--- a/_locales/lv/messages.json
+++ b/_locales/lv/messages.json
@@ -8,6 +8,7 @@
   "accountIdErrorInvalid": "Šis konta ID ir nederīgs. Lūdzu, pārbaudiet un mēģiniet vēlreiz.",
   "accountIdOrOnsEnter": "Ievadiet Account ID vai ONS",
   "accountIdOrOnsInvite": "Uzaicināt konta ID vai ONS",
+  "accountIdShare": "Sveiki, es izmantoju {app_name}, lai sazinātos ar pilnīgu privātumu un drošību. Nāc pievienojies! Mans Account ID ir<br/><br/>{account_id}<br/><br/>Lejupielādēt to {session_download_url}",
   "accountIdYours": "Jūsu Konta ID",
   "accountIdYoursDescription": "Šis ir tavs konta ID. Citi lietotāji to var noskenēt, lai uzsāktu sarunu ar tevi.",
   "actualSize": "Reālais izmērs",
@@ -142,10 +143,12 @@
   "callsPermissionsRequiredDescription": "Jūs varat aktivizēt atļauju ‘Balss un video zvani’ konfidencialitātes iestatījumos.",
   "callsReconnecting": "Atjauno savienojumu…",
   "callsRinging": "Zvanu...",
+  "callsSessionCall": "{app_name} Zvans",
   "callsSettings": "Zvani (Beta)",
   "callsVoiceAndVideo": "Balss un video zvani",
   "callsVoiceAndVideoBeta": "Balss un video zvani (Beta)",
   "callsVoiceAndVideoModalDescription": "Izmantojot beta zvanus, jūsu IP ir redzams jūsu zvana partnerim un Oxen Foundation serverim.",
+  "callsVoiceAndVideoToggleDescription": "Iespējot balss un video zvanus uz un no citiem lietotājiem.",
   "callsYouCalled": "Jūs zvanījāt {name}",
   "callsYouMissedCallPermissions": "Jūs nokavējāt zvanu no <b>{name}</b>, jo jums nav iespējoti <b>Balss un video zvani</b> privātuma iestatījumos.",
   "cameraErrorNotFound": "Nav atrasta kamera",
@@ -155,6 +158,7 @@
   "cameraGrantAccessDescription": "{app_name} ir nepieciešama piekļuve kamerai, lai uzņemtu attēlus un video, vai skenētu QR kodus.",
   "cameraGrantAccessQr": "Lai skenētu QR kodus, {app_name} ir nepieciešama piekļuve kamerai",
   "cancel": "Atcelt",
+  "changePasswordFail": "Neizdevās nomainīt paroli",
   "clear": "Notīrīt",
   "clearAll": "Notīrīt visu",
   "clearDataAll": "Izdzēst visus datus",
@@ -185,6 +189,7 @@
   "communityInvitation": "Kopienas ielūgums",
   "communityJoin": "Pievienoties kopienai",
   "communityJoinDescription": "Vai esat pārliecināts, ka vēlaties pievienoties {community_name}?",
+  "communityJoinError": "Neizdevās pievienoties kopienai",
   "communityJoinOfficial": "Vai pievienojies kādai no šīm...",
   "communityJoined": "Pievienojies kopienai",
   "communityJoinedAlready": "Jūs jau esat šīs kopienas loceklis.",
@@ -210,6 +215,7 @@
   "conversationsAddedToHome": "Pievienots sākuma ekrānam",
   "conversationsAudioMessages": "Skaņas ziņojumi",
   "conversationsAutoplayAudioMessage": "Automātiski atskaņot audio ziņas",
+  "conversationsAutoplayAudioMessageDescription": "Automātiski atskaņot secīgi sūtītās audio ziņas",
   "conversationsBlockedContacts": "Bloķētās kontaktpersonas",
   "conversationsCommunities": "Kopienas",
   "conversationsDelete": "Dzēst sarunu",
@@ -230,6 +236,7 @@
   "conversationsSendWithEnterKeyDescription": "Pieskaroties Enter taustiņam, tiks nosūtīta ziņa, nevis sākta jauna rinda.",
   "conversationsSettingsAllMedia": "Visa multivide",
   "conversationsSpellCheck": "Pareizrakstības Pārbaude",
+  "conversationsSpellCheckDescription": "Iespējot pareizrakstības pārbaudi, rakstot ziņojumus.",
   "conversationsStart": "Sākt Sarunu",
   "copied": "Nokopēts",
   "copy": "Kopēt",
@@ -325,6 +332,12 @@
   "emojiReactsClearAll": "Vai esat pārliecināts, ka vēlaties dzēst visas {emoji}?",
   "emojiReactsCoolDown": "Palēnini! Tu esi nosūtījis pārāk daudz emoji reakciju. Mēģini vēlāk",
   "emojiReactsCountOthers": "{count, plural, zero [Un vēl # citi ir reaģējuši {emoji} uz šo ziņu.] one [Un vēl # cits ir reaģējis {emoji} uz šo ziņu.] other [Un vēl # citi ir reaģējuši {emoji} uz šo ziņu.]}",
+  "emojiReactsHoverNameDesktop": "{name} reaģēja ar {emoji_name}",
+  "emojiReactsHoverNameTwoDesktop": "{name} un {other_name} reaģēja ar {emoji_name}",
+  "emojiReactsHoverTwoNameMultipleDesktop": "{name} un <span>{count} citi</span> reaģēja ar {emoji_name}",
+  "emojiReactsHoverYouNameDesktop": "Jūs reaģējāt ar {emoji_name}",
+  "emojiReactsHoverYouNameMultipleDesktop": "Jūs un <span>{count} citi</span> reaģējāt ar {emoji_name}",
+  "emojiReactsHoverYouNameTwoDesktop": "Jūs un {name} reaģējāt ar {emoji_name}",
   "emojiReactsNotification": "{emoji} reaģēja uz tavu ziņu",
   "enable": "Iespējot",
   "errorConnection": "Lūdzu, pārbaudi savu interneta pieslēgumu un mēģini vēlreiz.",
@@ -360,8 +373,11 @@
   "groupInviteSending": "Sūta ielūgumu",
   "groupInviteSent": "Uzaicinājums nosūtīts",
   "groupInviteSuccessful": "Grupas ielūgums ir veiksmīgs",
+  "groupInviteVersion": "Lietotājiem jābūt jaunākajai izlaiduma versijai, lai saņemtu ielūgumus",
   "groupInviteYou": "<b>Tu</b> biji uzaicināts pievienoties grupai.",
   "groupLeave": "Atstāt grupu",
+  "groupLeaveDescription": "Vai tiešām vēlaties pamest <b>{group_name}</b>?",
+  "groupLeaveDescriptionAdmin": "Vai esat pārliecināts, ka vēlaties pamest <b>{group_name}</b>?<br/><br/>Tas noņems visus dalībniekus un dzēsīs visu grupas saturu.",
   "groupLeaveErrorFailed": "Neizdevās pamest {group_name}",
   "groupLegacyBanner": "Grupas ir atjauninātas. Izveido jaunu grupu, lai atjauninātu. Vecas grupas funkcionalitāte būs degradēta no {date}.",
   "groupMemberLeft": "<b>{name}</b> atstāja grupu.",
@@ -459,6 +475,7 @@
   "messageMarkUnread": "Atzīmēt kā nelasītu",
   "messageNewDescriptionDesktop": "Sāc jaunu sarunu, ievadot drauga Konta ID vai ONS.",
   "messageNewDescriptionMobile": "Sāc jaunu sarunu, ievadot drauga Konta ID, ONS vai skenējot viņu QR kodu.",
+  "messageNewYouveGot": "{count, plural, zero [Jums ir # jaunas ziņas.] one [Jums ir # jaunas ziņas.] other [Jums ir # jaunas ziņas.]}",
   "messageReplyingTo": "Atbildot uz",
   "messageRequestGroupInvite": "<b>{name}</b> aicināja jūs pievienoties <b>{group_name}</b>.",
   "messageRequestGroupInviteDescription": "Nosūtot ziņojumu šai grupai, automātiski tiks pieņemts grupas ielūgums.",
@@ -467,6 +484,7 @@
   "messageRequestYouHaveAccepted": "Jūs esat pieņēmuši ziņojuma pieprasījumu no <b>{name}</b>.",
   "messageRequestsAcceptDescription": "Nosūtot ziņu šim lietotājam, automātiski tiks pieņemts viņa ziņojuma pieprasījums un atklāts Jūsu Account ID.",
   "messageRequestsAccepted": "Jūsu ziņojuma pieprasījums tika pieņemts.",
+  "messageRequestsClearAllExplanation": "Vai esat pārliecināts, ka vēlaties dzēst visu ziņu pieprasījumus un grupu uzaicinājumus?",
   "messageRequestsCommunities": "Kopienas ziņu pieprasījumi",
   "messageRequestsCommunitiesDescription": "Atļaut ziņojumu pieprasījumus no Kopienu sarunām.",
   "messageRequestsDelete": "Vai jūs esat pārliecināti ka vēlaties nodzēst šo ziņu?",
@@ -484,6 +502,7 @@
   "messages": "Ziņojumi",
   "minimize": "Minimizēt",
   "next": "Nākamais",
+  "nicknameDescription": "Izvēlieties segvārdu <b>{name}</b>. Tas parādīsies jums vienā pret vienu un grupu sarunās.",
   "nicknameEnter": "Ievadiet segvārdu",
   "nicknameRemove": "Noņemt iesauku",
   "nicknameSet": "Iestatīt Lietotājvārdu",
@@ -516,6 +535,7 @@
   "notificationsMuteUnmute": "Ieslēgt skaņu",
   "notificationsMuted": "Apklusināts",
   "notificationsSlowMode": "Lēnais režīms",
+  "notificationsSlowModeDescription": "{app_name} laiku pa laikam fonā pārbaudīs, vai nav jaunu ziņojumu.",
   "notificationsSound": "Skaņa",
   "notificationsSoundDescription": "Skaņa, kad Lietotne ir atvērta",
   "notificationsSoundDesktop": "Skaņas paziņojumi",
@@ -528,9 +548,13 @@
   "onboardingAccountCreate": "Izveidot kontu",
   "onboardingAccountCreated": "Konts izveidots",
   "onboardingAccountExists": "Man ir konts",
+  "onboardingBackAccountCreation": "Jūs nevarat iet tālāk atpakaļ. Lai atceltu jūsu konta izveidi, {app_name} ir jābeidz.",
+  "onboardingBackLoadAccount": "Jūs nevarat iet tālāk atpakaļ. Lai apturētu konta ielādi, {app_name} ir jābeidz.",
+  "onboardingBubbleCreatingAnAccountIsEasy": "Kontu izveide ir tūlītēja, bezmaksas un anonīma {emoji}",
   "onboardingBubbleNoPhoneNumber": "Jums pat nav vajadzīgs tālruņa numurs, lai reģistrētos.",
   "onboardingBubblePrivacyInYourPocket": "Privātums tavā kabatā.",
   "onboardingBubbleSessionIsEngineered": "{app_name} ir izstrādāta, lai aizsargātu jūsu privātumu.",
+  "onboardingBubbleWelcomeToSession": "Laipni lūdzam {app_name} {emoji}",
   "onboardingHitThePlusButton": "Nospiediet plusa pogu, lai sāktu sarunu, izveidotu grupu vai pievienotos oficiālai kopienai!",
   "onboardingMessageNotificationExplanation": "Ir divi veidi, kā {app_name} var tevi informēt par jaunām ziņām.",
   "onboardingPrivacy": "Privātuma politika",
@@ -554,6 +578,7 @@
   "passwordCurrentIncorrect": "Jūsu pašreizējā parole ir nepareiza.",
   "passwordDescription": "Nepieciešama parole, lai atbloķētu {app_name}.",
   "passwordEnter": "Ievadiet paroli",
+  "passwordEnterCurrent": "Lūdzu, ievadi pašreizējo paroli",
   "passwordEnterNew": "Lūdzu, ievadiet savu jauno paroli",
   "passwordError": "Parolei drīkst būt tikai burti, cipari un simboli",
   "passwordErrorLength": "Parolei jābūt no 6 līdz 64 rakstzīmēm garai",
@@ -574,11 +599,14 @@
   "permissionsKeepInSystemTrayDescription": "{app_name} turpina darboties fonā, kad aizverat logu",
   "permissionsLibrary": "{app_name} ir nepieciešama piekļuve foto galerijai, lai turpinātu. Jūs varat ieslēgt piekļuvi iOS iestatījumos.",
   "permissionsMicrophone": "Mikrofons",
+  "permissionsMicrophoneAccessRequired": "{app_name} ir nepieciešama piekļuve mikrofonam, lai veiktu zvanus un sūtītu audio ziņas, bet tā ir pastāvīgi aizliegta. Pieskarieties iestatījumos -> Atļaujas un ieslēdziet \"Mikrofons\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Jūs varat aktivizēt mikrofonu piekļuvi {app_name} privātuma iestatījumos",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} ir nepieciešama piekļuve mikrofonam, lai veiktu zvanus un ierakstītu audio ziņas.",
+  "permissionsMicrophoneDescription": "Atļaut piekļuvi mikrofonam.",
   "permissionsRequired": "Atļauja nepieciešama",
   "permissionsStorageSave": "{app_name} ir nepieciešama pieeja glabātuve failu un multimediju saglabāšanai.",
   "permissionsStorageSaveDenied": "Lai saglabātu fotoattēlus un video, {app_name} ir nepieciešama pieeja glabātuve, bet tā ir pastāvīgi aizliegta. Lūdzu, ejiet uz programmu iestatījumiem, izvēlieties “Atļaujas” un iespējojiet “Krātuve”.",
+  "permissionsStorageSend": "{app_name} vajag pieeju failiem, lai sūtītu atēlus un video.",
   "pin": "Piespraust",
   "pinConversation": "Piespraust sarunu",
   "pinUnpin": "Atspraust",
@@ -617,11 +645,13 @@
   "recoveryPasswordHidePermanentlyDescription1": "Bez jūsu atjaunošanas paroles jūs nevarat ielādēt savu kontu jaunās ierīcēs. <br/><br/>Mēs stingri iesakām saglabāt savu atjaunošanas paroli drošā vietā, pirms turpināt.",
   "recoveryPasswordHidePermanentlyDescription2": "Vai esat pārliecināts, ka vēlaties pastāvīgi slēpt savu atkopšanas paroli šajā ierīcē? Tas nav atgriezenisks.",
   "recoveryPasswordHideRecoveryPassword": "Slēpt atgūšanas paroli",
+  "recoveryPasswordHideRecoveryPasswordDescription": "Neatgriezeniski paslēpt savu atkopšanas paroli šajā ierīcē.",
   "recoveryPasswordRestoreDescription": "Ievadiet savu atjaunošanas paroli, lai ielādētu savu kontu. Ja jūsu atjaunošanas parole nav saglabāta, jūs varat atrast to lietotnes iestatījumos.",
   "recoveryPasswordView": "Parādīt paroli",
   "recoveryPasswordWarningSendDescription": "Šī ir tava atjaunošanas parole. Ja kādam to nosūtīsi, tad viņš iegūs pilnas piekļuves tiesības tavam kontam.",
   "redo": "Atkārtot",
   "remove": "Noņemt",
+  "removePasswordFail": "Neizdevās noņemt paroli",
   "reply": "Atbildēt",
   "resend": "Sūtīt atkārtoti",
   "resolving": "Ielādē valsts informāciju...",
@@ -641,6 +671,7 @@
   "searchContacts": "Meklēt kontaktus",
   "searchConversation": "Meklēt sarunu",
   "searchEnter": "Lūdzu ievadi savu meklējumu.",
+  "searchMatches": "{count, plural, zero [{found_count} no # sakritības] one [{found_count} no # sakritība] other [{found_count} no # sakritības]}",
   "searchMatchesNone": "Nav rezultātu.",
   "searchMatchesNoneSpecific": "Nav atrasti rezultāti meklēšanai {query}",
   "searchMembers": "Meklēt dalībniekus",
@@ -664,8 +695,10 @@
   "set": "Iestatīt",
   "settingsRestartDescription": "Lai lietotu jaunus iestatījumus, jums jārestartē {app_name}.",
   "share": "Dalīties",
+  "shareAccountIdDescription": "Uzaiciniet savu draugu tērzēt ar jums {app_name}, daloties ar savu konta ID ar viņiem.",
   "shareAccountIdDescriptionCopied": "Dalies ar saviem draugiem, kur tu parasti saraksties ar viņiem — pēc tam pārcel sarunu šeit.",
   "shareExtensionDatabaseError": "Radās problēma, atverot datubāzi. Lūdzu, restartējiet lietotni un mēģiniet vēlreiz.",
+  "shareToSession": "Dalīties ar {app_name}",
   "show": "Parādīt",
   "showAll": "Parādīt Visus",
   "showLess": "Parādīt mazāk",
@@ -676,12 +709,14 @@
   "theError": "Kļūda",
   "tryAgain": "Mēģiniet vēlreiz",
   "typingIndicators": "Rakstīšanas indikatori",
+  "typingIndicatorsDescription": "Redzēt un dalīties ar rakstīšanas indikatoriem.",
   "undo": "Atsaukt",
   "unknown": "Nezināms",
   "updateApp": "Lietotnes atjauninājumi",
   "updateDownloaded": "Atjauninājums instalēts, klikšķiniet, lai restartētu",
   "updateDownloading": "Lejupielādē atjauninājumu: {percent_loader}%",
   "updateError": "Nevar atjaunināt",
+  "updateErrorDescription": "{app_name} neizdevās atjaunot. Lūdzu, dodieties uz {session_download_url} un instalējiet jauno versiju manuāli, tad sazinieties ar mūsu Palīdzības centru, lai informētu par šo problēmu.",
   "updateNewVersion": "Ir pieejama jauna {app_name} versija, pieskarieties, lai atjauninātu",
   "updateNewVersionDescription": "Ir pieejama jauna {app_name} versija.",
   "updateReleaseNotes": "Iet uz izlaiduma piezīmēm",
@@ -691,6 +726,7 @@
   "urlCopy": "Nokopēt URL",
   "urlOpen": "Atvērt URL",
   "urlOpenBrowser": "Tas tiks atvērts tavam pārlūkā.",
+  "urlOpenDescription": "Vai esat pārliecināts, ka vēlaties atvērt šo URL savā pārlūkprogrammā?<br/><br/><b>{url}</b>",
   "useFastMode": "Lietot ātro režīmu",
   "video": "Video",
   "videoErrorPlay": "Nevar atskaņot video.",
