--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -198,6 +198,7 @@
   "communityInvitation": "Zaproszenie do społeczności",
   "communityJoin": "Dołącz do społeczności",
   "communityJoinDescription": "Czy na pewno chcesz dołączyć do {community_name}?",
+  "communityJoinError": "Nie można dołączyć do społeczności",
   "communityJoinOfficial": "Lub dołącz do jednej z tych...",
   "communityJoined": "Dołączyłeś do społeczności",
   "communityJoinedAlready": "Jesteś już członkiem tej społeczności.",
@@ -391,6 +392,7 @@
   "groupInviteSending": "Wysyłanie zaproszenia",
   "groupInviteSent": "Zaproszenie zostało wysłane",
   "groupInviteSuccessful": "Zaproszenie do grupy zakończone sukcesem",
+  "groupInviteVersion": "Użytkownicy muszą mieć najnowszą wersję, aby otrzymywać zaproszenia",
   "groupInviteYou": "<b>Ty</b> zostałeś zaproszony(-a) do grupy.",
   "groupInviteYouAndMoreNew": "<b>Ty</b> i <b>{count} innych użytkowników</b> zostaliście zaproszeni do grupy.",
   "groupInviteYouAndOtherNew": "<b>Ty</b> oraz użytkownik <b>{other_name}</b> zostaliście zaproszeni do grupy.",
@@ -462,7 +464,7 @@
   "leave": "Opuść",
   "leaving": "Opuszczanie...",
   "legacyGroupMemberNew": "Do grupy dołącza <b>{name}</b>.",
-  "legacyGroupMemberNewMultiple": "<b>{name} i <b>{count} innych</b> dołączyli do grupy.",
+  "legacyGroupMemberNewMultiple": "<b>{name}</b> i <b>{count} innych</b> dołączyli do grupy.",
   "legacyGroupMemberNewYouMultiple": "<b>Ty</b> i <b>{count} innych użytkowników</b> dołączyliście do grupy.",
   "legacyGroupMemberNewYouOther": "<b>Ty</b> oraz użytkownik <b>{other_name}</b> dołączyliście do grupy.",
   "legacyGroupMemberTwoNew": "<b>{name}</b> i <b>{other_name}</b> dołączyli do grupy.",
