--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -142,6 +142,7 @@
   "callsInProgress": "Вызов",
   "callsIncoming": "Входящий звонок от {name}",
   "callsIncomingUnknown": "Входящий звонок",
+  "callsMicrophonePermissionsRequired": "Вы пропустили звонок от <b>{name}</b> потому что не предоставили <b>доступ к микрофону</b>.",
   "callsMissed": "Пропущенный вызов",
   "callsMissedCallFrom": "Пропущенный вызов от {name}",
   "callsNotificationsRequired": "Голосовые и видео вызовы требуют включения уведомлений в системных настройках устройства.",
@@ -198,6 +199,7 @@
   "communityInvitation": "Приглашение в сообщество",
   "communityJoin": "Присоединиться к сообществу",
   "communityJoinDescription": "Вы уверены, что хотите присоединиться к {community_name}?",
+  "communityJoinError": "Не удалось присоединиться к сообществу",
   "communityJoinOfficial": "Или присоединитесь к одной из этих...",
   "communityJoined": "Присоединились к сообществу",
   "communityJoinedAlready": "Вы уже являетесь участником этого сообщества.",
@@ -391,6 +393,7 @@
   "groupInviteSending": "Отправка приглашения",
   "groupInviteSent": "Приглашение отправлено",
   "groupInviteSuccessful": "Приглашение в группу успешно",
+  "groupInviteVersion": "Пользователи должны иметь последнюю версию для получения приглашений",
   "groupInviteYou": "<b>Вы</b> были приглашены присоединиться к группе.",
   "groupInviteYouAndMoreNew": "<b>Вы</b> и <b>{count} других человек</b> приглашены вступить в группу.",
   "groupInviteYouAndOtherNew": "<b>Вы</b> и <b>{other_name}</b> приглашены вступить в группу.",
