--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -30,7 +30,8 @@
   "adminRemoveAsAdmin": "Yönetici olarak kaldır",
   "adminRemoveCommunityNone": "Bu Toplulukta hiçbir Yönetici yok.",
   "adminRemoveFailed": "{name} yönetici olarak kaldırılamadı.",
-  "adminRemoveFailedMultiple": "{name} ve {count} üye Yönetici seviyesinden düşürülemedi.",
+  "adminRemoveFailedMultiple": "<b>{name}</b> ve <b>{count}</b> üye Yönetici seviyesinden düşürülemedi.",
+  "adminRemoveFailedOther": "<b>{name}</b> ve <b>{other_name}</b> Yönetici seviyesinden düşürülemedi.",
   "adminRemovedUser": "<b>{name}</b> yönetici olarak kaldırıldı.",
   "adminRemovedUserMultiple": "<b>{name}</b> ve <b>{count} üye</b> Yönetici seviyesinden düşürüldü.",
   "adminRemovedUserOther": "<b>{name}</b> ve <b>{other_name}</b> Yönetici seviyesinden düşürüldü.",
@@ -95,6 +96,7 @@
   "attachmentsMoveAndScale": "Taşı ve Ölçekle",
   "attachmentsNa": "N/A",
   "attachmentsNotification": "{emoji} Ek",
+  "attachmentsNotificationGroup": "{author}: {emoji} Ek",
   "attachmentsResolution": "Çözünürlük:",
   "attachmentsSaveError": "Dosya kaydedilemiyor.",
   "attachmentsSendTo": "{name} alıcısına gönder",
@@ -140,6 +142,7 @@
   "callsInProgress": "Devam eden arama",
   "callsIncoming": "{name}'den Gelen arama",
   "callsIncomingUnknown": "Gelen arama",
+  "callsMicrophonePermissionsRequired": "<b>{name}</b> kişisinden gelen bir çağrıyı, <b>mikrofon erişimini</b> vermediğiniz için kaçırdınız.",
   "callsMissed": "Cevapsız Çağrı",
   "callsMissedCallFrom": "{name} tarafından cevapsız çağrı",
   "callsNotificationsRequired": "Sesli ve Görüntülü Aramaların çalışabilmesi için cihazınızın sistem ayarlarında Session bildirimlerinin etkinleştirilmiş olması gerekmektedir. ",
@@ -147,10 +150,12 @@
   "callsPermissionsRequiredDescription": "'Sesli ve Görüntülü Arama' iznini Gizlilik Ayarlarından etkinleştirebilirsiniz.",
   "callsReconnecting": "Yeniden bağlanıyor…",
   "callsRinging": "Çalıyor...",
+  "callsSessionCall": "{app_name} Arama",
   "callsSettings": "Aramalar (Beta)",
   "callsVoiceAndVideo": "Sesli ve Görüntülü Aramalar",
   "callsVoiceAndVideoBeta": "Sesli ve Görüntülü Aramalar (Deneme Aşamasında)",
   "callsVoiceAndVideoModalDescription": "Deneme aramaları sırasında IP adresiniz arama ortağınıza ve Oxen Foundation sunucusuna görünür olacaktır.",
+  "callsVoiceAndVideoToggleDescription": "Diğer kullanıcılara ve diğer kullanıcılardan sesli ve görüntülü arama yapılmasını sağlar.",
   "callsYouCalled": "{name} kullanıcısını aradınız",
   "callsYouMissedCallPermissions": "<b>{name}</b> kişisinden gelen bir çağrıyı, <b>Ses ve Video Görüşmeleri</b> özelliğini Gizlilik Ayarlarında etkinleştirmediğiniz için kaçırdınız.",
   "cameraErrorNotFound": "Kamera bulunamadı",
@@ -183,6 +188,9 @@
   "clearMessagesNoteToSelfDescription": "Kendime Not mesajlarınızı cihazınızdan silmek istediğinizden emin misiniz?",
   "close": "Kapat",
   "closeWindow": "Pencereyi Kapat",
+  "commitHashDesktop": "Commit Hash: {hash}",
+  "communityBanDeleteDescription": "Bu, seçilen kullanıcıyı bu Topluluktan yasaklayacak ve tüm mesajlarını silecek. Devam etmek istediğinizden emin misiniz?",
+  "communityBanDescription": "Bu, seçilen kullanıcıyı bu Topluluktan yasaklayacak. Devam etmek istediğinizden emin misiniz?",
   "communityEnterUrl": "Topluluk URL'si Girin",
   "communityEnterUrlErrorInvalid": "Geçersiz URL",
   "communityEnterUrlErrorInvalidDescription": "Lütfen Topluluk URL'sini kontrol edin ve tekrar deneyin.",
@@ -191,6 +199,7 @@
   "communityInvitation": "Topluluk Daveti",
   "communityJoin": "Topluluğa Katıl",
   "communityJoinDescription": "{community_name} topluluğuna katılmak istediğinizden emin misiniz?",
+  "communityJoinError": "Topluluğa katılınamadı",
   "communityJoinOfficial": "Veya bunlardan birine katılın...",
   "communityJoined": "Topluluğa Katıldınız",
   "communityJoinedAlready": "Bu topluluğun zaten üyesisiniz.",
@@ -237,6 +246,7 @@
   "conversationsSendWithEnterKeyDescription": "Enter tuşuna basmak yeni bir satıra geçmek yerine mesaj gönderir.",
   "conversationsSettingsAllMedia": "Tüm Medya",
   "conversationsSpellCheck": "Yazım Denetimi",
+  "conversationsSpellCheckDescription": "Mesaj yazarken yazım denetimini etkinleştirin.",
   "conversationsStart": "Sohbet Başlat",
   "copied": "Kopyalandı",
   "copy": "Kopyala",
@@ -307,6 +317,7 @@
   "disappearingMessagesSetYou": "<b>Sen</b> mesajları {disappearing_messages_type} ayarladıktan {time} sonra kaybolacak şekilde ayarladın.",
   "disappearingMessagesTimer": "Sayaç",
   "disappearingMessagesTurnedOff": "<b>{name}</b>, kaybolan mesajları kapattı. Bu kullanıcının gönderdiği mesajlar artık kaybolmayacak.",
+  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> kaybolan mesajları <b>kapattı</b>.",
   "disappearingMessagesTurnedOffYou": "<b>Sen</b> kaybolan mesajları <b>kapattın</b>. Gönderdiğin mesajlar artık kaybolmayacak.",
   "disappearingMessagesTurnedOffYouGroup": "<b>Sen</b> kaybolan mesajları <b>kapattın</b>.",
   "disappearingMessagesTypeRead": "okundu",
@@ -341,6 +352,12 @@
   "emojiReactsClearAll": "Tüm {emoji}'leri silmek istediğinizden emin misiniz?",
   "emojiReactsCoolDown": "Yavaşla biraz! Çok fazla emoji tepkisi gönderdin. Birazdan tekrar deneyin",
   "emojiReactsCountOthers": "{count, plural, one [Ve # diğeri bu mesaja {emoji} tepki verdi.] other [Ve # diğerleri bu mesaja {emoji} tepki gösterdi.]}",
+  "emojiReactsHoverNameDesktop": "{name} {emoji_name} ile tepki verdi",
+  "emojiReactsHoverNameTwoDesktop": "{name} ve {other_name} {emoji_name} ile tepki verdi",
+  "emojiReactsHoverTwoNameMultipleDesktop": "{name} ve <span>{count} diğer</span> {emoji_name} ile tepki verdi",
+  "emojiReactsHoverYouNameDesktop": "Siz {emoji_name} ile tepki verdiniz",
+  "emojiReactsHoverYouNameMultipleDesktop": "Siz ve <span>{count} diğer</span> {emoji_name} ile tepki gösterdi",
+  "emojiReactsHoverYouNameTwoDesktop": "Siz ve {name} {emoji_name} ile tepki verdiniz",
   "emojiReactsNotification": "Mesajınıza {emoji} ile tepki verdi",
   "enable": "Etkinleştir",
   "errorConnection": "Lütfen internet bağlantınızı kontrol edin ve tekrar deneyin.",
@@ -376,11 +393,13 @@
   "groupInviteSending": "Davet gönderiliyor",
   "groupInviteSent": "Davet gönderildi",
   "groupInviteSuccessful": "Grup daveti başarılı",
+  "groupInviteVersion": "Kullanıcıların davetleri alabilmesi için en son sürüme sahip olmaları gerekiyor",
   "groupInviteYou": "<b>Sen</b> gruba katılmaya davet edildin.",
   "groupInviteYouAndMoreNew": "<b>Siz</b> ve <b>{count} diğer</b> gruba katıldınız.",
   "groupInviteYouAndOtherNew": "<b>Siz</b> ve <b>{other_name}</b> gruba katıldınız.",
   "groupLeave": "Gruptan Ayrıl",
-  "groupLeaveDescription": "{group_name} grubundan ayrılmak istediğinizden emin misiniz?",
+  "groupLeaveDescription": "<b>{group_name}</b> grubundan ayrılmak istediğinizden emin misiniz?",
+  "groupLeaveDescriptionAdmin": "<b>{group_name}</b> adlı gruptan ayrılmak istediğinizden emin misiniz?<br/><br/>Bu, tüm üyeleri kaldıracak ve tüm grup içeriğini silecektir.",
   "groupLeaveErrorFailed": "{group_name} çıkış yapılamadı",
   "groupLegacyBanner": "Gruplar güncellendi, yükseltmek için yeni bir grup oluşturun. Eski grup işlevselliği {date} tarihinden itibaren azaltılacaktır.",
   "groupMemberLeft": "<b>{name}</b> gruptan ayrıldı.",
@@ -417,6 +436,7 @@
   "groupRemovedMultiple": "<b>{name}</b> ve <b>{count} diğer</b> gruptan çıkarıldı.",
   "groupRemovedTwo": "<b>{name}</b> ve <b>{other_name}</b> gruptan çıkarıldı.",
   "groupRemovedYou": "<b>{group_name}</b> grubundan çıkarıldınız.",
+  "groupRemovedYouMultiple": "<b>Siz</b> ve <b>{count} diğer</b> gruptan çıkarıldı.",
   "groupRemovedYouTwo": "<b>Sen</b> ve <b>{other_name}</b> gruptan çıkarıldınız.",
   "groupSetDisplayPicture": "Grup Profil Resmini Seçin",
   "groupUnknown": "Bilinmeyen Grup",
@@ -432,6 +452,7 @@
   "helpSupport": "Destek",
   "helpWedLoveYourFeedback": "Görüşlerinizi almak isteriz",
   "hide": "Gizle",
+  "hideMenuBarDescription": "Sistem menü çubuğu görünürlüğünü değiştirin",
   "hideOthers": "Diğerlerini Gizle",
   "image": "Görüntü",
   "incognitoKeyboard": "Gizli Klavye",
@@ -443,9 +464,12 @@
   "learnMore": "Daha fazla bilgi edinin",
   "leave": "Ayrıl",
   "leaving": "Çıkılıyor...",
+  "legacyGroupMemberNew": "<b>{name}</b> gruba katıldı.",
   "legacyGroupMemberNewMultiple": "<b>{name}</b> ve <b>{count} diğer</b> grup katıldı.",
   "legacyGroupMemberNewYouMultiple": "<b>Sen</b> ve <b>{count} diğerleri</b> gruba katılmaya davet edildiniz.",
+  "legacyGroupMemberNewYouOther": "<b>Siz</b> ve <b>{other_name}</b> gruba katıldınız.",
   "legacyGroupMemberTwoNew": "<b>{name}</b> ve <b>{other_name}</b> gruba katıldı.",
+  "legacyGroupMemberYouNew": "<b>Siz</b> gruba katıldınız.",
   "linkPreviews": "Bağlantı Önizlemeleri",
   "linkPreviewsDescription": "Desteklenen URL'ler için bağlantı önizlemeleri göster.",
   "linkPreviewsEnable": "Bağlantı Önizlemeleri Etkinleştirilsin mi",
@@ -502,6 +526,7 @@
   "messageRequestYouHaveAccepted": "<b>{name}</b> kullanıcısının mesaj isteğini kabul ettiniz.",
   "messageRequestsAcceptDescription": "Bu kullanıcıya mesaj göndermek otomatik olarak mesaj isteğini kabul edecek ve Session ID'nizi ortaya çıkaracaktır.",
   "messageRequestsAccepted": "Mesaj isteğiniz kabul edildi.",
+  "messageRequestsClearAllExplanation": "Tüm mesaj isteklerini ve grup davetlerini silmek istediğinize emin misiniz?",
   "messageRequestsCommunities": "Topluluk Mesaj Talepleri",
   "messageRequestsCommunitiesDescription": "Topluluk konuşmalarından gelen mesaj isteklerine izin verin.",
   "messageRequestsDelete": "Bu mesaj isteğini silmek istediğinizden emin misiniz?",
@@ -509,6 +534,7 @@
   "messageRequestsNonePending": "Bekleyen mesaj isteği yok",
   "messageRequestsTurnedOff": "<b>{name}</b> kullanıcısının, Topluluk sohbetlerindeki mesaj istekleri kapalı olduğu için kendisine mesaj gönderemezsiniz.",
   "messageSelect": "İleti seçin",
+  "messageSnippetGroup": "{author}: {message_snippet}",
   "messageStatusFailedToSend": "Gönderilemedi",
   "messageStatusFailedToSync": "Senkronizasyon başarısız oldu",
   "messageStatusSyncing": "Senkronize Ediliyor",
@@ -516,9 +542,12 @@
   "messageVoice": "Sesli Mesaj",
   "messageVoiceErrorShort": "Sesli mesaj kaydetmek için basılı tutun",
   "messageVoiceSlideToCancel": "İptal etmek için kaydırın",
+  "messageVoiceSnippet": "{emoji} Sesli Mesaj",
+  "messageVoiceSnippetGroup": "{author}: {emoji} Sesli Mesaj",
   "messages": "İletiler",
   "minimize": "Küçült",
   "next": "İleri",
+  "nicknameDescription": "<b>{name}</b> için bir takma ad seçin. Bu, bire bir ve grup sohbetlerinizde size görünecektir.",
   "nicknameEnter": "Bir kullanıcı adı girin",
   "nicknameRemove": "Takma adı kaldır",
   "nicknameSet": "Takma Ad Belirle",
@@ -542,6 +571,7 @@
   "notificationsGoToDevice": "Cihaz bildirim ayarlarına git",
   "notificationsHeaderAllMessages": "Bildirimler - Tümü",
   "notificationsHeaderMentionsOnly": "Bildirimler - Yalnızca Bahsedildiğinde",
+  "notificationsHeaderMute": "Bildirimler - Sessize Alındı",
   "notificationsIosGroup": "{name} tarafından {conversation_name}'ya",
   "notificationsIosRestart": "{device} yeniden başlatılırken mesajlar almış olabilirsiniz.",
   "notificationsLedColor": "LED rengi",
@@ -567,9 +597,13 @@
   "onboardingAccountCreate": "Hesap oluştur",
   "onboardingAccountCreated": "Hesap Oluşturuldu",
   "onboardingAccountExists": "Hesabım var",
+  "onboardingBackAccountCreation": "Daha ileriye gidemezsiniz. Hesap oluşturmayı iptal etmek için {app_name}'nın kapanması gerekir.",
+  "onboardingBackLoadAccount": "Daha ileriye gidemezsiniz. Hesabınızı yüklemeyi durdurmak için {app_name}'nın kapanması gerekir.",
+  "onboardingBubbleCreatingAnAccountIsEasy": "Hesap oluşturmak anında, ücretsiz ve anonimdir {emoji}",
   "onboardingBubbleNoPhoneNumber": "Kayıt olmak için telefon numarasına bile ihtiyacınız yok.",
   "onboardingBubblePrivacyInYourPocket": "Cebinizdeki gizlilik.",
   "onboardingBubbleSessionIsEngineered": "{app_name} gizliliğinizi koruyacak şekilde tasarlanmıştır.",
+  "onboardingBubbleWelcomeToSession": "{app_name}'ye Hoş Geldiniz {emoji}",
   "onboardingHitThePlusButton": "Sohbete başlamak, bir grup oluşturmak veya resmi bir topluluğa katılmak için artı butonuna tıklayın!",
   "onboardingMessageNotificationExplanation": "{app_name}'ın size yeni mesajları bildirmesinin iki yolu vardır.",
   "onboardingPrivacy": "Gizlilik Politikası",
@@ -593,6 +627,7 @@
   "passwordCurrentIncorrect": "Mevcut şifreniz yanlış.",
   "passwordDescription": "{app_name} uygulamasının kilidini açmak için şifre iste.",
   "passwordEnter": "Parolayı girin",
+  "passwordEnterCurrent": "Lütfen mevcut parolanızı girin",
   "passwordEnterNew": "Lütfen yeni parolanızı girin",
   "passwordError": "Parolanız sadece harf, sayı ve sembol içermelidir",
   "passwordErrorLength": "Parolanız 6 ila 64 karakter uzunluğu aralığında olmalıdır",
@@ -615,10 +650,14 @@
   "permissionsKeepInSystemTrayDescription": "{app_name} pencereyi kapattığınızda arka planda çalışmaya devam eder",
   "permissionsLibrary": "{app_name} devam etmek için fotoğraf kitaplığı erişimine ihtiyaç duyuyor. Erişimi iOS ayarlarından etkinleştirebilirsiniz.",
   "permissionsMicrophone": "Mikrofon",
+  "permissionsMicrophoneAccessRequired": "{app_name}, arama yapmak ve sesli mesajlar göndermek için mikrofon erişimine ihtiyaç duyuyor, fakat bu izin kalıcı olarak reddedilmiş. Ayarlar -> İzinler üzerine dokunun ve \"Mikrofon\" seçeneğini açın.",
   "permissionsMicrophoneAccessRequiredDesktop": "{app_name} gizlilik ayarlarından mikrofon erişimini etkinleştirebilirsiniz",
   "permissionsMicrophoneAccessRequiredIos": "{app_name}, arama yapmak ve sesli mesaj kaydetmek için mikrofon erişimine ihtiyaç duyar.",
+  "permissionsMicrophoneDescription": "Mikrofona erişim izni verin.",
   "permissionsMusicAudio": "{app_name} dosya, müzik ve ses gönderebilmek için müzik ve ses erişimine ihtiyaç duyar.",
   "permissionsRequired": "İzin gerekli",
+  "permissionsStorageDenied": "{app_name}, fotoğraf ve video göndermeniz için fotoğraf kitaplığı erişimine ihtiyaç duyar, fakat bu izin kalıcı olarak reddedilmiş. Ayarlar -> İzinler üzerine dokunun ve \"Fotoğraflar ve videolar\" seçeneğini açın.",
+  "permissionsStorageDeniedLegacy": "{app_name}, ek gönderme ve kaydetme işlemi için depolama erişimine ihtiyaç duyar. Ayarlar -> İzinler üzerine dokunun ve \"Depolama\" seçeneğini açın.",
   "permissionsStorageSave": "{app_name}, ekleri ve medyayı kaydetmek için depolama erişimine ihtiyaç duyar.",
   "permissionsStorageSaveDenied": "{app_name}, fotoğraf ve video kaydedebilmek için depolama erişimine ihtiyaç duyar, fakat bu izin kalıcı olarak reddedilmiş. Lütfen uygulama ayarlarına girin, \"İzinler\"i seçin ve \"Depolama\"yı etkinleştirin.",
   "permissionsStorageSend": "{app_name}, fotoğraf ve video göndermek için depolama erişimine ihtiyaç duyar.",
@@ -661,6 +700,7 @@
   "recoveryPasswordHidePermanentlyDescription1": "Recovery password olmadan hesabınızı yeni cihazlarda yükleyemezsiniz.<br/><br/>Devam etmeden önce recovery password'ınızı güvenli bir yerde saklamanızı şiddetle tavsiye ederiz.",
   "recoveryPasswordHidePermanentlyDescription2": "Bu cihazdaki kurtarma şifrenizi kalıcı olarak gizlemek istediğinizden emin misiniz? Bu geri alınamaz.",
   "recoveryPasswordHideRecoveryPassword": "Kurtarma Şifresini Gizle",
+  "recoveryPasswordHideRecoveryPasswordDescription": "Kurtarma parolanızı bu cihazda kalıcı olarak gizleyin.",
   "recoveryPasswordRestoreDescription": "Hesabınızı yüklemek için kurtarma parolanızı girin. Kaydetmediyseniz, uygulama ayarlarınızda bulabilirsiniz.",
   "recoveryPasswordView": "Şifreyi Görüntüle",
   "recoveryPasswordWarningSendDescription": "Bu sizin kurtarma ifadenizdir. Birine gönderirseniz, hesabınızda tam erişime sahip olurlar.",
@@ -713,6 +753,7 @@
   "shareAccountIdDescription": "Arkadaşını {app_name} üzerinde seninle konuşmaya davet etmek için onunla Hesap ID'ni paylaşabilirsin.",
   "shareAccountIdDescriptionCopied": "Arkadaşlarınızla genellikle nerede konuştuğunuzu paylaşın ve ardından sohbeti buraya taşıyın.",
   "shareExtensionDatabaseError": "Veritabanını açarken bir sorun oluştu. Lütfen uygulamayı yeniden başlatıp tekrar deneyin.",
+  "shareToSession": "{app_name}'ya paylaşın",
   "show": "Göster",
   "showAll": "Hepsini Göster",
   "showLess": "Daha az göster",
@@ -724,6 +765,7 @@
   "theError": "Hata",
   "tryAgain": "Tekrar Dene",
   "typingIndicators": "Yazım Belirtileri",
+  "typingIndicatorsDescription": "Yazım göstergelerini görün ve paylaşın.",
   "undo": "Geri al",
   "unknown": "Bilinmeyen",
   "updateApp": "Uygulama güncellemeleri",
@@ -740,6 +782,7 @@
   "urlCopy": "URL'yi Kopyala",
   "urlOpen": "URL açılsın mı",
   "urlOpenBrowser": "Bu tarayıcınızda açılacak.",
+  "urlOpenDescription": "Bu URL'yi tarayıcınızda açmak istediğinizden emin misiniz?<br/><br/><b>{url}</b>",
   "useFastMode": "Hızlı Modu Kullan",
   "video": "Video",
   "videoErrorPlay": "Video oynatılamıyor.",
