--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -142,6 +142,7 @@
   "callsInProgress": "Активний дзвінок",
   "callsIncoming": "Вхідний дзвінок від {name}",
   "callsIncomingUnknown": "Вхідний дзвінок",
+  "callsMicrophonePermissionsRequired": "Ви пропустили дзвінок від <b>{name}</b> через те, що не надали доступ до <b>мікрофону</b>.",
   "callsMissed": "Пропущений виклик",
   "callsMissedCallFrom": "Пропущений виклик від {name}",
   "callsNotificationsRequired": "Для голосових та відеодзвінків необхідно увімкнути сповіщення в налаштуваннях системи вашого пристрою.",
@@ -198,6 +199,7 @@
   "communityInvitation": "Запрошення до спільноти",
   "communityJoin": "Приєднатися до спільноти",
   "communityJoinDescription": "Ви впевнені, що хочете приєднатися до {community_name}?",
+  "communityJoinError": "Не вдалося приєднатися до спільноти",
   "communityJoinOfficial": "Або приєднуйтесь до однієї з цих...",
   "communityJoined": "Приєднано до спільноти",
   "communityJoinedAlready": "Ви вже є учасником цієї Community.",
@@ -391,6 +393,7 @@
   "groupInviteSending": "Надсилання запрошення",
   "groupInviteSent": "Запрошення надіслано",
   "groupInviteSuccessful": "Запрошення до групи успішне",
+  "groupInviteVersion": "Користувачі мають мати останню версію, щоб отримувати запрошення",
   "groupInviteYou": "<b>Ви</b> були підвищені до адміністратора.",
   "groupInviteYouAndMoreNew": "<b>Ви</b> та ще <b>{count} інших</b> приєдналися до групи.",
   "groupInviteYouAndOtherNew": "<b>Ви</b> та <b>{other_name}</b> приєдналися до групи.",
@@ -410,6 +413,7 @@
   "groupMemberNewTwo": "<b>{name}</b> та <b>{other_name}</b> були запрошені приєднатися до групи.",
   "groupMemberNewYouHistoryMultiple": "<b>Ви</b> та <b>{count}</b> інших були запрошені приєднатися до групи. Було надано спільний доступ до історії чату.",
   "groupMemberNewYouHistoryTwo": "<b>Ви</b> та <b>{name}</b> були запрошені приєднатися до групи. Було надано спільний доступ до історії чату.",
+  "groupMemberYouLeft": "<b>Ви</b> покинули групу.",
   "groupMembers": "Учасники групи",
   "groupMembersNone": "Відсутні учасники у цій групі.",
   "groupName": "Назва групи",
@@ -722,6 +726,7 @@
   "searchContacts": "Пошук контактів",
   "searchConversation": "Пошук бесіди",
   "searchEnter": "Будь ласка, введіть текст для пошуку",
+  "searchMatches": "{count, plural, one [{found_count} з # збіг] few [{found_count} з # збігаються] many [{found_count} з # збігів] other [{found_count} з # збігаються]}",
   "searchMatchesNone": "Нічого не знайдено.",
   "searchMatchesNoneSpecific": "Не знайдено результатів для '{query}",
   "searchMembers": "Пошук учасників",
