--- a/_locales/zh-TW/messages.json
+++ b/_locales/zh-TW/messages.json
@@ -8,6 +8,7 @@
   "accountIdErrorInvalid": "這個 Account ID 無效。請檢查並重試。",
   "accountIdOrOnsEnter": "輸入帳號 ID 或 ONS",
   "accountIdOrOnsInvite": "邀請帳號ID或ONS",
+  "accountIdShare": "嘿，我一直在使用 {app_name} 進行完全隱私和安全的聊天。快來加入我吧！我的帳號ID 是<br/><br/>{account_id}<br/><br/>在此下載：{session_download_url}",
   "accountIdYours": "你的帳號 ID",
   "accountIdYoursDescription": "這是你的 Account ID。其他使用者可以掃描來與你對話。",
   "actualSize": "實際大小",
@@ -29,7 +30,11 @@
   "adminRemoveAsAdmin": "Remove as Admin",
   "adminRemoveCommunityNone": "此 Community 中沒有 Admin。",
   "adminRemoveFailed": "無法移除 {name} 的管理者身分。",
+  "adminRemoveFailedMultiple": "無法移除 <b>{name}</b> 和 <b>{count} 位其他成員</b> 的管理員身份。",
+  "adminRemoveFailedOther": "無法移除 <b>{name}</b> 和 <b>{other_name}</b> 的管理員身份。",
   "adminRemovedUser": "<b>{name} <\\/b> 被撤下管理員的身份。",
+  "adminRemovedUserMultiple": "<b>{name}</b> 和 <b>{count} 位其他成員</b> 被移除管理員身份。",
+  "adminRemovedUserOther": "<b>{name}</b> 和 <b>{other_name}</b> 被移除管理員身份。",
   "adminSendingPromotion": "傳送管理員晉升",
   "adminSettings": "管理員設定",
   "adminTwoPromotedToAdmin": "<b>{name} <\\/b> 和 <b>{other_name} <\\/b> 被提拔為管理員。",
@@ -66,6 +71,7 @@
   "attachmentsDownload": "下載附件",
   "attachmentsDuration": "持續時間:",
   "attachmentsErrorLoad": "附加檔案出錯",
+  "attachmentsErrorMediaSelection": "無法選取此附件",
   "attachmentsErrorNoApp": "沒有合適的程式可以選取媒體檔案。",
   "attachmentsErrorNotSupported": "這個文件類型不受支持。",
   "attachmentsErrorNumber": "無法一次傳送多於 32 張圖片和影片。",
@@ -90,6 +96,7 @@
   "attachmentsMoveAndScale": "移動與裁切",
   "attachmentsNa": "N/A",
   "attachmentsNotification": "{emoji} 附件",
+  "attachmentsNotificationGroup": "{author}: {emoji} 附件",
   "attachmentsResolution": "解析度：",
   "attachmentsSaveError": "無法儲存檔案。",
   "attachmentsSendTo": "傳送給 {name}",
@@ -135,6 +142,7 @@
   "callsInProgress": "通話進行中",
   "callsIncoming": "來自{name}的來電",
   "callsIncomingUnknown": "來電",
+  "callsMicrophonePermissionsRequired": "您錯過了<b>{name}</b>的來電，因為您還未授權<b>麥克風存取</b>。",
   "callsMissed": "未接來電",
   "callsMissedCallFrom": "來自 {name} 的未接來電",
   "callsNotificationsRequired": "語音和視訊通話要求在您設備的系統設定中啟用通知。",
@@ -142,10 +150,12 @@
   "callsPermissionsRequiredDescription": "您可以在隱私權設定中啟用「語音和視訊通話」權限。",
   "callsReconnecting": "正在重新連線…",
   "callsRinging": "響鈴中...",
+  "callsSessionCall": "{app_name} 通話",
   "callsSettings": "通話 (Beta)",
   "callsVoiceAndVideo": "語音和視訊通話",
   "callsVoiceAndVideoBeta": "語音和視訊通話 (測試版)",
   "callsVoiceAndVideoModalDescription": "您在使用測試版通話時，您的 IP 將會被通話夥伴和 Oxen Foundation 伺服器看到。",
+  "callsVoiceAndVideoToggleDescription": "啟用語音通話和視像通話功能。",
   "callsYouCalled": "您撥打給 {name}",
   "callsYouMissedCallPermissions": "您錯過了<b>{name} </b>的一個通話，因為您沒有在隱私設定中啟用<b>語音和視頻通話</b>。",
   "cameraErrorNotFound": "未找到相機",
@@ -178,6 +188,9 @@
   "clearMessagesNoteToSelfDescription": "您確定要清除所有小筆記中的訊息嗎？",
   "close": "關閉",
   "closeWindow": "關閉視窗",
+  "commitHashDesktop": "Commit Hash: {hash}",
+  "communityBanDeleteDescription": "將會禁止選定的成員使用此 Community 並刪除所有成員訊息。確定要繼續嗎？",
+  "communityBanDescription": "將會禁止選定的成員使用此 Community。確定要繼續嗎？",
   "communityEnterUrl": "輸入社群 URL",
   "communityEnterUrlErrorInvalid": "無效網址",
   "communityEnterUrlErrorInvalidDescription": "請檢查 Community URL，然後再試一次。",
@@ -186,6 +199,7 @@
   "communityInvitation": "社群邀請",
   "communityJoin": "加入社群",
   "communityJoinDescription": "您確定要加入 {community_name} 嗎？",
+  "communityJoinError": "無法加入社群",
   "communityJoinOfficial": "或加入這些...",
   "communityJoined": "已加入社群",
   "communityJoinedAlready": "您已經是此 Community 的成員。",
@@ -232,6 +246,7 @@
   "conversationsSendWithEnterKeyDescription": "回車鍵發送訊息，而不是另起一行。",
   "conversationsSettingsAllMedia": "所有媒體",
   "conversationsSpellCheck": "拼寫檢查",
+  "conversationsSpellCheckDescription": "輸入訊息時進行檢查拼寫。",
   "conversationsStart": "開始會話",
   "copied": "已拷貝",
   "copy": "複製",
@@ -256,8 +271,12 @@
   "deleteAfterLegacyDisappearingMessagesLegacy": "Legacy",
   "deleteAfterLegacyDisappearingMessagesOriginal": "原始版本的自動銷毀訊息。",
   "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name} <\\/b> 已將訊息銷毀時間設為 <b>{time} <\\/b>",
+  "deleteAfterLegacyGroupsGroupCreation": "請稍候，正在建立群組……",
+  "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "無法更新群組",
   "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "您無權刪除他人訊息",
+  "deleteMessage": "{count, plural, other [刪除訊息]}",
   "deleteMessageConfirm": "您確定要刪除此消息嗎？",
+  "deleteMessageDeleted": "{count, plural, other [訊息已刪除]}",
   "deleteMessageDeletedGlobally": "這則訊息已經刪除",
   "deleteMessageDeletedLocally": "此段訊息經已刪除",
   "deleteMessageDescriptionDevice": "您確定只刪除此設備上的此消息嗎？",
@@ -281,6 +300,7 @@
   "disappearingMessagesDescription": "這個設置適用於對話中的所有人。",
   "disappearingMessagesDescription1": "這個設置適用於你在對話中發送的訊息。",
   "disappearingMessagesDescriptionGroup": "此設定適用於此對話中的所有人。<br/>僅小組管理員可更改此設定。",
+  "disappearingMessagesDisappear": "{disappearing_messages_type} 後消失 - {time}",
   "disappearingMessagesDisappearAfterRead": "閱後銷毀",
   "disappearingMessagesDisappearAfterReadDescription": "訊息讀後即焚。",
   "disappearingMessagesDisappearAfterReadState": "閱後銷毀 - {time}",
@@ -293,8 +313,11 @@
   "disappearingMessagesLegacy": "{name} 正在使用過時的客戶端。消失訊息可能無法如預期般運作。",
   "disappearingMessagesOnlyAdmins": "只有群組管理員可以更改此設定。",
   "disappearingMessagesSent": "已傳送",
+  "disappearingMessagesSet": "<b>{name}</b> 已將訊息設定為於 {disappearing_messages_type} 後的 {time} 消失。",
+  "disappearingMessagesSetYou": "<b>您</b> 設定訊息於 {disappearing_messages_type} 後的 {time} 消失。",
   "disappearingMessagesTimer": "計時器",
   "disappearingMessagesTurnedOff": "<b>{name} <\\/b> 已關閉訊息讀後焚毀功能。 他们发送的讯息将不再消失。",
+  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> 關閉了閱後即焚 <b>關閉</b>。",
   "disappearingMessagesTurnedOffYou": "<b>你 <\\/b> 關閉訊息讀後焚毀功能。 你发送的訊息将不再消失。",
   "disappearingMessagesTurnedOffYouGroup": "<b>你</b> 已關閉<b>閱後即焚</b>信息。",
   "disappearingMessagesTypeRead": "已讀",
@@ -329,6 +352,12 @@
   "emojiReactsClearAll": "您確定要清除所有 {emoji} 嗎？",
   "emojiReactsCoolDown": "請慢些！您發了太多 Emoji 回應, 請稍等再試。",
   "emojiReactsCountOthers": "{count, plural, other [# 也對此訊息回應了 {emoji}.]}",
+  "emojiReactsHoverNameDesktop": "{name} 使用 {emoji_name} 做出反應",
+  "emojiReactsHoverNameTwoDesktop": "{name} 和 {other_name} 使用 {emoji_name} 做出反應",
+  "emojiReactsHoverTwoNameMultipleDesktop": "{name} 和 <span>{count} 人</span> 使用 {emoji_name} 做出反應",
+  "emojiReactsHoverYouNameDesktop": "您使用 {emoji_name} 做出反應",
+  "emojiReactsHoverYouNameMultipleDesktop": "您和 <span>{count} 人</span> 使用 {emoji_name} 做出反應",
+  "emojiReactsHoverYouNameTwoDesktop": "您和 {name} 使用 {emoji_name} 做出反應",
   "emojiReactsNotification": "已對您的訊息做出反應 {emoji}。",
   "enable": "啟用",
   "errorConnection": "請檢查您的網路連線，然後再試一次。",
@@ -364,19 +393,26 @@
   "groupInviteSending": "傳送邀請",
   "groupInviteSent": "邀請已發送",
   "groupInviteSuccessful": "群組邀請成功",
+  "groupInviteVersion": "用戶必須擁有最新版本才能接收邀請",
   "groupInviteYou": "<b>你 <\\/b> 被邀請加入群組。",
   "groupInviteYouAndMoreNew": "<b>您</b> 和 <b>{count} 位其他成員</b> 加入了群組。",
   "groupInviteYouAndOtherNew": "<b>您</b> 和 <b>{other_name}</b> 加入了群組。",
   "groupLeave": "離開群組",
-  "groupLeaveDescription": "您確定要離開 {group_name} 嗎？",
+  "groupLeaveDescription": "您確定要離開 <b>{group_name}</b> 嗎？",
+  "groupLeaveDescriptionAdmin": "您確定要離開 <b>{group_name}</b> 嗎？<br/><br/>這將移除所有成員並刪除所有群組內容。",
   "groupLeaveErrorFailed": "未能退出 {group_name}",
   "groupLegacyBanner": "群組已升級，創建一個新群組以進行升級。舊群組的功能將從 {date} 開始降級。",
   "groupMemberLeft": "<b>{name} <\\/b> 離開此群組。",
   "groupMemberLeftMultiple": "<b>{name}<\\/b> 和 <b>{count} 位其他成員<\\/b> 離開了群組。",
   "groupMemberLeftTwo": "<b>{name} <\\/b> 和 <b>{other_name} <\\/b> 離開此群組。",
   "groupMemberNew": "<b>{name} <\\/b> 加入了群組。",
-  "groupMemberNewMultiple": "<b>{name} <\\/b> 和 <b>{count} 位其他成員 <\\/b> 已被邀請加入群組。",
+  "groupMemberNewHistory": "<b>{name}</b> 被邀請加入群組。 聊天記錄已分享。",
+  "groupMemberNewHistoryMultiple": "<b>{name}</b> 和 <b>{count} 位其他成員</b> 已被邀請加入群組。已分享聊天記錄。",
+  "groupMemberNewHistoryTwo": "<b>{name}</b> 和 <b>{other_name}</b> 被邀請加入群組。已分享聊天記錄。",
+  "groupMemberNewMultiple": "<b>{name} </b> 和 <b>{count} 位其他成員 </b> 已被邀請加入群組。",
   "groupMemberNewTwo": "<b>{name}</b> 和 <b>{other_name}</b> 被邀請加入群組。",
+  "groupMemberNewYouHistoryMultiple": "<b>您</b> 和 <b>{count} 位其他成員</b> 加入了群組。已分享聊天記錄。",
+  "groupMemberNewYouHistoryTwo": "<b>您</b> 和 <b>{name}</b> 加入了群組。已分享聊天記錄。",
   "groupMemberYouLeft": "<b>你</b>離開了此群組。",
   "groupMembers": "群組成員",
   "groupMembersNone": "這個群組沒有其他成員。",
@@ -394,10 +430,14 @@
   "groupRemoveDescription": "您是否想要從 <b>{group_name}</b> 中移除 <b>{name}</b>？",
   "groupRemoveDescriptionMultiple": "您是否想要從 <b>{group_name}</b> 中移除 <b>{name}</b> 和 <b>{count} 名其他成員</b>？",
   "groupRemoveDescriptionTwo": "您是否想要從 <b>{group_name}</b> 中移除 <b>{name}</b> 和 <b>{other_name}</b>？",
+  "groupRemoveMessages": "{count, plural, other [移除成員及其訊息]}",
+  "groupRemoveUserOnly": "{count, plural, other [移除成員]}",
   "groupRemoved": "<b>{name} <\\/b> 已被移出群組。",
   "groupRemovedMultiple": "<b>{name} <\\/b> 和 <b>{count} 其他成員 <\\/b> 被移出了群組。",
   "groupRemovedTwo": "<b>{name} <\\/b> 和 <b>{other_name} <\\/b> 被移出了群組。",
   "groupRemovedYou": "您已從<b>{group_name}</b>中被移除。",
+  "groupRemovedYouMultiple": "<b>您</b> 和 <b>{count} 位其他成員</b> 被移出了群組。",
+  "groupRemovedYouTwo": "<b>您</b> 和 <b>{other_name}</b> 被移出了群組。",
   "groupSetDisplayPicture": "設定群組顯示圖片",
   "groupUnknown": "未知群組",
   "groupUpdated": "群組已更新",
@@ -412,6 +452,7 @@
   "helpSupport": "支援",
   "helpWedLoveYourFeedback": "請提供我們建議",
   "hide": "隱藏",
+  "hideMenuBarDescription": "切換系統選單列可見性",
   "hideOthers": "隱藏其他",
   "image": "圖片",
   "incognitoKeyboard": "隱私鍵盤",
@@ -423,14 +464,18 @@
   "learnMore": "瞭解更多",
   "leave": "離開",
   "leaving": "離開中…",
+  "legacyGroupMemberNew": "<b>{name}</b> 加入了群組。",
   "legacyGroupMemberNewMultiple": "<b>{name}<\\/b> 和 <b>{count} 位其他成員<\\/b> 加入了群組。",
   "legacyGroupMemberNewYouMultiple": "<b>您</b> 和 <b>{count} 位其他成員</b> 加入了群組。",
+  "legacyGroupMemberNewYouOther": "<b>您</b> 和 <b>{other_name}</b> 加入了群組。",
   "legacyGroupMemberTwoNew": "<b>{name} <\\/b> 和 <b>{other_name} <\\/b> 加入了群組。",
+  "legacyGroupMemberYouNew": "<b>您</b> 加入了群組。",
   "linkPreviews": "連結預覽",
   "linkPreviewsDescription": "為支援的網址顯示連結預覽。",
   "linkPreviewsEnable": "啟用連結預覽",
   "linkPreviewsErrorLoad": "無法載入連結預覽",
   "linkPreviewsErrorUnsecure": "無法載入不安全連結的預覽",
+  "linkPreviewsFirstDescription": "顯示您發送和接收的 URL 預覽。這可能會很有用，但 {app_name} 必須聯繫已鏈接的網站才能生成預覽。您可以隨時在 {app_name} 的設置中關閉鏈接預覽。",
   "linkPreviewsSend": "傳送連結預覽",
   "linkPreviewsSendModalDescription": "您在傳送連結預覽時無法得到完整的元數據保護。",
   "linkPreviewsTurnedOff": "已停用預覽連結",
@@ -453,6 +498,7 @@
   "membersActive": "{count, plural, other [# 位線上成員]}",
   "membersAddAccountIdOrOns": "新增帳號 ID 或 ONS",
   "membersInvite": "邀請聯絡人",
+  "membersInviteSend": "{count, plural, other [傳送邀請]}",
   "membersInviteShareDescription": "您是否想要與 <b>{name}</b> 分享群組訊息歷史？",
   "membersInviteShareDescriptionMultiple": "您是否想要與 <b>{name}</b> 和 <b>{count} 名其他成員</b> 分享群組訊息歷史？",
   "membersInviteShareDescriptionTwo": "您是否想要與 <b>{name}</b> 和 <b>{other_name}</b> 分享群組訊息歷史？",
@@ -468,6 +514,7 @@
   "messageInfo": "訊息資訊",
   "messageMarkRead": "標示已讀",
   "messageMarkUnread": "標示為未讀",
+  "messageNew": "{count, plural, other [新訊息]}",
   "messageNewDescriptionDesktop": "通過輸入你朋友的 Account ID 或 ONS 開始一個新的對話。",
   "messageNewDescriptionMobile": "通過輸入你朋友的 Account ID、ONS 或掃描他們的 QR 碼開始一個新的對話。",
   "messageNewYouveGot": "{count, plural, other [你有 # 則新訊息。]}",
@@ -479,6 +526,7 @@
   "messageRequestYouHaveAccepted": "您已接受來自 <b>{name}</b> 的訊息請求。",
   "messageRequestsAcceptDescription": "傳送訊息給使用者將自動接受其訊息要求並顯示您的 Account ID。",
   "messageRequestsAccepted": "您的訊息請求已被接受。",
+  "messageRequestsClearAllExplanation": "您確定要清除所有訊息要求和群組邀請嗎？",
   "messageRequestsCommunities": "社群訊息請求",
   "messageRequestsCommunitiesDescription": "允許來自社群對話的訊息請求。",
   "messageRequestsDelete": "您確定要刪除此消息請求嗎？",
@@ -486,6 +534,7 @@
   "messageRequestsNonePending": "沒有擱置中的訊息要求",
   "messageRequestsTurnedOff": "<b>{name} <\\/b> 已關閉來自社群對話的訊息請求，因此你無法向他們發送訊息。",
   "messageSelect": "選取訊息",
+  "messageSnippetGroup": "{author}: {message_snippet}",
   "messageStatusFailedToSend": "無法傳送",
   "messageStatusFailedToSync": "同步失敗",
   "messageStatusSyncing": "同步中",
@@ -493,9 +542,12 @@
   "messageVoice": "語音訊息",
   "messageVoiceErrorShort": "按住錄製語音消息",
   "messageVoiceSlideToCancel": "滑動以取消",
+  "messageVoiceSnippet": "{emoji} 語音訊息",
+  "messageVoiceSnippetGroup": "{author}: {emoji} 語音訊息",
   "messages": "訊息",
   "minimize": "最小化",
   "next": "下一步",
+  "nicknameDescription": "為 <b>{name}</b> 選擇一個暱稱。這將在您的一對一和群組對話中顯示。",
   "nicknameEnter": "輸入暱稱",
   "nicknameRemove": "Remove nickname",
   "nicknameSet": "設定暱稱",
@@ -519,6 +571,7 @@
   "notificationsGoToDevice": "打開設備通知設定",
   "notificationsHeaderAllMessages": "通知 - 全部",
   "notificationsHeaderMentionsOnly": "通知 - 僅提及",
+  "notificationsHeaderMute": "通知 - 靜音",
   "notificationsIosGroup": "{name} 至 {conversation_name}",
   "notificationsIosRestart": "在您的設備 {device} 重新啟動時接收到了訊息。",
   "notificationsLedColor": "LED 顏色",
@@ -544,9 +597,13 @@
   "onboardingAccountCreate": "建立帳號",
   "onboardingAccountCreated": "帳號已建立",
   "onboardingAccountExists": "我已有帳戶",
+  "onboardingBackAccountCreation": "您無法再往回了。為取消您的帳戶創建，{app_name} 需要退出。",
+  "onboardingBackLoadAccount": "您無法再往回了。為停止加載您的帳戶，{app_name} 需要退出。",
+  "onboardingBubbleCreatingAnAccountIsEasy": "創建帳戶是即時、免費的，且是匿名的 {emoji}",
   "onboardingBubbleNoPhoneNumber": "您甚至不需要電話號碼即可註冊。",
   "onboardingBubblePrivacyInYourPocket": "隱私在您口袋裡。",
   "onboardingBubbleSessionIsEngineered": "{app_name} 專為保護您的隱私而設計。",
+  "onboardingBubbleWelcomeToSession": "歡迎使用 {app_name} {emoji}",
   "onboardingHitThePlusButton": "點擊加號按鈕開始聊天、創建群組或加入官方社群！",
   "onboardingMessageNotificationExplanation": "{app_name} 有兩種方式向您傳送通知。",
   "onboardingPrivacy": "隱私權政策",
@@ -570,6 +627,7 @@
   "passwordCurrentIncorrect": "您當前的密碼不正確。",
   "passwordDescription": "需要密碼才能解鎖 {app_name}。",
   "passwordEnter": "輸入密碼",
+  "passwordEnterCurrent": "請輸入您目前的密碼",
   "passwordEnterNew": "請輸入您的新密碼",
   "passwordError": "密碼只能包含字母、數字和符號",
   "passwordErrorLength": "密碼必須介於6到64個字元之間。",
@@ -592,10 +650,14 @@
   "permissionsKeepInSystemTrayDescription": "當您關閉視窗之後，{app_name} 會繼續在系統背景執行",
   "permissionsLibrary": "{app_name} 需要照片庫存取權才能繼續。您可以在 iOS 設定中啟用存取權。",
   "permissionsMicrophone": "麥克風",
+  "permissionsMicrophoneAccessRequired": "{app_name} 需要麥克風的權限來打電話和傳送語音訊息，但已被永久拒絕。請到設置 -> 權限中，打開「麥克風」權限。",
   "permissionsMicrophoneAccessRequiredDesktop": "您可以在 {app_name} 的隱私權設定中啟用麥克風存取權。",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} 需要麥克風存取權來撥打電話和錄製語音訊息。",
+  "permissionsMicrophoneDescription": "允許存取麥克風。",
   "permissionsMusicAudio": "{app_name} 需要音樂和音訊訪問權限，才能夠發送檔案、音樂和音訊。",
   "permissionsRequired": "需要權限",
+  "permissionsStorageDenied": "{app_name} 需要照片庫的存取權限才能傳送照片和影片，但它已被永久拒絕。請到設定 -> 權限中，開啟「照片和影片」權限。",
+  "permissionsStorageDeniedLegacy": "{app_name} 需要儲存空間的存取權限才能傳送和儲存附件。請到設定 -> 權限中，開啟「儲存空間」權限。",
   "permissionsStorageSave": "{app_name} 需要存儲空間存取權以保存附件和媒體。",
   "permissionsStorageSaveDenied": "{app_name} 需要存儲空間存取權來保存照片和視頻，但它已被永久拒絕。請到應用程式設定中，選取「權限」，並啟用「存儲」。",
   "permissionsStorageSend": "{app_name} 需要存儲空間存取權來發送照片和影片。",
@@ -628,6 +690,7 @@
   "recoveryPasswordBannerTitle": "Save your recovery password",
   "recoveryPasswordDescription": "請使用您的恢復密碼在新裝置上載入您的帳戶。<br/><br/>沒有恢復密碼無法恢復您的帳戶。請確保將其儲存於安全的地方—且不要與任何人分享。",
   "recoveryPasswordEnter": "輸入您的恢復密碼",
+  "recoveryPasswordErrorLoad": "載入您的恢復密碼時發生錯誤。<br/><br/>請匯出您的日誌，然後透過 Session 的協助台上傳檔案以解決此問題。",
   "recoveryPasswordErrorMessageGeneric": "請檢查您的恢復密碼，再試一次。",
   "recoveryPasswordErrorMessageIncorrect": "您復原密碼中的某些詞不正確。請檢查並重試。",
   "recoveryPasswordErrorMessageShort": "你輸入的 Recovery Password 不夠長。請檢查並重試。",
@@ -637,6 +700,7 @@
   "recoveryPasswordHidePermanentlyDescription1": "沒有您的 Recovery password，您無法在新設備上加載您的帳戶。<br/><br/>我們強烈建議您在繼續操作前，將您的 Recovery password保存在一個安全可靠的地方。",
   "recoveryPasswordHidePermanentlyDescription2": "您確定要在此裝置上永久隱藏您的恢復密碼嗎？此操作無法撤銷。",
   "recoveryPasswordHideRecoveryPassword": "隱藏恢復密碼",
+  "recoveryPasswordHideRecoveryPasswordDescription": "在此設備上永久隱藏您的恢復密碼。",
   "recoveryPasswordRestoreDescription": "輸入您的恢復密碼以載入您的帳戶。如果您尚未保存它，可以在應用設置中找到。",
   "recoveryPasswordView": "檢視密碼",
   "recoveryPasswordWarningSendDescription": "這是你的復原片語。獲得這段復原片語的任何人都可以全權存取你的帳戶。",
@@ -662,6 +726,7 @@
   "searchContacts": "搜尋聯絡人",
   "searchConversation": "搜尋對話",
   "searchEnter": "請輸入搜尋內容",
+  "searchMatches": "{count, plural, other [{found_count} 中的 # 個項目相符]}",
   "searchMatchesNone": "找不到結果.",
   "searchMatchesNoneSpecific": "無 \"{query}\" 的搜尋結果",
   "searchMembers": "搜尋成員",
@@ -685,24 +750,29 @@
   "set": "設定",
   "settingsRestartDescription": "您必須重新啓動 {app_name} 以應用您的新設定。",
   "share": "分享",
+  "shareAccountIdDescription": "分享您的帳號 ID 來邀請好友在 {app_name} 上聊天。",
   "shareAccountIdDescriptionCopied": "在任何慣常與朋友交談的地方與他們分享, 然後將對話移到這裏。",
   "shareExtensionDatabaseError": "打開資料庫時出現問題。請重新啟動應用程式並重試。",
+  "shareToSession": "分享到 {app_name}",
   "show": "顯示",
   "showAll": "顯示全部",
   "showLess": "顯示較少",
   "stickers": "貼圖",
   "supportGoTo": "前往支援頁面",
+  "systemInformationDesktop": "系統資訊：{information}",
   "theContinue": "繼續",
   "theDefault": "預設",
   "theError": "錯誤",
   "tryAgain": "再試一次",
   "typingIndicators": "輸入狀態",
+  "typingIndicatorsDescription": "查看並分享鍵入狀態。",
   "undo": "復原",
   "unknown": "不明",
   "updateApp": "應用程式更新",
   "updateDownloaded": "已安裝更新，點擊以重新啟動",
   "updateDownloading": "正在下載更新: {percent_loader}%",
   "updateError": "無法更新",
+  "updateErrorDescription": "{app_name} 更新失敗。請前往 {session_download_url} 手動安裝新版本，然後聯繫我們的幫助中心通知我們這個問題。",
   "updateNewVersion": "有新版本的 {app_name}，輕觸更新",
   "updateNewVersionDescription": "有新版本的 {app_name}。",
   "updateReleaseNotes": "前往發行紀錄",
@@ -712,6 +782,7 @@
   "urlCopy": "複製網址",
   "urlOpen": "開啟網址",
   "urlOpenBrowser": "這將在您的瀏覽器中打開。",
+  "urlOpenDescription": "您確定要在瀏覽器中打開此 URL 嗎？<br/><br/><b>{url}</b>",
   "useFastMode": "使用快速模式",
   "video": "影片",
   "videoErrorPlay": "無法播放影片。",
