--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -8,6 +8,7 @@
   "accountIdErrorInvalid": "이 계정 ID는 유효하지 않습니다. 확인 후 다시 시도해주세요.",
   "accountIdOrOnsEnter": "Account ID 또는 ONS 입력",
   "accountIdOrOnsInvite": "계정 ID 또는 ONS 초대",
+  "accountIdShare": "안녕하세요, 저는 {app_name}을 사용하여 완전한 프라이버시와 보안 속에서 채팅하고 있어요. 함께 하세요! 제 계정 ID는<br/><br/>{account_id}<br/><br/>다운로드 링크: {session_download_url}",
   "accountIdYours": "Your Account ID",
   "accountIdYoursDescription": "이는 당신의 계정 ID입니다. 다른 사용자가 이를 스캔하여 당신과 대화를 시작할 수 있습니다.",
   "actualSize": "실제 크기",
@@ -30,6 +31,7 @@
   "adminRemoveCommunityNone": "이 커뮤니티에 관리자가 없습니다.",
   "adminRemoveFailed": "{name}님을 관리자로 제거하지 못했습니다.",
   "adminRemoveFailedMultiple": "{name} 님과 {count} 명의 사람들의 관리자 직책을 제거하지 못했습니다.",
+  "adminRemoveFailedOther": "<b>{name}</b>님과 <b>{other_name}</b>님의 관리자 직책을 제거하지 못했습니다.",
   "adminRemovedUser": "<b>{name}님</b>이 관리자에서 제거되었습니다.",
   "adminRemovedUserMultiple": "<b>{name}</b>님과 <b>{count} 명의 사람들</b>의 관리자 직책이 제거되었습니다",
   "adminRemovedUserOther": "<b>{name}</b>님과 <b>{other_name}</b>님의 관리자 직책이 제거되었습니다.",
@@ -94,6 +96,7 @@
   "attachmentsMoveAndScale": "이동 및 크기 조정",
   "attachmentsNa": "N/A",
   "attachmentsNotification": "{emoji} 첨부 파일",
+  "attachmentsNotificationGroup": "{author}: {emoji} 첨부 파일",
   "attachmentsResolution": "해상도:",
   "attachmentsSaveError": "파일을 저장할 수 없습니다.",
   "attachmentsSendTo": "{name}에게 전송",
@@ -139,6 +142,7 @@
   "callsInProgress": "통화 중",
   "callsIncoming": "{name}에서 걸려오는 전화",
   "callsIncomingUnknown": "수신 전화",
+  "callsMicrophonePermissionsRequired": "<b>{name}</b>님으로부터 받은 전화를 놓쳤습니다. <b>마이크 접근 권한</b>을 허용하지 않았기 때문입니다.",
   "callsMissed": "부재중 통화",
   "callsMissedCallFrom": "{name} 님의 부재중 통화",
   "callsNotificationsRequired": "음성 및 영상 통화는 장치 시스템 설정에서 알림을 활성화해야 합니다.",
@@ -146,10 +150,12 @@
   "callsPermissionsRequiredDescription": "개인정보 설정에서 '음성 및 영상 통화' 항목을 활성화할 수 있습니다.",
   "callsReconnecting": "다시 연결 중…",
   "callsRinging": "전화 거는 중...",
+  "callsSessionCall": "{app_name} 통화",
   "callsSettings": "통화 (베타)",
   "callsVoiceAndVideo": "음성 및 영상 통화",
   "callsVoiceAndVideoBeta": "음성 및 영상 통화 (Beta)",
   "callsVoiceAndVideoModalDescription": "베타 통화를 사용하는 동안 IP가 호출 파트너와 Oxen Foundation 서버에 보입니다.",
+  "callsVoiceAndVideoToggleDescription": "다른 사용자와 음성 및 영상 통화를 할 수 있습니다.",
   "callsYouCalled": "{name}님에게 전화함",
   "callsYouMissedCallPermissions": "<b>{name}</b>님으로부터 받은 전화를 놓쳤습니다. 개인 정보 설정에서 <b>음성 및 화상 통화</b>를 활성화하지 않았기 때문입니다.",
   "cameraErrorNotFound": "카메라를 찾을 수 없습니다.",
@@ -183,6 +189,8 @@
   "close": "닫기",
   "closeWindow": "닫기",
   "commitHashDesktop": "커밋 해시: {hash}",
+  "communityBanDeleteDescription": "선택한 사용자를 이 커뮤니티에서 차단하고 모든 메시지를 삭제합니다. 계속하시겠습니까?",
+  "communityBanDescription": "선택한 사용자를 이 커뮤니티에서 차단합니다. 계속하시겠습니까?",
   "communityEnterUrl": "커뮤니티 URL 입력하기",
   "communityEnterUrlErrorInvalid": "유효하지 않은 URL",
   "communityEnterUrlErrorInvalidDescription": "Community URL을 확인하시고 다시 시도해주세요.",
@@ -191,6 +199,7 @@
   "communityInvitation": "커뮤니티 초대",
   "communityJoin": "커뮤니티 가입",
   "communityJoinDescription": "정말 {community_name}에 가입하시겠습니까?",
+  "communityJoinError": "커뮤니티 참여 실패",
   "communityJoinOfficial": "또는 이 중에서 참여...",
   "communityJoined": "커뮤니티에 가입했습니다",
   "communityJoinedAlready": "이미 이 그룹에 연결되어 있습니다!",
@@ -237,6 +246,7 @@
   "conversationsSendWithEnterKeyDescription": "Enter를 누를 때 줄바꿈 대신 메시지를 전송합니다.",
   "conversationsSettingsAllMedia": "모든 미디어",
   "conversationsSpellCheck": "맞춤법 검사",
+  "conversationsSpellCheckDescription": "메시지를 입력할 때 맞춤법 검사를 활성화합니다.",
   "conversationsStart": "대화 시작하기",
   "copied": "복사됨",
   "copy": "복사",
@@ -264,7 +274,9 @@
   "deleteAfterLegacyGroupsGroupCreation": "그룹 생성 중...",
   "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "그룹 업데이트 실패",
   "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "다른 사람의 메시지를 삭제할 수 있는 권한이 없습니다",
+  "deleteMessage": "{count, plural, other [메시지 삭제]}",
   "deleteMessageConfirm": "정말 이 메시지를 삭제하시겠습니까?",
+  "deleteMessageDeleted": "{count, plural, other [메시지가 삭제되었습니다.]}",
   "deleteMessageDeletedGlobally": "이 메시지는 삭제되었습니다.",
   "deleteMessageDeletedLocally": "이 장치에서 이 메시지가 삭제되었습니다.",
   "deleteMessageDescriptionDevice": "정말 이 메시지를 이 장치에서만 삭제하시겠습니까?",
@@ -305,6 +317,7 @@
   "disappearingMessagesSetYou": "<b>당신</b>이 메시지가 {disappearing_messages_type} 이후 {time} 후에 사라지는 설정을 했습니다.",
   "disappearingMessagesTimer": "타이머",
   "disappearingMessagesTurnedOff": "<b>{name}님</b>이 사라지는 메시지 기능을 끄셨습니다. 이제 보낸 메시지는 사라지지 않습니다.",
+  "disappearingMessagesTurnedOffGroup": "<b>{name}</b>님이 메시지 자동 삭제를 <b>비활성화</b>했습니다.",
   "disappearingMessagesTurnedOffYou": "<b>당신</b>이 사라지는 메시지 기능을 <b>끄셨습니다</b>. 이제 보낸 메시지는 사라지지 않습니다.",
   "disappearingMessagesTurnedOffYouGroup": "<b>당신이</b> <b>자동 삭제</b> 메시지를 비활성화 했습니다.",
   "disappearingMessagesTypeRead": "읽음",
@@ -339,6 +352,12 @@
   "emojiReactsClearAll": "Are you sure you want to clear all {emoji}?",
   "emojiReactsCoolDown": "속도를 줄이세요! 너무 많은 이모지 반응을 보냈습니다. 잠시 후 다시 시도해 주세요",
   "emojiReactsCountOthers": "{count, plural, other [그리고 #명이 이 메시지에 {emoji}로 반응했습니다.]}",
+  "emojiReactsHoverNameDesktop": "{name}이(가) {emoji_name}으로 반응했습니다",
+  "emojiReactsHoverNameTwoDesktop": "{name} 및 {other_name}이(가) {emoji_name}으로 반응했습니다",
+  "emojiReactsHoverTwoNameMultipleDesktop": "{name}과 <span>{count}명</span>이(가) {emoji_name}으로 반응했습니다",
+  "emojiReactsHoverYouNameDesktop": "사용자님이 {emoji_name}으로 반응했습니다",
+  "emojiReactsHoverYouNameMultipleDesktop": "사용자님과 <span>{count}명</span>이(가) {emoji_name}으로 반응했습니다",
+  "emojiReactsHoverYouNameTwoDesktop": "사용자 및 {name}님이 {emoji_name}으로 반응했습니다",
   "emojiReactsNotification": "당신의 메시지에 {emoji} 반응함",
   "enable": "활성화",
   "errorConnection": "인터넷 연결을 확인하시고 다시 시도해주세요.",
@@ -374,11 +393,13 @@
   "groupInviteSending": "초대 전송 중",
   "groupInviteSent": "초대 전송됨",
   "groupInviteSuccessful": "그룹 초대 성공",
+  "groupInviteVersion": "사용자는 초대를 받으려면 최신 버전을 보유하고 있어야 합니다",
   "groupInviteYou": "<b>당신</b>이 그룹 참여 초대를 받았습니다.",
   "groupInviteYouAndMoreNew": "<b>당신</b>과 <b>{count}명</b>이 그룹에 참여했습니다.",
   "groupInviteYouAndOtherNew": "<b>당신</b>과 <b>{other_name}님</b>이 그룹에 참여했습니다.",
   "groupLeave": "그룹 나가기",
   "groupLeaveDescription": "{group_name}에서 나가시겠습니까?",
+  "groupLeaveDescriptionAdmin": "<b>{group_name}</b> 그룹을 탈퇴하시겠습니까?<br/><br/>이 작업은 모든 멤버를 제거하고 그룹 콘텐츠를 삭제합니다.",
   "groupLeaveErrorFailed": "{group_name}을(를) 떠날 수 없습니다.",
   "groupLegacyBanner": "그룹이 업그레이드되었습니다. 새 그룹을 생성하여 업그레이드하세요. 오래된 그룹 기능은 {date} 이후로 저하될 것입니다.",
   "groupMemberLeft": "<b>{name}님</b>이 그룹을 나갔습니다.",
@@ -409,6 +430,8 @@
   "groupRemoveDescription": "<b>{group_name}</b>에서 <b>{name}</b>님을 제거하시겠습니까?",
   "groupRemoveDescriptionMultiple": "<b>{group_name}</b>에서 <b>{name}</b>님과 <b>{count}명</b>을 제거하시겠습니까?",
   "groupRemoveDescriptionTwo": "<b>{group_name}</b>에서 <b>{name}</b>님과 <b>{other_name}</b>님을 제거하시겠습니까?",
+  "groupRemoveMessages": "{count, plural, other [사용자 및 메시지 제거]}",
+  "groupRemoveUserOnly": "{count, plural, other [사용자 제거]}",
   "groupRemoved": "<b>{name}님</b>이 그룹에서 제거되었습니다.",
   "groupRemovedMultiple": "<b>{name}님</b>과 <b>{count}명</b>이 그룹에서 제거되었습니다.",
   "groupRemovedTwo": "<b>{name}님</b>과 <b>{other_name}님</b>이 그룹에서 제거되었습니다.",
@@ -441,6 +464,7 @@
   "learnMore": "더 알아보기",
   "leave": "나가기",
   "leaving": "떠나는 중...",
+  "legacyGroupMemberNew": "<b>{name}</b>님이 그룹에 참여했습니다.",
   "legacyGroupMemberNewMultiple": "<b>{name}님</b>님과 <b>{count}명</b>이 그룹에 참여했습니다.",
   "legacyGroupMemberNewYouMultiple": "<b>당신</b>님과 <b>{count}명</b>이 그룹에 참여했습니다.",
   "legacyGroupMemberNewYouOther": "<b>당신</b>과 <b>{other_name}</b>님이 그룹에 참여했습니다.",
@@ -474,6 +498,7 @@
   "membersActive": "{count, plural, other [#인 온라인]}",
   "membersAddAccountIdOrOns": "Add Account ID or ONS",
   "membersInvite": "연락처에서 초대",
+  "membersInviteSend": "{count, plural, other [초대 전송]}",
   "membersInviteShareDescription": "<b>{name}</b>님에게 그룹 메시지 기록을 공유하시겠습니까?",
   "membersInviteShareDescriptionMultiple": "<b>{name}</b>님과 <b>{count}명</b>에게 그룹 메시지 기록을 공유하시겠습니까?",
   "membersInviteShareDescriptionTwo": "<b>{name}</b>님과 <b>{other_name}</b>님에게 그룹 메시지 기록을 공유하시겠습니까?",
@@ -489,6 +514,7 @@
   "messageInfo": "메시지 정보",
   "messageMarkRead": "읽음으로 표시",
   "messageMarkUnread": "읽지 않음으로 표시",
+  "messageNew": "{count, plural, other [새로운 메시지]}",
   "messageNewDescriptionDesktop": "친구의 Account ID 또는 ONS를 입력하여 새로운 대화를 시작하세요.",
   "messageNewDescriptionMobile": "친구의 Account ID, ONS를 입력하거나 QR 코드를 스캔하여 새 대화를 시작하십시오.",
   "messageNewYouveGot": "{count, plural, other [# 님에게 새 메시지가 도착했습니다.]}",
@@ -500,6 +526,7 @@
   "messageRequestYouHaveAccepted": "<b>{name}의</b> 메시지 요청을 수락했습니다.",
   "messageRequestsAcceptDescription": "이 사용자에게 메시지를 보내면 메시지 요청이 자동으로 수락되고 귀하의 세션 ID가 공개됩니다.",
   "messageRequestsAccepted": "당신의 메시지 요청이 수락되었습니다.",
+  "messageRequestsClearAllExplanation": "모든 메세지 요청과 그룹 초대를 삭제하시겠습니까?",
   "messageRequestsCommunities": "커뮤니티 메시지 요청",
   "messageRequestsCommunitiesDescription": "Allow message requests from Community conversations.",
   "messageRequestsDelete": "정말 이 메시지 요청을 삭제하시겠습니까?",
@@ -507,6 +534,7 @@
   "messageRequestsNonePending": "보류중인 메세지 요청이 없습니다.",
   "messageRequestsTurnedOff": "<b>{name}</b>의 커뮤니티 대화에서 메시지 요청이 꺼져 있어 메시지를 보낼 수 없습니다.",
   "messageSelect": "메시지 선택",
+  "messageSnippetGroup": "{author}: {message_snippet}",
   "messageStatusFailedToSend": "전송 실패",
   "messageStatusFailedToSync": "동기화 실패",
   "messageStatusSyncing": "동기화 중",
@@ -514,9 +542,12 @@
   "messageVoice": "음성 메시지",
   "messageVoiceErrorShort": "음성 메시지를 녹음하려면 꾹 누르세요",
   "messageVoiceSlideToCancel": "취소하려면 슬라이드",
+  "messageVoiceSnippet": "{emoji} 음성 메시지",
+  "messageVoiceSnippetGroup": "{author}: {emoji} 음성 메시지",
   "messages": "메시지",
   "minimize": "최소화",
   "next": "다음",
+  "nicknameDescription": "<b>{name}</b>의 닉네임을 선택하십시오. 일대일 및 그룹 채팅에서 표시됩니다.",
   "nicknameEnter": "닉네임을 입력하세요.",
   "nicknameRemove": "닉네임 제거",
   "nicknameSet": "닉네임 설정",
@@ -540,6 +571,7 @@
   "notificationsGoToDevice": "기기 알림 설정으로 이동",
   "notificationsHeaderAllMessages": "알림 - 전체",
   "notificationsHeaderMentionsOnly": "알림 - 멘션만",
+  "notificationsHeaderMute": "알림 - 음소거",
   "notificationsIosGroup": "{name}이(가) {conversation_name}에 보냈습니다",
   "notificationsIosRestart": "{device}가 재시동되는 동안 메시지를 수신했을 수 있습니다.",
   "notificationsLedColor": "알림등 색상",
@@ -567,10 +599,13 @@
   "onboardingAccountExists": "계정이 있습니다",
   "onboardingBackAccountCreation": "더 이상 돌아갈 수 없습니다. 계정 생성을 취소하려면 {app_name} 을 종료해야 합니다.",
   "onboardingBackLoadAccount": "더 이상 돌아갈 수 없습니다. 계정을 불러오기를 중단하려면 {app_name} 을 종료해야 합니다.",
+  "onboardingBubbleCreatingAnAccountIsEasy": "계정 생성은 즉시, 무료이며 익명입니다 {emoji}",
   "onboardingBubbleNoPhoneNumber": "가입할 때 전화번호가 필요하지 않습니다.",
   "onboardingBubblePrivacyInYourPocket": "당신의 주머니 속 개인정보 보호.",
   "onboardingBubbleSessionIsEngineered": "{app_name}는 개인 정보를 보호하기 위해 설계되었습니다.",
+  "onboardingBubbleWelcomeToSession": "{app_name}에 오신 것을 환영합니다 {emoji}",
   "onboardingHitThePlusButton": "채팅을 시작하거나, 그룹을 생성하거나, 공식 커뮤니티에 참여하려면 플러스 버튼을 눌러보세요!",
+  "onboardingMessageNotificationExplanation": "{app_name}이 새 메시지를 알릴 수 있는 두 가지 방법이 있습니다.",
   "onboardingPrivacy": "개인정보 보호 정책",
   "onboardingTos": "Terms of Service",
   "onboardingTosPrivacy": "서비스를 사용함으로써, 귀하는 우리의 <b>서비스 약관</b> 및 <b>개인정보 보호정책</b>에 동의하게 됩니다.",
@@ -585,11 +620,14 @@
   "open": "열기",
   "other": "기타",
   "passwordChange": "비밀번호 변경",
+  "passwordChangeDescription": "{app_name} 잠금 해제 시 사용되는 비밀번호를 변경합니다.",
   "passwordChangedDescription": "비밀번호 변경이 완료되었습니다. 안전히 관리하시기 바랍니다.",
   "passwordConfirm": "비밀번호 확인",
   "passwordCreate": "비밀번호 만들기",
   "passwordCurrentIncorrect": "현재 비밀번호가 잘못되었습니다.",
+  "passwordDescription": "{app_name} 잠금 해제에 비밀번호가 필요합니다.",
   "passwordEnter": "비밀번호 입력",
+  "passwordEnterCurrent": "현재 비밀번호를 입력해주세요",
   "passwordEnterNew": "새 비밀번호를 입력해 주세요",
   "passwordError": "비밀번호는 문자, 숫자 및 간단한 기호만으로 구성되야 합니다",
   "passwordErrorLength": "비밀번호는 반드시 6자에서 12자 사이어야 합니다.",
@@ -612,10 +650,14 @@
   "permissionsKeepInSystemTrayDescription": "{app_name} 창을 닫아도 백그라운드에서 실행됩니다.",
   "permissionsLibrary": "{app_name}은 포토 라이브러리 접근권한이 필요합니다. iOS 설정에서 접근 권한을 허용할 수 있습니다.",
   "permissionsMicrophone": "마이크",
+  "permissionsMicrophoneAccessRequired": "{app_name}은 통화 및 음성 메시지를 보내기 위해 마이크 접근 권한이 필요하지만 영구적으로 거부되었습니다. 설정에서 '권한'으로 이동하여 '마이크'를 켜십시오.",
   "permissionsMicrophoneAccessRequiredDesktop": "{app_name}의 프라이버시 설정에서 마이크 접근을 허용할 수 있습니다",
   "permissionsMicrophoneAccessRequiredIos": "{app_name}은 통화를 하고 음성 메시지를 녹음하기 위해 마이크 접근이 필요합니다.",
+  "permissionsMicrophoneDescription": "마이크 접근 권한을 허용해주세요.",
   "permissionsMusicAudio": "{app_name}는 파일, 음악 및 오디오를 전송하려면 음악 및 오디오 접근이 필요합니다.",
   "permissionsRequired": "권한 필요",
+  "permissionsStorageDenied": "{app_name}에서 사진과 동영상을 전송하려면 사진 보관함 접근 권한이 필요하지만 영구적으로 거부되었습니다. 설정 -> 권한으로 이동하여 \"사진 및 동영상\"을 켜십시오.",
+  "permissionsStorageDeniedLegacy": "{app_name}에서 첨부파일을 전송하고 저장하려면 저장소 접근 권한이 필요합니다. 설정 -> 권한으로 이동하여 \"저장소\"를 켜십시오.",
   "permissionsStorageSave": "{app_name}은 첨부 파일과 미디어를 저장하기 위해 저장 공간 접근이 필요합니다.",
   "permissionsStorageSaveDenied": "{app_name}은 사진과 동영상을 저장하기 위해 저장 공간 접근이 필요하지만 영구적으로 거부되었습니다. 앱 설정에서 \"권한\"을 선택하고, \"저장 공간\" 권한을 활성화하세요.",
   "permissionsStorageSend": "{app_name}은 사진과 동영상을 전송하기 위해 저장공간 접근이 필요합니다.",
@@ -658,6 +700,7 @@
   "recoveryPasswordHidePermanentlyDescription1": "복구 비밀번호가 없으면 새로운 기기에서 계정을 불러올 수 없습니다.<br/><br/>계속하기 전에 안전하고 보안된 곳에 복구 비밀번호를 저장할 것을 강력히 권장합니다.",
   "recoveryPasswordHidePermanentlyDescription2": "정말 이 장치에서 복구 비밀번호를 영구적으로 숨기겠습니까? 이 작업은 되돌릴 수 없습니다.",
   "recoveryPasswordHideRecoveryPassword": "복구 비밀번호 숨기기",
+  "recoveryPasswordHideRecoveryPasswordDescription": "이 기기에서 복구 비밀번호를 영구적으로 숨깁니다.",
   "recoveryPasswordRestoreDescription": "계정을 로드하려면 복구 비밀번호를 입력하세요. 저장되지 않았다면, 앱 설정에서 찾을 수 있습니다.",
   "recoveryPasswordView": "비밀번호 보기",
   "recoveryPasswordWarningSendDescription": "이것은 당신의 복구 비밀번호입니다. 다른 사람에게 보내면 그들이 당신의 계정에 완전히 접근할 수 있게 됩니다.",
@@ -710,6 +753,7 @@
   "shareAccountIdDescription": "친구에게 계정 ID를 공유하고 {app_name} 에서 친구들과 대화하세요.",
   "shareAccountIdDescriptionCopied": "친구들이 자주 사용하는 곳에서 공유해 주세요 — 그러면 여기로 대화를 이동하십시오.",
   "shareExtensionDatabaseError": "데이터베이스를 열 때 문제가 발생했습니다. 앱을 재시작하고 다시 시도해주세요.",
+  "shareToSession": "{app_name}에 공유",
   "show": "보기",
   "showAll": "모두 보기",
   "showLess": "간략히 보기",
@@ -721,12 +765,14 @@
   "theError": "에러",
   "tryAgain": "다시 시도",
   "typingIndicators": "입력 지시자 깜박임",
+  "typingIndicatorsDescription": "입력 중 아이콘 보고 공유.",
   "undo": "실행 취소",
   "unknown": "알 수 없음",
   "updateApp": "앱 업데이트",
   "updateDownloaded": "업데이트 설치 완료, 클릭하여 재시작",
   "updateDownloading": "업데이트 다운로드 중: {percent_loader}%",
   "updateError": "업데이트 불가능",
+  "updateErrorDescription": "{app_name} 업데이트에 실패했습니다. {session_download_url}에서 새 버전을 수동으로 설치한 후, 이 문제를 알려주시기 위해 고객 지원 센터에 연락해 주세요.",
   "updateNewVersion": "새 버전의 {app_name}이 사용 가능합니다. 눌러서 업데이트 하세요.",
   "updateNewVersionDescription": "새 버전의 {app_name}이 사용 가능합니다.",
   "updateReleaseNotes": "패치 노트 보기",
@@ -736,6 +782,7 @@
   "urlCopy": "URL 복사",
   "urlOpen": "URL 열기",
   "urlOpenBrowser": "이것은 당신의 브라우저에서 열립니다.",
+  "urlOpenDescription": "이 URL을 브라우저에서 여시겠습니까?<br/><br/><b>{url}</b>",
   "useFastMode": "Fast 모드 사용하기",
   "video": "동영상",
   "videoErrorPlay": "동영상을 재생할 수 없습니다.",
