--- a/_locales/pt-PT/messages.json
+++ b/_locales/pt-PT/messages.json
@@ -142,6 +142,7 @@
   "callsInProgress": "Chamada em curso",
   "callsIncoming": "Chamada recebida de {name}",
   "callsIncomingUnknown": "A receber chamada",
+  "callsMicrophonePermissionsRequired": "Você perdeu uma chamada de <b>{name}</b> porque você não concedeu acesso ao <b>microfone</b>.",
   "callsMissed": "Chamada perdida",
   "callsMissedCallFrom": "Chamada perdida de {name}",
   "callsNotificationsRequired": "Chamadas de Voz e Vídeo exigem que as notificações estejam habilitadas nas configurações do sistema do seu dispositivo.",
@@ -198,6 +199,7 @@
   "communityInvitation": "Convite para a Comunidade",
   "communityJoin": "Junte-se à comunidade",
   "communityJoinDescription": "Tem certeza que quer entrar {community_name}?",
+  "communityJoinError": "Não foi possível participar na comunidade",
   "communityJoinOfficial": "Ou junte-se a um destes...",
   "communityJoined": "Entrou na comunidade",
   "communityJoinedAlready": "Você já está associado a esta community.",
@@ -391,6 +393,7 @@
   "groupInviteSending": "Enviando convite",
   "groupInviteSent": "Convite enviado",
   "groupInviteSuccessful": "Convite para grupo enviado com sucesso",
+  "groupInviteVersion": "Os utilizadores devem ter a versão mais recente para receber convites",
   "groupInviteYou": "<b>Você</b> foi convidado a juntar-se ao grupo.",
   "groupInviteYouAndMoreNew": "<b>Você</b> e <b>{count} outros</b> foram convidados a juntar-se ao grupo.",
   "groupInviteYouAndOtherNew": "<b>Você</b> e <b>{other_name}</b> foram convidados a juntar-se ao grupo.",
